fixed too much goddam bullshit

--- a/soil-fertilizer/can-bad-soil-be-fixed-or-replaced.html
+++ b/soil-fertilizer/can-bad-soil-be-fixed-or-replaced.html
@@ -58,35 +58,35 @@
 
   <h2>Bad soil fails because basic movement breaks down</h2>
   <p>Soil stops working when air can’t move, water can’t drain or soak evenly, and roots can’t spread. Those failures usually happen after compaction, grading, or years of stress.</p>
-  <p>You notice this as grass that stays thin, areas that stay soggy or dusty, and spots that never respond no matter what you apply.</p>
+  <p>This shows up as persistently thin grass, areas that stay soggy or powder-dry, and patches that never respond regardless of what is applied.</p>
 
   <h2>Some soil problems are shallow and repairable</h2>
   <p>When the damage is limited to the top few inches, water and air can be restored over time. As structure improves, roots start growing deeper instead of staying near the surface.</p>
-  <p>You notice this as fewer puddles, less runoff, and grass that survives heat better after corrections.</p>
+  <p>Recovery is reflected by fewer puddles, reduced runoff, and turf that tolerates heat better after corrective work.</p>
 
   <h2>Climate decides how fast soil can recover</h2>
   <p>Heat, drought, freezing, and heavy rain all slow soil recovery by stressing the zone where roots and structure rebuild. In harsh climates, soil takes longer to respond to the same fixes.</p>
-  <p>You notice this when repairs that worked before stop working as conditions described in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a> become more extreme.</p>
+  <p>This becomes apparent when past solutions lose effectiveness as conditions outlined in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a> intensify.</p>
 
   <h2>Some soil loses nutrients faster than it can hold them</h2>
   <p>Loose or damaged soil lets water move too freely, carrying nutrients downward or sideways before roots can absorb them. That creates a cycle where feeding doesn’t stick.</p>
-  <p>You notice this as grass that looks hungry shortly after fertilizing, the same process explained in <a href="/soil-fertilizer/why-nutrients-wash-out-of-soil.html">why nutrients wash out of soil</a>.</p>
+  <p>The result is grass that fades shortly after fertilizing, following the same pattern described in <a href="/soil-fertilizer/why-nutrients-wash-out-of-soil.html">why nutrients wash out of soil</a>.</p>
 
   <h2>Constant wetness is a structural failure</h2>
   <p>Soil that stays wet too long lacks open pathways for drainage. Oxygen drops, roots suffocate, and recovery stalls.</p>
-  <p>You notice this as yellowing grass, soft ground, and moss or algae appearing, which matches the failure described in <a href="/soil-fertilizer/why-soil-stays-wet-too-long.html">why soil stays wet too long</a>.</p>
+  <p>Symptoms include yellowing turf, soft footing, and the spread of moss or algae, consistent with the breakdown explained in <a href="/soil-fertilizer/why-soil-stays-wet-too-long.html">why soil stays wet too long</a>.</p>
 
   <h2>Watering can either help or make replacement inevitable</h2>
   <p>Heavy or frequent watering pushes nutrients out of weak soil and keeps oxygen from returning. That accelerates decline instead of fixing it.</p>
-  <p>You notice this as worsening color and thinning after irrigation changes tied to <a href="/soil-fertilizer/how-watering-affects-nutrient-loss.html">how watering affects nutrient loss</a>.</p>
+  <p>This leads to worsening color and thinning after irrigation changes connected to <a href="/soil-fertilizer/how-watering-affects-nutrient-loss.html">how watering affects nutrient loss</a>.</p>
 
   <h2>Replacement is needed when soil cannot rebuild</h2>
   <p>If soil stays sealed, waterlogged, or stripped of topsoil through the entire root zone, fixing the surface won’t restore function. Roots simply have nowhere to go.</p>
-  <p>You notice this when grass fails year after year in the same spots despite corrected watering and feeding.</p>
+  <p>The failure becomes clear when the same areas decline year after year despite corrected watering and feeding.</p>
 
   <h2>Fixing soil is about restoring movement, not adding products</h2>
   <p>Soil can be fixed when air, water, and roots are allowed to move again. It must be replaced when those paths no longer exist.</p>
-  <p>The lawn tells you which situation you’re dealing with by how it responds over time.</p>
+  <p>The lawn itself reveals which condition applies through its response over time.</p>
 </main>
 
 <footer class="site-footer">
