--- a/soil-fertilizer/common-lawn-soil-myths.html
+++ b/soil-fertilizer/common-lawn-soil-myths.html
@@ -58,35 +58,35 @@
 
   <h2>Myth: Grass problems are caused by nutrients</h2>
   <p>Nutrients only matter if roots can access them. Soil structure controls oxygen, water movement, and root depth first.</p>
-  <p>You notice this myth when feeding improves color briefly but density and strength never return.</p>
+  <p>This myth shows up when feeding boosts color briefly but density and strength never return.</p>
 
   <h2>Myth: More care fixes bad soil</h2>
   <p>Extra watering, fertilizing, or mowing can’t repair collapsed pore space or compaction. More input often speeds decline.</p>
-  <p>You notice worsening results even though effort increases.</p>
+  <p>Worsening results can appear even as effort increases.</p>
 
   <h2>Myth: All soil improves with time</h2>
   <p>Soil only improves when roots, microbes, and organic inputs rebuild structure. Without that, pressure and weather degrade it.</p>
-  <p>You notice the opposite effect when newer lawns struggle while areas with long-established turf resemble the patterns explained in <a href="/soil-fertilizer/why-older-lawns-have-better-soil.html">why older lawns have better soil</a>.</p>
+  <p>The opposite pattern is visible when newer lawns struggle while long-established turf resembles the behaviors explained in <a href="/soil-fertilizer/why-older-lawns-have-better-soil.html">why older lawns have better soil</a>.</p>
 
   <h2>Myth: Surface damage is the main problem</h2>
   <p>Scalping, thinning, and discoloration are results, not causes. The real failure usually sits below the surface.</p>
-  <p>You notice surface fixes failing repeatedly because roots never recover.</p>
+  <p>Repeated surface fixes often fail because root recovery never happens.</p>
 
   <h2>Myth: Edging and cleanup help soil</h2>
   <p>Frequent edging and aggressive cleanup expose soil edges, dry the root zone, and remove stabilizing material.</p>
-  <p>You notice thinning borders and declining turf tied to the same effects described in <a href="/tools-safety/why-over-edging-harms-lawns.html">why over-edging harms lawns</a>.</p>
+  <p>Thinning borders and declining turf are common outcomes, consistent with the effects described in <a href="/tools-safety/why-over-edging-harms-lawns.html">why over-edging harms lawns</a>.</p>
 
   <h2>Myth: Compaction only affects heavy-use areas</h2>
   <p>Compaction spreads through soil via moisture cycles and pressure. Roots hit resistance even where traffic looks minimal.</p>
-  <p>You notice shallow rooting and stress that match the behaviors described in <a href="/soil-fertilizer/how-compaction-affects-roots.html">how compaction affects roots</a>.</p>
+  <p>Shallow rooting and stress often follow the same behaviors described in <a href="/soil-fertilizer/how-compaction-affects-roots.html">how compaction affects roots</a>.</p>
 
   <h2>Myth: Good-looking soil is healthy soil</h2>
   <p>Dark color or loose surface texture doesn’t guarantee air movement or depth below.</p>
-  <p>You notice soil that looks fine but stops a probe inches down.</p>
+  <p>A common outcome is soil that looks fine but stops a probe inches down.</p>
 
   <h2>Myth: Soil problems are easy to identify</h2>
   <p>Most soil failures develop slowly and hide beneath temporary surface growth.</p>
-  <p>You notice issues only after grass stops recovering.</p>
+  <p>Problems often become obvious only after grass stops recovering.</p>
 
   <h2>Soil myths persist because symptoms distract</h2>
   <p>Surface issues are easier to see than underground causes.</p>
