--- a/soil-fertilizer/how-chemicals-affect-soil-life.html
+++ b/soil-fertilizer/how-chemicals-affect-soil-life.html
@@ -58,35 +58,35 @@
 
   <h2>Chemicals change the underground “helper layer” first</h2>
   <p>Soil stays workable because a living layer underground keeps crumbs and tiny channels from collapsing. When chemicals wash into the soil, they can disrupt that living layer by reducing food sources and changing moisture patterns around roots.</p>
-  <p>You usually notice this as soil that starts feeling harder, crustier, and less forgiving even though you haven’t changed how you care for the lawn.</p>
+  <p>The early signal is soil that feels harder, crustier, and less forgiving despite no change in lawn care habits.</p>
 
   <h2>When soil life drops, water stops behaving normally</h2>
   <p>Living soil keeps small pathways open so water can soak in evenly. When those pathways collapse, water either runs off the surface or pools in place.</p>
-  <p>You notice this as puddles that weren’t there before, dry spots that show up faster, or sprinklers that suddenly seem “wrong” even though nothing changed.</p>
+  <p>This shows up as new puddling, dry spots forming faster than before, or irrigation suddenly appearing ineffective even though settings stayed the same.</p>
 
   <h2>When oxygen flow drops, roots get shallow and weak</h2>
   <p>Roots need breathable soil. When soil tightens up, roots stay near the surface where there’s more air, and they stop exploring deeper.</p>
-  <p>You notice this as grass that looks okay until heat hits, then collapses fast, pulls up easily, or dies in patches instead of thinning evenly.</p>
+  <p>The result is turf that holds together until heat arrives, then fails quickly, pulls up with little resistance, or dies in patches instead of thinning evenly.</p>
 
   <h2>Fast growth without soil recovery creates a boom-and-bust look</h2>
   <p>Some products push quick top growth or quick weed control, but they don’t rebuild the soil system underneath. That creates a pattern where the lawn responds briefly, then fades again because the base never improved.</p>
-  <p>You notice this as a short green-up followed by the same weak areas returning, usually in the same spots, on the same schedule.</p>
+  <p>This pattern appears as short-lived green-ups followed by the same weak areas returning on a predictable schedule, often in identical locations.</p>
 
   <h2>Climate stress makes the same chemical use hit harder</h2>
   <p>Heat and drought slow recovery underground by drying out the zone where soil life lives. When recovery is already slow, anything that adds stress has a bigger impact.</p>
-  <p>You notice this as “it used to work, now it doesn’t,” especially after hot summers, cold snaps, or long dry spells described in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a>.</p>
+  <p>The shift is most obvious when approaches that once worked stop delivering results after hot summers, cold snaps, or prolonged dry periods described in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a>.</p>
 
   <h2>Wrong products get used when the problem is misunderstood</h2>
   <p>If the real problem is soil structure, using products meant for plant growth or pest control doesn’t address the mechanism. The soil keeps getting worse because nothing is fixing how it holds air and water.</p>
-  <p>This mistake usually comes from not knowing <a href="/soil-fertilizer/what-soil-amendments-are.html">what soil amendments are</a> and when they matter.</p>
+  <p>This misstep usually traces back to confusion about <a href="/soil-fertilizer/what-soil-amendments-are.html">what soil amendments are</a> and when they matter.</p>
 
   <h2>Fertilizer and amendments solve different failures</h2>
   <p>Fertilizer changes how fast grass grows. Amendments change how soil behaves. When soil behavior is the issue, fertilizer can make the lawn look better briefly while the soil keeps degrading.</p>
-  <p>You notice this as grass that stays dependent on constant feeding, which is the practical <a href="/soil-fertilizer/difference-between-amendments-and-fertilizer.html">difference between amendments and fertilizer</a>.</p>
+  <p>The outcome is grass that requires constant feeding to maintain appearance, illustrating the practical <a href="/soil-fertilizer/difference-between-amendments-and-fertilizer.html">difference between amendments and fertilizer</a>.</p>
 
   <h2>Soil damage shows up as problems that repeat and spread</h2>
   <p>When soil life can’t rebuild after stress, every season leaves the soil slightly worse. The lawn becomes less stable because the ground underneath is losing function.</p>
-  <p>You notice this as the lawn needing more inputs for less result, bare spots that slowly expand, and the same failures showing up year after year as described in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
+  <p>This progression is marked by rising input needs for diminishing results, expanding bare areas, and the same failures reappearing year after year as outlined in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
 </main>
 
 <footer class="site-footer">
