--- a/soil-fertilizer/how-climate-affects-lawn-soil.html
+++ b/soil-fertilizer/how-climate-affects-lawn-soil.html
@@ -58,39 +58,39 @@
 
   <h2>Climate acts on soil before grass feels it</h2>
   <p>Temperature and moisture shifts change how soil expands, contracts, and moves air and water. Grass reacts later, after roots are already stressed.</p>
-  <p>You notice lawn problems appearing suddenly even though care hasn’t changed.</p>
+  <p>This is why lawn problems can appear abruptly even when maintenance practices remain consistent.</p>
 
   <h2>Heat tightens soil and drives oxygen loss</h2>
   <p>High temperatures increase evaporation at the surface while deeper layers stay dense. Pore space collapses as soil dries unevenly.</p>
-  <p>You notice hard ground, shallow rooting, and heat stress that shows up faster each summer.</p>
+  <p>The result is harder ground, shallow root systems, and heat stress that shows up earlier and intensifies each summer.</p>
 
   <h2>Cold slows soil recovery, not just growth</h2>
   <p>In cold conditions, biological activity drops and soil stops repairing itself. Compaction and damage pause in place instead of healing.</p>
-  <p>You notice weak areas returning in spring even though the lawn looked fine during winter.</p>
+  <p>That delay becomes evident when weak zones reappear in spring even though winter growth looked acceptable.</p>
 
   <h2>Heavy rain rearranges soil structure</h2>
   <p>Intense rainfall breaks soil aggregates and drives fine particles downward. Air space disappears as water pushes particles together.</p>
-  <p>You notice puddling, sealing, or runoff forming after storms that never caused issues before.</p>
+  <p>After storms, new puddling, surface sealing, or runoff often develops in areas that previously drained without issue.</p>
 
   <h2>Drought changes how soil holds water</h2>
   <p>Repeated drying shrinks soil and breaks contact between roots and moisture. When rain returns, water moves past roots instead of rehydrating them.</p>
-  <p>You notice lawns staying stressed even after watering resumes.</p>
+  <p>Stress can persist even after irrigation resumes because moisture is no longer retained where roots can access it.</p>
 
   <h2>Climate exposes weak soil faster</h2>
   <p>Healthy soil buffers temperature and moisture swings. Weak soil amplifies them.</p>
-  <p>You notice outcomes that match the behavior explained in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a>, not random grass failure.</p>
+  <p>The outcomes align with the soil behavior described in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a>, rather than random grass failure.</p>
 
   <h2>Fertilizer can’t override climate stress</h2>
   <p>Nutrients don’t fix collapsed structure or oxygen loss. In stressed soil, fertilizer often intensifies damage.</p>
-  <p>You notice the same pattern described in <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>, even with proper timing.</p>
+  <p>This pattern mirrors the failures explained in <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>, even when timing appears correct.</p>
 
   <h2>Climate controls fertilizer behavior through soil</h2>
   <p>Heat and rain change how nutrients move, concentrate, or wash away. Soil decides whether fertilizer stays usable or becomes harmful.</p>
-  <p>You notice inconsistent response that lines up with <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>, not product failure.</p>
+  <p>Uneven response follows the same principles outlined in <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>, not product inconsistency.</p>
 
   <h2>Climate doesn’t damage lawns directly</h2>
   <p>Climate damages soil first. Grass fails because its foundation changes underneath it.</p>
-  <p>Understanding soil response to climate explains why the same lawn can succeed one year and struggle the next.</p>
+  <p>Recognizing how soil responds to climate explains why a lawn can perform well one year and struggle the next under similar care.</p>
 </main>
 
 <footer class="site-footer">
