--- a/soil-fertilizer/how-erosion-affects-lawn-soil.html
+++ b/soil-fertilizer/how-erosion-affects-lawn-soil.html
@@ -58,39 +58,39 @@
 
   <h2>Erosion removes the part of soil grass depends on most</h2>
   <p>Erosion strips away the top layer of soil first. That layer holds the most air space, organic material, and active roots.</p>
-  <p>You notice this as thinning turf, exposed roots, and bare patches appearing after heavy rain or irrigation.</p>
+  <p>The immediate result is thinning turf, exposed roots, and bare patches appearing after heavy rain or irrigation.</p>
 
   <h2>Water accelerates erosion when soil can’t absorb it</h2>
   <p>When water can’t soak in fast enough, it flows across the surface. That moving water carries fine soil particles downhill.</p>
-  <p>You notice streaks, channels, or sediment collecting at the bottom of slopes.</p>
+  <p>This process leaves behind streaks, channels, and sediment collecting at the bottom of slopes.</p>
 
   <h2>Roots lose anchoring as soil disappears</h2>
   <p>As soil washes away, roots lose contact with surrounding material. They can’t anchor or pull in water evenly.</p>
-  <p>You notice grass pulling up easily and dying in solid sections instead of thinning gradually.</p>
+  <p>Grass begins pulling up easily and dying in solid sections rather than thinning gradually.</p>
 
   <h2>Eroded soil concentrates fertilizer near the surface</h2>
   <p>With less soil to buffer nutrients, fertilizer stays close to the roots and leaf bases. Salts build up faster.</p>
-  <p>You notice scorched edges or sudden dieback tied to <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
+  <p>The visible outcome is scorched edges or sudden dieback consistent with <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
 
   <h2>Adding more fertilizer makes erosion damage worse</h2>
   <p>Extra fertilizer increases salt concentration in already shallow soil. Roots stressed by erosion can’t regulate uptake.</p>
-  <p>You notice faster decline instead of recovery, the same trap described in <a href="/soil-fertilizer/why-more-fertilizer-isnt-better.html">why more fertilizer isn’t better</a>.</p>
+  <p>Instead of recovery, decline accelerates, matching the pattern described in <a href="/soil-fertilizer/why-more-fertilizer-isnt-better.html">why more fertilizer isn’t better</a>.</p>
 
   <h2>Erosion breaks the soil system itself</h2>
   <p>Soil only works when layers support each other. Removing the surface layer breaks water movement, oxygen flow, and root regeneration.</p>
-  <p>You notice that normal care stops working because the foundation described in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a> is gone.</p>
+  <p>At that point, routine care stops working because the foundation described in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a> no longer exists.</p>
 
   <h2>Repeated erosion creates permanent weak zones</h2>
   <p>Each erosion event removes a little more soil. Over time, the root zone becomes too shallow to support grass.</p>
-  <p>You notice the same spots failing faster every season, even during mild weather.</p>
+  <p>Failure returns faster each season in the same locations, even during otherwise mild weather.</p>
 
   <h2>Erosion damage shows up after the water is gone</h2>
   <p>The soil loss happens during rain, but the lawn fails later when roots can’t keep up with demand.</p>
-  <p>The visible decline is delayed, but the cause was already set in motion.</p>
+  <p>Visible decline is delayed, but the underlying damage was already locked in.</p>
 
   <h2>Stopping erosion is about restoring absorption</h2>
   <p>Erosion affects lawn soil because water moves across it instead of into it.</p>
-  <p>When soil absorbs water again, erosion slows and the lawn regains stability.</p>
+  <p>Once soil begins absorbing water again, erosion slows and the lawn regains stability.</p>
 </main>
 
 <footer class="site-footer">
