--- a/soil-fertilizer/how-lawn-age-affects-soil-health.html
+++ b/soil-fertilizer/how-lawn-age-affects-soil-health.html
@@ -58,38 +58,38 @@
 
   <h2>Young lawns start with unstable soil</h2>
   <p>New lawns usually sit on disturbed or recently graded soil. That soil hasn’t had time to settle into a stable structure or rebuild biological activity.</p>
-  <p>You notice this as fast drying, uneven growth, and areas that sink or harden within the first few seasons.</p>
+  <p>Early signs include rapid drying, uneven growth, and areas that sink or harden within the first few seasons.</p>
 
   <h2>Roots slowly reinforce soil over time</h2>
   <p>As grass matures, repeated root growth opens channels, adds organic material, and strengthens soil structure.</p>
-  <p>You notice older lawns resisting stress better and holding moisture longer when conditions are right.</p>
+  <p>With time, established lawns tend to resist stress better and retain moisture longer when conditions allow.</p>
 
   <h2>Biology increases with lawn maturity</h2>
   <p>Microorganisms build slowly as roots feed them. This biological layer helps soil hold together and cycle nutrients.</p>
-  <p>You notice improvements tied to the same processes explained in <a href="/soil-fertilizer/how-microorganisms-affect-soil-health.html">how microorganisms affect soil health</a>.</p>
+  <p>Those gains mirror the processes described in <a href="/soil-fertilizer/how-microorganisms-affect-soil-health.html">how microorganisms affect soil health</a>.</p>
 
   <h2>Compaction accumulates as lawns age</h2>
   <p>Traffic, mowing, and seasonal pressure slowly compress soil. Without active recovery, older lawns can become tight below the surface.</p>
-  <p>You notice shallow rooting or firmness returning even though the lawn once performed well.</p>
+  <p>That compression shows up as shallow rooting or renewed firmness even where performance was once strong.</p>
 
   <h2>Weed pressure reflects soil condition over time</h2>
   <p>As soil weakens, gaps form that weeds exploit faster than grass.</p>
-  <p>You notice increasing weed presence that follows the patterns described in <a href="/soil-fertilizer/how-soil-health-affects-weed-growth.html">how soil health affects weed growth</a>.</p>
+  <p>Rising weed presence often follows the same progression outlined in <a href="/soil-fertilizer/how-soil-health-affects-weed-growth.html">how soil health affects weed growth</a>.</p>
 
   <h2>Soil decline is gradual, not sudden</h2>
   <p>Soil rarely fails all at once. Small losses in structure and biology add up year by year.</p>
-  <p>You notice lawns looking fine until stress exposes damage that has been building quietly.</p>
+  <p>The lawn may appear healthy until stress exposes damage that has been accumulating quietly.</p>
 
   <h2>Seasonal cover can hide aging soil problems</h2>
-  <p>Cool weather slows growth and water use, masking soil failure temporarily.</p>
-  <p>You notice damage reappearing in spring or summer, similar to what happens when <a href="/weeds-pests/can-winter-hide-lawn-damage.html">winter hides lawn damage</a>.</p>
+  <p>Cool weather slows growth and water use, temporarily masking soil failure.</p>
+  <p>Problems often resurface in spring or summer, similar to what happens when <a href="/weeds-pests/can-winter-hide-lawn-damage.html">winter hides lawn damage</a>.</p>
 
   <h2>Maintenance determines whether age helps or hurts</h2>
-  <p>Lawns can improve with age when roots, biology, and structure are protected. Without that, age amplifies decline.</p>
-  <p>You notice the long-term trend lining up with <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
+  <p>Lawns can improve with age when roots, biology, and structure are protected. Without that support, age amplifies decline.</p>
+  <p>The long-term direction typically matches the patterns described in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
 
   <h2>Lawn age changes soil in both directions</h2>
-  <p>Time alone doesn’t improve soil. What matters is whether roots and biology are allowed to rebuild faster than pressure breaks them down.</p>
+  <p>Time alone doesn’t improve soil. What matters is whether roots and biology rebuild faster than pressure breaks them down.</p>
   <p>Older lawns succeed when soil recovery keeps pace with use.</p>
 </main>
 
