--- a/soil-fertilizer/how-long-soil-improvements-last.html
+++ b/soil-fertilizer/how-long-soil-improvements-last.html
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Long Soil Improvements Last</h1>
 
-  <h2>Soil improvements fade when structure isn’t protected</h2>
-  <p>Most soil improvements work by opening air space or improving water movement. Those gains remain only if pressure and moisture don’t collapse them again.</p>
-  <p>You notice improvement lasting a season or two before old problem spots return.</p>
+  <h2>Soil gains fade when structure isn’t maintained</h2>
+  <p>Most soil work functions by reopening air space or improving water movement. Those gains persist only when pressure, moisture, and use don’t collapse that structure again.</p>
+  <p>In many lawns, positive results hold for a season or two before familiar weak areas begin to resurface.</p>
 
-  <h2>Water and traffic erase gains faster than time</h2>
-  <p>Heavy rain, overwatering, and repeated foot traffic push soil particles back together. Structure closes before roots can rebuild it.</p>
-  <p>You notice puddling, hard ground, or shallow roots coming back even though nothing changed above ground.</p>
+  <h2>Water and traffic reverse progress faster than time</h2>
+  <p>Heavy rain, excessive irrigation, and repeated foot traffic press soil particles back together. If roots can’t reinforce the space quickly enough, structure closes again.</p>
+  <p>The return of puddling, surface hardness, or shallow rooting can occur even when visible maintenance practices remain unchanged.</p>
 
-  <h2>Roots are what make improvements stick</h2>
-  <p>Living roots hold pore space open and reinforce soil structure. Without dense root growth, soil settles back into its previous state.</p>
-  <p>You notice lasting improvement only where grass thickens instead of just greening up.</p>
+  <h2>Roots determine whether changes last</h2>
+  <p>Living roots help hold pore space open and stabilize soil. Where root density stays low, soil tends to settle back toward its prior condition.</p>
+  <p>Durable change shows up where turf thickens and roots expand, not just where color briefly improves.</p>
 
-  <h2>Fertilizer shortens improvement life in weak soil</h2>
-  <p>In soil that hasn’t stabilized, fertilizer increases salt concentration and root stress. That accelerates collapse instead of recovery.</p>
-  <p>You notice burn or decline tied to the same mechanism described in <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
+  <h2>Fertilizer can shorten durability in unstable soil</h2>
+  <p>In soil that hasn’t fully stabilized, fertilizer can increase salt concentration or root stress under certain conditions. When that happens, structural recovery may slow or reverse.</p>
+  <p>Decline linked to this interaction follows the same underlying process discussed in <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
 
-  <h2>Short-lived color hides soil regression</h2>
-  <p>Leaves respond quickly to nutrients, masking what’s happening below. Soil can be tightening again while the lawn still looks acceptable.</p>
-  <p>You notice fading, thinning, or weakness later, often mistaken for the issues described in <a href="/soil-fertilizer/signs-a-lawn-is-underfertilized.html">signs a lawn is underfertilized</a>.</p>
+  <h2>Short-lived color can mask structural regression</h2>
+  <p>Leaves respond quickly to nutrients, which can temporarily hide changes occurring below the surface. Soil may already be tightening again while the lawn still appears acceptable.</p>
+  <p>Later thinning or fading is often mistaken for simple nutrient shortage, similar to the symptoms outlined in <a href="/soil-fertilizer/signs-a-lawn-is-underfertilized.html">signs a lawn is underfertilized</a>.</p>
 
-  <h2>Improvement length depends on soil depth fixed</h2>
-  <p>Surface improvements last longer when deeper layers are already functional. When the problem layer remains untouched, collapse returns faster.</p>
-  <p>You notice shallow fixes failing sooner than deeper ones.</p>
+  <h2>Longevity depends on how deep the repair went</h2>
+  <p>Surface-level work tends to hold longer when deeper layers are already functioning well. When the main problem zone remains untouched, collapse usually returns sooner.</p>
+  <p>Shallow corrections commonly fail earlier than changes that reach deeper into the root zone.</p>
 
-  <h2>Seasonal stress tests soil improvements</h2>
-  <p>Heat, cold, and wet periods reveal whether structure held or collapsed. Weak improvements fail during stress first.</p>
-  <p>You notice setbacks lining up with weather shifts rather than calendar time.</p>
+  <h2>Seasonal stress reveals whether changes held</h2>
+  <p>Heat, cold, and prolonged wet periods act as stress tests for soil structure. Areas that weren’t fully supported tend to fail first during these extremes.</p>
+  <p>Setbacks typically line up with weather shifts rather than simple calendar time.</p>
 
-  <h2>Soil improvement isn’t permanent by default</h2>
-  <p>Soil constantly moves toward compaction unless roots and organic input counter it.</p>
-  <p>Improvements last as long as conditions allow soil to keep rebuilding itself.</p>
+  <h2>Soil work is not permanent by default</h2>
+  <p>Soil naturally trends toward compaction unless roots, biology, and organic input counter that pressure.</p>
+  <p>Positive changes last only while conditions allow the soil to keep rebuilding itself.</p>
 </main>
 
 <footer class="site-footer">
