--- a/soil-fertilizer/how-seasonal-changes-affect-soil.html
+++ b/soil-fertilizer/how-seasonal-changes-affect-soil.html
@@ -57,36 +57,36 @@
   <h1>How Seasonal Changes Affect Soil</h1>
 
   <h2>Soil expands and contracts as conditions change</h2>
-  <p>Temperature and moisture cause soil particles to swell and shrink. Wet periods make soil heavier and tighter, while dry periods pull particles apart and create cracks.</p>
-  <p>You notice this as soil that feels soft and spongy during wet seasons, then turns hard and brittle during dry ones.</p>
+  <p>Shifts in temperature and moisture cause soil particles to swell or shrink. Prolonged wet periods can make soil heavier and tighter, while extended dry periods tend to pull particles apart and open surface cracks.</p>
+  <p>This shows up as ground that feels soft and compressible during wetter seasons, then turns firm or brittle as dry conditions set in.</p>
 
   <h2>Spring moisture exposes weak structure</h2>
-  <p>As snow melts or rain increases, water fills soil spaces. If structure is weak, those spaces collapse and oxygen gets pushed out.</p>
-  <p>You notice this as soggy lawns, slow green-up, and footprints that linger longer than they should.</p>
+  <p>As rainfall increases or snowmelt saturates the ground, water fills existing pore space. Where structure is already fragile, those spaces can collapse and reduce oxygen availability.</p>
+  <p>The result is often soggy turf, delayed green-up, and footprints that linger longer than expected.</p>
 
   <h2>Summer heat magnifies soil limits</h2>
-  <p>High temperatures dry the soil surface and increase water demand. Shallow or compacted soil can’t store enough moisture or air for roots.</p>
-  <p>You notice this as grass that wilts quickly, burns in patches, and needs frequent watering just to stay alive.</p>
+  <p>High temperatures dry surface layers and raise water demand from roots. Shallow or compacted soil may struggle to store enough moisture or air to meet that demand.</p>
+  <p>Stress becomes visible as grass that wilts quickly, burns unevenly, or requires frequent watering just to hold on.</p>
 
   <h2>Fall cooling slows soil recovery</h2>
-  <p>As temperatures drop, biological activity and root growth slow down. Any compaction or damage left from summer stress remains in place.</p>
-  <p>You notice thin areas failing to fill in before winter, locking problems in for the next season.</p>
+  <p>As temperatures drop, biological activity and root expansion taper off. Any compaction or damage carried over from summer may remain largely unchanged.</p>
+  <p>Thin areas often fail to fill in before winter, allowing existing problems to persist into the next season.</p>
 
-  <h2>Freeze cycles physically break soil apart</h2>
-  <p>When water inside soil freezes, it expands. That expansion shifts particles and lifts the surface. When thawing occurs, soil settles unevenly.</p>
-  <p>You notice this as heaving, uneven ground, and grass that loosens or lifts, which is the same process behind <a href="/soil-fertilizer/why-frozen-soil-damages-lawns.html">why frozen soil damages lawns</a>.</p>
+  <h2>Freeze cycles physically shift soil</h2>
+  <p>When water held in soil freezes, it expands and pushes particles upward. During thawing, the surface settles unevenly as that pressure releases.</p>
+  <p>This movement shows up as heaving, uneven ground, or turf that loosens at the surface, a process explained further in <a href="/soil-fertilizer/why-frozen-soil-damages-lawns.html">why frozen soil damages lawns</a>.</p>
 
-  <h2>Seasonal damage gets mistaken for care mistakes</h2>
-  <p>Because these changes happen gradually, seasonal soil behavior is often blamed on watering, mowing, or fertilizer timing.</p>
-  <p>You notice people chasing fixes that don’t stick because the real cause is seasonal movement, not the myths described in <a href="/soil-fertilizer/common-lawn-soil-myths.html">common lawn soil myths</a>.</p>
+  <h2>Seasonal damage is often misread as care errors</h2>
+  <p>Because these changes unfold gradually, seasonal soil behavior is frequently blamed on watering habits, mowing height, or fertilizer timing.</p>
+  <p>That confusion leads to repeated fixes that don’t hold, a pattern that aligns with the misunderstandings outlined in <a href="/soil-fertilizer/common-lawn-soil-myths.html">common lawn soil myths</a>.</p>
 
-  <h2>Soil remembers stress from previous seasons</h2>
-  <p>Soil does not reset each year. Compaction, settling, and structure loss carry forward.</p>
-  <p>You notice the same weak spots showing up earlier each season as the soil slowly loses resilience.</p>
+  <h2>Soil carries stress forward from prior seasons</h2>
+  <p>Soil does not reset each year. Compaction, settling, and structural loss can accumulate over time.</p>
+  <p>As resilience fades, the same weak areas often reappear earlier each season.</p>
 
-  <h2>Seasonal changes don’t cause problems, they reveal them</h2>
-  <p>Weather cycles don’t break healthy soil. They expose soil that already can’t handle movement and pressure.</p>
-  <p>When soil is stable, seasonal changes pass without lasting damage.</p>
+  <h2>Seasonal changes reveal problems rather than create them</h2>
+  <p>Weather cycles rarely damage well-structured soil on their own. Instead, they tend to expose soil that already struggles with movement and pressure.</p>
+  <p>When structure is stable, seasonal shifts pass with little lasting impact.</p>
 </main>
 
 <footer class="site-footer">
