--- a/soil-fertilizer/how-soil-health-affects-disease.html
+++ b/soil-fertilizer/how-soil-health-affects-disease.html
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Soil Health Affects Disease</h1>
 
-  <h2>Disease pressure rises when roots are stressed</h2>
-  <p>Grass resists disease only when roots can breathe, absorb water evenly, and recover from damage. Poor soil restricts oxygen and root movement, weakening the plant before pathogens ever attack.</p>
-  <p>You notice disease showing up in the same thin or stressed areas instead of spreading evenly across healthy turf.</p>
+  <h2>Disease pressure rises when roots stay under stress</h2>
+  <p>Grass resists infection most effectively when roots can breathe, take up water evenly, and recover from minor damage. When soil restricts oxygen or limits root movement, plants weaken long before pathogens become visible.</p>
+  <p>Outbreaks tend to concentrate in the same thin or stressed areas rather than spreading uniformly across otherwise healthy turf.</p>
 
-  <h2>Wet soil creates the conditions disease needs</h2>
-  <p>When soil holds water too long, air spaces fill and roots suffocate. Fungal organisms thrive in those low-oxygen, constantly damp conditions.</p>
-  <p>You notice circular patches, greasy-looking grass, or slow dieback that lines up with areas described in <a href="/soil-fertilizer/why-soil-stays-wet-too-long.html">why soil stays wet too long</a>.</p>
+  <h2>Persistently wet soil favors disease activity</h2>
+  <p>Soil that holds water for extended periods loses air space, reducing oxygen around roots. Many fungal organisms take advantage of those low-oxygen, consistently damp conditions.</p>
+  <p>Symptoms such as circular patches, greasy-looking blades, or slow decline often align with areas affected by the drainage issues discussed in <a href="/soil-fertilizer/why-soil-stays-wet-too-long.html">why soil stays wet too long</a>.</p>
 
-  <h2>Soil balance controls how long leaves stay wet</h2>
-  <p>Healthy soil drains excess water and pulls moisture away from the surface. Poor soil keeps the surface damp longer after rain or irrigation.</p>
-  <p>You notice disease appearing after dew, rain, or evening watering because moisture lingers on stressed grass.</p>
+  <h2>Soil condition influences how long foliage stays wet</h2>
+  <p>Well-structured soil sheds excess moisture and draws water downward away from the surface. When structure breaks down, moisture lingers near leaves after rain or irrigation.</p>
+  <p>That extended leaf wetness helps explain why disease often follows dew, rainfall, or evening watering on already stressed turf.</p>
 
-  <h2>pH problems weaken grass defenses</h2>
-  <p>When soil pH drifts out of range, roots struggle to absorb nutrients needed for cell strength and repair. Grass becomes more vulnerable even without visible deficiency.</p>
-  <p>You notice disease coinciding with lime applications or imbalance issues tied to <a href="/soil-fertilizer/how-lime-affects-lawn-soil.html">how lime affects lawn soil</a>.</p>
+  <h2>pH imbalance can weaken natural defenses</h2>
+  <p>When soil pH drifts outside a functional range, roots may struggle to absorb nutrients tied to cell strength and repair. Even without obvious deficiency symptoms, grass can become more susceptible.</p>
+  <p>Disease pressure sometimes increases alongside lime use or pH correction issues connected to <a href="/soil-fertilizer/how-lime-affects-lawn-soil.html">how lime affects lawn soil</a>.</p>
 
-  <h2>Amendments reduce disease only when structure improves</h2>
-  <p>Soil amendments work by improving air and water movement, not by killing pathogens. If amendments don’t change structure, disease pressure stays the same.</p>
-  <p>You notice improvement only when soil behavior changes the way described in <a href="/soil-fertilizer/what-soil-amendments-are.html">what soil amendments are</a>.</p>
+  <h2>Soil treatments matter only if structure actually changes</h2>
+  <p>Amendments influence disease indirectly by improving air flow and water movement rather than suppressing pathogens themselves. When those physical changes don’t occur, disease pressure often remains unchanged.</p>
+  <p>Lasting improvement tends to follow the same structural shifts outlined in <a href="/soil-fertilizer/what-soil-amendments-are.html">what soil amendments are</a>.</p>
 
-  <h2>Low organic matter leaves soil unstable</h2>
-  <p>Organic material helps soil drain, resist compaction, and support root recovery. Without enough, soil swings between soggy and hard.</p>
-  <p>You notice repeated disease outbreaks in areas that never reach the balance described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
+  <h2>Low organic input leaves soil prone to swings</h2>
+  <p>Organic material supports drainage, resists compaction, and helps roots recover between stress cycles. Without enough of it, soil may alternate between saturated and hardened states.</p>
+  <p>Repeated disease flare-ups are common in areas that never reach the balance described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
 
-  <h2>Disease appears where soil recovery stalls</h2>
-  <p>Grass recovers from minor disease pressure when roots stay active. Poor soil prevents that rebound, letting disease spread or return.</p>
-  <p>You notice the same patches getting sick again even after fungicide treatments.</p>
+  <h2>Recurring disease reflects stalled recovery</h2>
+  <p>Grass can often rebound from low-level disease pressure when roots stay active. When soil prevents that recovery, infection is more likely to linger or return.</p>
+  <p>This pattern becomes clear when the same patches relapse despite repeated fungicide use.</p>
 
-  <h2>Disease is a symptom of soil failure</h2>
-  <p>Pathogens are always present. They only dominate when soil stops supporting grass properly.</p>
-  <p>Fixing soil health reduces disease pressure because the lawn stops being an easy target.</p>
+  <h2>Disease points back to soil limitations</h2>
+  <p>Pathogens are typically present at low levels in most lawns. They gain ground when soil conditions no longer support healthy grass growth.</p>
+  <p>Improving soil function reduces disease pressure by removing the advantage pathogens rely on.</p>
 </main>
 
 <footer class="site-footer">
