--- a/soil-fertilizer/how-soil-health-affects-weed-growth.html
+++ b/soil-fertilizer/how-soil-health-affects-weed-growth.html
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Soil Health Affects Weed Growth</h1>
 
-  <h2>Weeds exploit broken soil systems</h2>
-  <p>Weeds thrive where soil function breaks down. Compaction, shallow depth, and poor drainage limit grass roots first, leaving open space and unused resources.</p>
-  <p>You notice weeds filling thin or bare areas long before grass can recover.</p>
+  <h2>Weeds take advantage of failing soil systems</h2>
+  <p>Weeds tend to move in where soil function breaks down. Compaction, shallow depth, and drainage problems restrict grass roots first, leaving unused space and resources.</p>
+  <p>The pattern shows up as weeds occupying thin or bare areas long before turf has a chance to rebound.</p>
 
-  <h2>Stress favors fast, shallow roots</h2>
-  <p>Many weeds survive with minimal root depth and low oxygen. When soil tightens or dries unevenly, grass loses access while weeds keep growing.</p>
-  <p>You notice weeds dominating hard ground, edges, and compacted zones.</p>
+  <h2>Stress conditions favor fast, shallow rooting</h2>
+  <p>Many weed species tolerate limited root depth and low oxygen. When soil tightens or dries unevenly, grass loses access while weeds continue growing.</p>
+  <p>This imbalance becomes most visible on hard ground, along edges, and across compacted zones.</p>
 
-  <h2>Water imbalance gives weeds an advantage</h2>
-  <p>Poor soil holds water in the wrong places and sheds it elsewhere. Weeds tolerate swings that grass cannot.</p>
-  <p>You notice weeds thriving in soggy low spots and dry high spots at the same time.</p>
+  <h2>Uneven water movement gives weeds leverage</h2>
+  <p>Degraded soil tends to hold water in some spots while shedding it in others. Weeds are often better adapted to those swings than turfgrass.</p>
+  <p>As a result, weeds may thrive simultaneously in soggy low areas and drought-prone high spots.</p>
 
-  <h2>Healthy soil closes the window weeds use</h2>
-  <p>When soil allows roots, air, and water to move freely, grass thickens and shades the surface. Weed seeds lose space and light.</p>
-  <p>You notice fewer new weeds appearing once soil behavior improves.</p>
+  <h2>Improved soil function closes the window weeds use</h2>
+  <p>When soil allows air, water, and roots to move freely, grass thickens and shades the surface. Available space and light for germinating weeds shrink.</p>
+  <p>New weed pressure typically drops once soil behavior begins to stabilize.</p>
 
-  <h2>Amendments help only when soil can respond</h2>
-  <p>Amendments improve structure and root access when soil damage is shallow. They don’t help when deeper layers block recovery.</p>
-  <p>You notice weeds declining only when the situation matches <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">when soil amendments make sense</a>.</p>
+  <h2>Structural inputs matter only when soil can respond</h2>
+  <p>Amendments can improve structure and root access when damage is limited to upper layers. They tend to have little effect when deeper barriers block recovery.</p>
+  <p>Weed decline usually coincides with conditions that match <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">when soil amendments make sense</a>.</p>
 
-  <h2>Fertilizer feeds weeds in broken soil</h2>
-  <p>In poor soil, grass can’t use nutrients efficiently. Weeds absorb what grass can’t reach.</p>
-  <p>You notice faster weed growth after feeding when the difference described in <a href="/soil-fertilizer/difference-between-amendments-and-fertilizer.html">amendments versus fertilizer</a> is misunderstood.</p>
+  <h2>Nutrient inputs can favor weeds in degraded ground</h2>
+  <p>In compromised soil, grass often can’t use nutrients efficiently. Weeds are more likely to capture what turf can’t reach.</p>
+  <p>That dynamic explains why feeding sometimes accelerates weed growth when the distinction described in <a href="/soil-fertilizer/difference-between-amendments-and-fertilizer.html">amendments versus fertilizer</a> isn’t clear.</p>
 
-  <h2>Some soil problems block improvement entirely</h2>
-  <p>When compaction, drainage failure, or missing topsoil prevent root expansion, weed pressure stays high regardless of treatment.</p>
-  <p>You notice repeated weed outbreaks tied to the same conditions explained in <a href="/soil-fertilizer/when-amendments-dont-help.html">when amendments don’t help</a>.</p>
+  <h2>Some soil limits prevent progress altogether</h2>
+  <p>Severe compaction, chronic drainage failure, or missing topsoil can block root expansion entirely. Under those conditions, weed pressure often stays high regardless of surface treatments.</p>
+  <p>Repeated outbreaks typically trace back to the same constraints outlined in <a href="/soil-fertilizer/when-amendments-dont-help.html">when amendments don’t help</a>.</p>
 
-  <h2>Weeds are indicators, not the cause</h2>
-  <p>Weeds don’t create weak lawns. They move into spaces soil health created.</p>
-  <p>When soil supports grass fully, weeds lose their advantage on their own.</p>
+  <h2>Weeds signal underlying conditions rather than cause them</h2>
+  <p>Weeds don’t create weak lawns. They occupy spaces that soil limitations have already opened.</p>
+  <p>Once soil reliably supports grass growth, weeds lose their advantage without becoming the primary focus.</p>
 </main>
 
 <footer class="site-footer">
