--- a/soil-fertilizer/how-soil-interacts-with-fertilizer.html
+++ b/soil-fertilizer/how-soil-interacts-with-fertilizer.html
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Soil Interacts With Fertilizer</h1>
 
-  <h2>Fertilizer only works if soil can hold it</h2>
-  <p>Fertilizer dissolves into salts that must remain near roots long enough to be absorbed. Soil structure determines whether nutrients stay put or move away.</p>
-  <p>You notice fertilizer “not working” when color fades quickly or growth stalls days after application.</p>
+  <h2>Fertilizer depends on soil’s ability to retain nutrients</h2>
+  <p>Once applied, fertilizer dissolves into salts that must remain near active roots long enough to be taken up. Whether those nutrients linger or move away is controlled by soil structure and pore space.</p>
+  <p>Rapid fading of color or stalled growth shortly after application often points back to how quickly nutrients are leaving the root zone.</p>
 
-  <h2>Soil texture controls nutrient movement</h2>
-  <p>Coarse or broken soil lets water and nutrients move too quickly. Fine or compacted soil traps them near the surface.</p>
-  <p>You notice weak response in areas where soil dries fast, similar to the patterns seen in <a href="/soil-fertilizer/why-soil-dries-out-too-fast.html">why soil dries out too fast</a>.</p>
+  <h2>Soil texture shapes how nutrients move</h2>
+  <p>Loose or coarse soil allows water and dissolved nutrients to move rapidly, while finer or compacted ground tends to hold them closer to the surface.</p>
+  <p>Weak response is common in areas that dry out quickly, reflecting the same movement patterns discussed in <a href="/soil-fertilizer/why-soil-dries-out-too-fast.html">why soil dries out too fast</a>.</p>
 
-  <h2>Poor drainage concentrates fertilizer instead of distributing it</h2>
-  <p>When soil stays wet, nutrients remain dissolved and accumulate around roots. That raises salt levels instead of feeding growth.</p>
-  <p>You notice yellowing, thinning, or root damage tied to the same soil behavior described in <a href="/soil-fertilizer/how-poor-drainage-damages-soil.html">how poor drainage damages soil</a>.</p>
+  <h2>Poor drainage can concentrate nutrients rather than spread them</h2>
+  <p>When water lingers in soil, nutrients remain dissolved and collect around roots instead of dispersing evenly. Under those conditions, salt levels may rise rather than support growth.</p>
+  <p>Yellowing, thinning, or root stress often aligns with the drainage behavior outlined in <a href="/soil-fertilizer/how-poor-drainage-damages-soil.html">how poor drainage damages soil</a>.</p>
 
-  <h2>Roots must be healthy to absorb nutrients</h2>
-  <p>Fertilizer uptake depends on active root tips. Compacted or oxygen-starved soil limits root function before nutrients ever reach the plant.</p>
-  <p>You notice grass failing to respond even when fertilizer rates are correct.</p>
+  <h2>Root condition controls nutrient uptake</h2>
+  <p>Nutrient absorption depends on active, healthy root tips. Compaction or low oxygen can limit root function before nutrients ever reach the plant.</p>
+  <p>This helps explain why grass may show little response even when application rates are technically correct.</p>
 
-  <h2>Fertilizer follows water, not grass</h2>
-  <p>Once dissolved, fertilizer moves wherever water goes. Runoff, deep drainage, or puddling carry nutrients away from roots.</p>
-  <p>You notice uneven color or streaking that matches water movement patterns instead of spread patterns.</p>
+  <h2>Nutrients move with water, not plant demand</h2>
+  <p>After dissolving, fertilizer travels wherever water flows. Runoff, deep percolation, or puddling can redirect nutrients away from where roots are growing.</p>
+  <p>Uneven color or streaking often mirrors water movement patterns rather than spread patterns.</p>
 
-  <h2>Repeated feeding can worsen soil problems</h2>
-  <p>Applying fertilizer to soil that can’t regulate nutrients increases salt buildup and microbial imbalance.</p>
-  <p>You notice declining performance over time even as feeding increases.</p>
+  <h2>Repeated applications can intensify existing soil limits</h2>
+  <p>Applying fertilizer to soil that already struggles to regulate nutrients may increase salt buildup or disrupt microbial balance under some conditions.</p>
+  <p>Over time, performance can decline even as feeding frequency rises.</p>
 
-  <h2>Soil health determines fertilizer efficiency</h2>
-  <p>Healthy soil buffers nutrients, releases them gradually, and protects roots from concentration spikes.</p>
-  <p>You notice smaller applications working better once soil behaves the way described in <a href="/soil-fertilizer/why-fixing-soil-improves-everything.html">why fixing soil improves everything</a>.</p>
+  <h2>Soil condition governs how efficiently nutrients are used</h2>
+  <p>Functioning soil buffers nutrients, releases them more gradually, and reduces sharp concentration swings around roots.</p>
+  <p>Smaller, more effective applications often follow once soil begins behaving in the way described in <a href="/soil-fertilizer/why-fixing-soil-improves-everything.html">why fixing soil improves everything</a>.</p>
 
-  <h2>Fertilizer can’t override soil limitations</h2>
-  <p>More nutrients don’t create pore space, oxygen flow, or root depth. Fertilizer only amplifies existing soil behavior.</p>
-  <p>When soil functions correctly, fertilizer becomes supportive instead of destructive.</p>
+  <h2>Fertilizer can’t compensate for structural limits</h2>
+  <p>Additional nutrients don’t create air space, restore oxygen flow, or deepen roots. Fertilizer tends to amplify whatever conditions soil already provides.</p>
+  <p>When soil functions well, nutrients act as support rather than a source of stress.</p>
 </main>
 
 <footer class="site-footer">
