--- a/soil-fertilizer/how-soil-interacts-with-watering.html
+++ b/soil-fertilizer/how-soil-interacts-with-watering.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Soil Interacts With Watering</title>
-  <meta name="description" content="Watering never acts on grass directly. Soil controls where water goes, how long it stays, and whether roots can actually use it.">
+  <meta name="description" content="Watering does not act on grass directly. Soil determines where water moves, how long it remains available, and whether roots can actually use it.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-soil-interacts-with-watering.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How Soil Interacts With Watering">
-  <meta name="twitter:description" content="Watering never acts on grass directly. Soil controls where water goes, how long it stays, and whether roots can actually use it.">
+  <meta name="twitter:description" content="Watering does not act on grass directly. Soil determines where water moves, how long it remains available, and whether roots can actually use it.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Soil Interacts With Watering">
-  <meta property="og:description" content="Watering never acts on grass directly. Soil controls where water goes, how long it stays, and whether roots can actually use it.">
+  <meta property="og:description" content="Watering does not act on grass directly. Soil determines where water moves, how long it remains available, and whether roots can actually use it.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-soil-interacts-with-watering.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Soil Interacts With Watering</h1>
 
-  <h2>Water only matters after soil accepts it</h2>
-  <p>Watering applies moisture to the surface, not to roots. Soil decides whether that water soaks in, runs off, or pools.</p>
-  <p>You notice this as areas that stay dry no matter how long you water, while other spots stay wet for days.</p>
+  <h2>Water only helps after soil takes it in</h2>
+  <p>Watering delivers moisture to the surface, but soil controls what happens next. Depending on structure and pore space, that water may infiltrate, move laterally, or collect on top.</p>
+  <p>This shows up as areas that stay dry despite long watering cycles, while nearby spots remain saturated for days.</p>
 
-  <h2>Poor soil rejects water instead of absorbing it</h2>
-  <p>Compacted or sealed soil sheds water sideways because pore space has collapsed. Roots never see most of what was applied.</p>
-  <p>You notice runoff, puddling, or irrigation water moving downhill instead of disappearing into the ground, a common sign described in <a href="/soil-fertilizer/how-to-tell-if-lawn-soil-is-poor.html">how to tell if lawn soil is poor</a>.</p>
+  <h2>Compacted ground sheds water instead of absorbing it</h2>
+  <p>When pore space collapses, soil resists infiltration and pushes water sideways. Much of the applied water never reaches the root zone.</p>
+  <p>Runoff, puddling, or downhill movement during irrigation often trace back to the same conditions outlined in <a href="/soil-fertilizer/how-to-tell-if-lawn-soil-is-poor.html">how to tell if lawn soil is poor</a>.</p>
 
-  <h2>Water distribution determines root depth</h2>
-  <p>Soil that absorbs water evenly encourages roots to grow downward. Soil that only wets the surface traps roots near the top.</p>
-  <p>You notice shallow roots, fast wilting, and grass that collapses quickly in heat even with regular watering.</p>
+  <h2>Water movement shapes root depth</h2>
+  <p>Even infiltration encourages roots to grow deeper in search of moisture. When only the surface wets, roots tend to stay shallow.</p>
+  <p>The result is grass that wilts quickly, struggles in heat, and collapses fast despite frequent watering.</p>
 
-  <h2>Soil controls how long roots stay wet</h2>
-  <p>Good soil drains excess water while holding enough moisture for use. Bad soil stays saturated or dries out completely.</p>
-  <p>You notice yellowing, thinning, or delayed recovery because roots spend too much time either drowning or drying out.</p>
+  <h2>Soil determines how long roots remain wet</h2>
+  <p>Functional soil drains excess water while holding usable moisture. Degraded soil often swings between saturation and extreme dryness.</p>
+  <p>Those extremes show up as yellowing, thinning, or slow recovery when roots spend too much time either drowning or drying out.</p>
 
-  <h2>Organic matter moderates watering extremes</h2>
-  <p>Organic material improves both absorption and drainage by keeping pore space open. Water moves in and out at controlled rates.</p>
-  <p>You notice steadier moisture levels and fewer stress swings when soil behaves the way explained in <a href="/soil-fertilizer/how-organic-matter-improves-soil.html">how organic matter improves soil</a>.</p>
+  <h2>Organic material buffers watering extremes</h2>
+  <p>Organic inputs help maintain open pore space, improving both absorption and drainage. Water enters and exits the root zone at more controlled rates.</p>
+  <p>More stable moisture levels tend to follow when soil behaves in line with the processes described in <a href="/soil-fertilizer/how-organic-matter-improves-soil.html">how organic matter improves soil</a>.</p>
 
-  <h2>Fertilizer follows water through soil</h2>
-  <p>Fertilizer dissolves and moves wherever water goes. If water runs off or drains too fast, nutrients move with it.</p>
-  <p>You notice poor feeding results because of the limits described in <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>.</p>
+  <h2>Nutrients move wherever water goes</h2>
+  <p>Once dissolved, fertilizer travels with water through the soil profile. Runoff or rapid drainage can carry nutrients away from roots.</p>
+  <p>Inconsistent feeding results often reflect the same limits discussed in <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>.</p>
 
-  <h2>Watering can’t fix soil failures</h2>
-  <p>Changing schedules doesn’t create pore space or repair structure. More water just amplifies whatever the soil already does.</p>
-  <p>You notice no improvement even with careful watering because of the same limitation explained in <a href="/soil-fertilizer/why-fertilizer-doesnt-fix-bad-soil.html">why fertilizer doesn’t fix bad soil</a>.</p>
+  <h2>Adjusting watering can’t correct structural limits</h2>
+  <p>Changing schedules or amounts does not create pore space or repair collapsed structure. Additional water tends to intensify whatever behavior the soil already exhibits.</p>
+  <p>Lack of improvement despite careful watering often points back to the constraint explained in <a href="/soil-fertilizer/why-fertilizer-doesnt-fix-bad-soil.html">why fertilizer doesn’t fix bad soil</a>.</p>
 
-  <h2>Soil behavior explains most watering problems</h2>
-  <p>When watering seems inconsistent or ineffective, the issue is usually how soil processes moisture, not how often water is applied.</p>
-  <p>Once soil interacts with water correctly, watering becomes predictable instead of frustrating.</p>
+  <h2>Most watering problems originate in soil behavior</h2>
+  <p>When irrigation feels inconsistent or ineffective, the underlying issue is usually how soil processes moisture rather than how often water is applied.</p>
+  <p>Once soil handles water predictably, watering becomes far more reliable and far less frustrating.</p>
 </main>
 
 <footer class="site-footer">
