--- a/soil-fertilizer/how-soil-temperature-affects-roots.html
+++ b/soil-fertilizer/how-soil-temperature-affects-roots.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Soil Temperature Affects Roots</title>
-  <meta name="description" content="Soil temperature controls how fast roots grow, breathe, and absorb nutrients. When soil is too cold or too hot, roots stall first and grass follows.">
+  <meta name="description" content="Soil temperature influences how roots grow, respire, and absorb nutrients. When soil runs too cold or too hot, roots slow first and grass stress follows.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-soil-temperature-affects-roots.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How Soil Temperature Affects Roots">
-  <meta name="twitter:description" content="Soil temperature controls how fast roots grow, breathe, and absorb nutrients. When soil is too cold or too hot, roots stall first and grass follows.">
+  <meta name="twitter:description" content="Soil temperature influences how roots grow, respire, and absorb nutrients. When soil runs too cold or too hot, roots slow first and grass stress follows.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Soil Temperature Affects Roots">
-  <meta property="og:description" content="Soil temperature controls how fast roots grow, breathe, and absorb nutrients. When soil is too cold or too hot, roots stall first and grass follows.">
+  <meta property="og:description" content="Soil temperature influences how roots grow, respire, and absorb nutrients. When soil runs too cold or too hot, roots slow first and grass stress follows.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-soil-temperature-affects-roots.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>How Soil Temperature Affects Roots</h1>
 
-  <h2>Roots run on temperature before anything else</h2>
-  <p>Roots grow and absorb nutrients by using energy, and that energy process slows down when soil is cold and speeds up until heat becomes damaging. When soil temperature is out of range, roots either stall or burn out even if the grass above looks fine.</p>
-  <p>You notice this as grass that won’t thicken, won’t green up, or suddenly looks stressed even though watering stayed the same.</p>
+  <h2>Root activity responds to temperature before surface growth</h2>
+  <p>Root growth and nutrient uptake rely on metabolic processes that slow in cold soil and accelerate with warmth until excessive heat becomes harmful. When soil temperatures drift outside a workable range, root function can stall or decline even while the grass above still appears normal.</p>
+  <p>This often shows up as turf that refuses to thicken, lags in green-up, or looks stressed despite unchanged watering.</p>
 
-  <h2>Cold soil slows nutrient uptake first</h2>
-  <p>In cold soil, roots take up nutrients more slowly because the root system is less active. Nutrients can be present in the ground but still stay out of reach because the roots aren’t pulling them in.</p>
-  <p>You notice this as pale color and slow growth that can look like nutrient problems or the early look of <a href="/soil-fertilizer/signs-soil-ph-is-wrong.html">soil pH being wrong</a>, even when fertilizer was applied.</p>
+  <h2>Cool soil limits nutrient uptake first</h2>
+  <p>In cooler conditions, roots tend to absorb nutrients more slowly because overall activity drops. Nutrients may be present but remain underused when roots are not actively pulling them in.</p>
+  <p>The result can be pale color and slow growth that resembles nutrient issues or patterns associated with <a href="/soil-fertilizer/signs-soil-ph-is-wrong.html">soil pH being wrong</a>, even after fertilizer has been applied.</p>
 
-  <h2>Hot soil speeds water loss and starves roots of oxygen</h2>
-  <p>In heat, soil dries faster at the surface and water demand rises. When soil dries and tightens, air spaces shrink and oxygen movement drops, which makes roots weaker even while the lawn is demanding more.</p>
-  <p>You notice this as grass that wilts fast in the afternoon, recovers overnight, then slowly starts thinning in the hottest spots.</p>
+  <h2>Excess heat increases water loss and reduces oxygen</h2>
+  <p>Hot conditions speed surface drying and raise water demand. As soil dries and tightens, pore space can shrink, reducing oxygen movement and weakening roots at the same time demand increases.</p>
+  <p>This stress commonly appears as afternoon wilting that recovers overnight, followed by gradual thinning in the hottest areas.</p>
 
-  <h2>Wet soil makes temperature swings hit harder</h2>
-  <p>Waterlogged soil holds heat and cold differently than airy soil, and it reduces oxygen at the same time. Roots get trapped in a low-oxygen environment while temperature stress continues.</p>
-  <p>You notice this as yellowing that doesn’t respond to watering changes, especially in areas where <a href="/soil-fertilizer/how-poor-drainage-damages-soil.html">poor drainage is already damaging the soil</a>.</p>
+  <h2>Saturated soil intensifies temperature stress</h2>
+  <p>Waterlogged ground moderates heat and cold differently than well-aerated soil while also restricting oxygen. Roots can end up trapped in low-oxygen conditions as temperature stress continues.</p>
+  <p>Yellowing that fails to improve with watering adjustments is more likely where <a href="/soil-fertilizer/how-poor-drainage-damages-soil.html">poor drainage is already damaging the soil</a>.</p>
 
-  <h2>Soil texture controls how fast soil heats and cools</h2>
-  <p>Different soils warm and cool at different speeds because their particle size and water-holding behavior are different. Some soils swing temperature fast, while others stay cold or stay hot longer.</p>
-  <p>You notice uneven growth across the yard because the areas with different textures behave differently, the same split described in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">the difference between clay, sand, and loam</a>.</p>
+  <h2>Soil makeup influences heating and cooling rates</h2>
+  <p>Particle size and water-holding capacity affect how quickly soil warms and cools. Some soils change temperature rapidly, while others stay cold or hot for longer periods.</p>
+  <p>Uneven growth across a yard often reflects these differences, similar to the contrasts outlined in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">the difference between clay, sand, and loam</a>.</p>
 
-  <h2>Temperature stress keeps roots shallow</h2>
-  <p>When deeper soil stays too cold, too hot, or too wet, roots avoid it and stay near the surface where conditions swing the most. That makes the lawn less stable because shallow roots can’t store water or handle stress.</p>
-  <p>You notice this as grass that pulls up easier, shows footprints longer, and fails quickly during heat waves.</p>
+  <h2>Temperature stress encourages shallow rooting</h2>
+  <p>When deeper layers remain too cold, too hot, or overly wet, roots tend to avoid them and stay near the surface where conditions fluctuate the most. Shallow rooting reduces stability and limits water storage.</p>
+  <p>That pattern becomes visible as turf that pulls up easily, holds footprints longer, and fails quickly during heat waves.</p>
 
-  <h2>Root problems show up later than the temperature change</h2>
-  <p>Temperature shifts affect roots immediately, but grass symptoms lag because the plant uses stored energy before it runs out. By the time the lawn looks bad, the root system has already been struggling.</p>
-  <p>You notice this when a lawn looks fine during the weather change, then declines a week or two later.</p>
+  <h2>Root stress appears after temperature shifts</h2>
+  <p>Temperature changes affect roots immediately, but visible turf symptoms lag as plants rely on stored energy. By the time decline is obvious, roots may have been under stress for days or weeks.</p>
+  <p>This delay explains why lawns can look fine during a weather change and then deteriorate shortly afterward.</p>
 
-  <h2>Soil temperature controls the ceiling on lawn performance</h2>
-  <p>When soil temperature stays in a workable range, roots keep expanding and feeding the lawn. When soil temperature stays out of range, the lawn can only survive at a reduced level.</p>
-  <p>The visible result is a lawn that performs well in mild weeks and falls apart when soil temperature pushes it past its limit.</p>
+  <h2>Soil temperature sets practical limits on performance</h2>
+  <p>When soil remains within a workable temperature range, roots continue expanding and supporting growth. When temperatures stay outside that range, turf often operates at a reduced level.</p>
+  <p>The outcome is a lawn that performs well during mild periods and struggles when soil temperatures push it beyond what roots can tolerate.</p>
 </main>
 
 <footer class="site-footer">
