--- a/soil-fertilizer/how-to-decide-between-fixing-or-replacing-soil.html
+++ b/soil-fertilizer/how-to-decide-between-fixing-or-replacing-soil.html
@@ -56,40 +56,40 @@
 <main class="container">
   <h1>How to Decide Between Fixing or Replacing Soil</h1>
 
-  <h2>The decision depends on whether roots can still rebuild soil</h2>
-  <p>Soil fixes work only when roots can penetrate, breathe, and cycle organic material back into the ground. When roots can’t survive long enough to rebuild structure, improvement stalls.</p>
-  <p>You notice this when grass never thickens no matter how carefully you water or feed.</p>
+  <h2>The choice hinges on whether roots can still rebuild soil</h2>
+  <p>Soil recovery depends on roots being able to penetrate, breathe, and cycle organic material back into the ground. When roots can’t survive long enough to support that process, progress slows or stops.</p>
+  <p>This becomes clear when grass never thickens despite careful watering and feeding.</p>
 
-  <h2>Depth determines whether repair is possible</h2>
-  <p>If the compacted or damaged layer sits shallow, roots can eventually work through it. When the hard layer runs deep, roots hit a permanent wall.</p>
-  <p>You notice probes stopping abruptly several inches down with no change year after year.</p>
+  <h2>Problem depth determines repair potential</h2>
+  <p>If compaction or damage is limited to shallow layers, roots may eventually work through it. When resistance extends deep into the profile, roots encounter a lasting barrier.</p>
+  <p>A probe stopping abruptly at the same depth year after year points to that limit.</p>
 
-  <h2>Disturbed construction soil often crosses the line</h2>
-  <p>Heavily graded or filled soil lacks structure and biology and continues tightening over time. Recovery depends on how much native soil remains.</p>
-  <p>You notice behavior that matches the limits described in <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">why new construction soil is bad</a>.</p>
+  <h2>Construction-disturbed ground often reaches its limit</h2>
+  <p>Soil that has been heavily graded or filled often lacks structure and biological activity and may continue tightening over time. Whether it can recover depends on how much undisturbed soil remains below.</p>
+  <p>Behavior like this matches the constraints described in <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">why new construction soil is bad</a>.</p>
 
-  <h2>Organic matter only works when soil can hold it</h2>
-  <p>Organic material improves soil by feeding biology and stabilizing pore space. In soil that drains too fast or seals too tight, it never stays where roots need it.</p>
-  <p>You notice repeated applications failing to accumulate the benefits explained in <a href="/soil-fertilizer/what-organic-matter-actually-does.html">what organic matter actually does</a>.</p>
+  <h2>Organic inputs only help when soil can retain them</h2>
+  <p>Organic material supports soil by feeding biology and stabilizing pore space. In soil that drains too fast or seals tightly, those materials may not stay in the root zone long enough to matter.</p>
+  <p>Repeated applications that never build lasting benefit reflect the limits outlined in <a href="/soil-fertilizer/what-organic-matter-actually-does.html">what organic matter actually does</a>.</p>
 
-  <h2>Chemical adjustments can’t replace structure</h2>
-  <p>pH changes and nutrient tweaks only work after physical movement and oxygen exchange exist.</p>
-  <p>You notice inconsistent or harmful responses similar to those described in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
+  <h2>Chemical adjustments can’t replace physical structure</h2>
+  <p>pH correction and nutrient adjustments depend on existing air movement and oxygen exchange to be effective.</p>
+  <p>Erratic or damaging responses sometimes resemble the outcomes discussed in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
 
-  <h2>More input doesn’t mean more improvement</h2>
-  <p>Adding more fertilizer or amendments increases stress when soil can’t regulate them.</p>
-  <p>You notice worsening results that follow the same pattern explained in <a href="/soil-fertilizer/why-more-fertilizer-isnt-better.html">why more fertilizer isn’t better</a>.</p>
+  <h2>More input doesn’t always lead to progress</h2>
+  <p>Additional fertilizer or amendments can increase stress when soil lacks the ability to buffer them.</p>
+  <p>Declining results often follow the same pattern described in <a href="/soil-fertilizer/why-more-fertilizer-isnt-better.html">why more fertilizer isn’t better</a>.</p>
 
-  <h2>Fixing soil takes time, replacing it takes access</h2>
-  <p>Repair requires seasons of root cycling and protection. Replacement requires removing the failed layer entirely.</p>
-  <p>You notice fixing makes sense when progress accumulates, and replacement makes sense when nothing stacks.</p>
+  <h2>Repair requires time, replacement requires access</h2>
+  <p>Rebuilding soil takes multiple seasons of root growth and protection. Replacement requires physically removing the failed layer.</p>
+  <p>Repair makes sense when improvement accumulates over time, while replacement becomes practical when nothing builds.</p>
 
-  <h2>Replacement is justified when failure is permanent</h2>
-  <p>If soil can’t hold structure, biology, or roots after repeated attempts, replacement stops wasted effort.</p>
-  <p>You notice the same areas failing regardless of method or product.</p>
+  <h2>Replacement makes sense when failure is persistent</h2>
+  <p>If soil can’t maintain structure, biology, or roots after repeated attempts, replacing it can stop wasted effort.</p>
+  <p>The same areas failing regardless of method or product point in that direction.</p>
 
-  <h2>The right choice saves years of frustration</h2>
-  <p>Fix soil when recovery is happening, even slowly.</p>
+  <h2>The right call prevents years of frustration</h2>
+  <p>Continue repairing soil when recovery is happening, even if slowly.</p>
   <p>Replace soil when the ground itself no longer responds.</p>
 </main>
 
