--- a/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html
+++ b/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html
@@ -57,40 +57,40 @@
   <h1>How to Diagnose Soil Issues Correctly</h1>
 
   <h2>Start with soil behavior, not grass symptoms</h2>
-  <p>Soil problems show up in how water moves, how firm the ground feels, and how roots behave. Grass symptoms appear later and often point in the wrong direction.</p>
-  <p>You notice misdiagnosis when treatments target color or weeds but the same areas keep failing.</p>
+  <p>Soil problems first appear in how water moves, how firm the ground feels, and how roots are able to grow. Grass symptoms develop later and often misdirect attention away from the underlying cause.</p>
+  <p>Repeated treatment aimed at color, weeds, or surface appearance without lasting improvement is a common sign the diagnosis missed the soil.</p>
 
   <h2>Water movement reveals structure problems</h2>
-  <p>Soil structure controls whether water soaks in, runs off, or pools. This behavior exposes compaction, sealing, and drainage failure immediately.</p>
-  <p>You notice runoff, puddling, or water sitting on the surface longer than expected.</p>
+  <p>Soil structure determines whether water infiltrates, runs off, or pools at the surface. Compaction, sealing, and drainage failure show themselves immediately through water behavior.</p>
+  <p>Runoff during irrigation, standing water after rain, or moisture lingering longer than expected point directly to structural limits.</p>
 
   <h2>Probe depth shows root limitation</h2>
-  <p>Roots stop growing where soil becomes too tight, dry, or oxygen-poor. A screwdriver or soil probe reveals where resistance begins.</p>
-  <p>You notice shallow root zones that explain heat stress and poor recovery.</p>
+  <p>Roots stop expanding where soil becomes too tight, dry, or oxygen-poor. A screwdriver or soil probe quickly identifies where resistance begins.</p>
+  <p>Consistently shallow root depth explains heat stress, slow recovery, and repeated thinning.</p>
 
   <h2>Texture differences point to uneven soil</h2>
-  <p>Mixed soil textures behave differently even under the same care. Fill dirt, native soil, and amended zones settle and drain at different rates.</p>
-  <p>You notice performance changes that follow old construction lines or repaired areas.</p>
+  <p>Different soil textures respond differently under the same care. Fill material, native soil, and amended zones settle and drain at different rates.</p>
+  <p>Performance changes that follow old construction lines or repaired areas often trace back to these texture shifts.</p>
 
   <h2>Biology damage changes how soil responds</h2>
-  <p>Soil life helps maintain structure and nutrient exchange. When biology collapses, soil tightens and becomes less resilient.</p>
-  <p>You notice soil that crusts, smells sour, or stops improving the way explained in <a href="/soil-fertilizer/how-soil-biology-gets-damaged.html">how soil biology gets damaged</a>.</p>
+  <p>Soil organisms help maintain structure and nutrient exchange. When biological activity declines, soil becomes tighter and less resilient.</p>
+  <p>Crusting, sour odors, or soil that stops responding to care reflect the breakdown described in <a href="/soil-fertilizer/how-soil-biology-gets-damaged.html">how soil biology gets damaged</a>.</p>
 
   <h2>Chemical fixes only work after structure is known</h2>
-  <p>Products like sulfur or lime change chemistry, not structure. Applied without diagnosis, they can worsen existing problems.</p>
-  <p>You notice inconsistent results tied to changes like those described in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
+  <p>Products like sulfur or lime adjust chemistry, not physical movement. Applied without understanding structure, they may amplify existing stress.</p>
+  <p>Erratic responses or worsening conditions often resemble the outcomes discussed in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
 
   <h2>Amendments reveal whether soil can still respond</h2>
-  <p>Amendments improve soil only if pore space and movement can be restored. If deeper layers block recovery, surface changes stall.</p>
-  <p>You notice partial improvement that fades, matching the limits described in <a href="/soil-fertilizer/how-amendments-change-soil-structure.html">how amendments change soil structure</a>.</p>
+  <p>Soil amendments support recovery only when pore space and movement can be restored. If deeper layers block root expansion, surface gains stall.</p>
+  <p>Short-lived improvement that fades aligns with the limits explained in <a href="/soil-fertilizer/how-amendments-change-soil-structure.html">how amendments change soil structure</a>.</p>
 
   <h2>Patterns matter more than test numbers</h2>
-  <p>Repeating failures in the same spots point to physical causes. Random issues suggest temporary stress instead.</p>
-  <p>You notice diagnosis becomes clearer when patterns line up with soil behavior.</p>
+  <p>Problems repeating in the same locations point to physical causes embedded in the soil profile. Random or shifting issues are more likely tied to temporary stress.</p>
+  <p>Diagnosis becomes clearer when visible patterns match how soil behaves.</p>
 
   <h2>Correct diagnosis prevents wasted fixes</h2>
-  <p>Once the physical cause is identified, treatments finally match the problem.</p>
-  <p>Soil improves only when the right issue is addressed first.</p>
+  <p>Once the physical cause is identified, treatments finally align with the problem.</p>
+  <p>Soil improves only when the right limitation is addressed first.</p>
 </main>
 
 <footer class="site-footer">
