--- a/soil-fertilizer/how-topdressing-changes-soil-over-time.html
+++ b/soil-fertilizer/how-topdressing-changes-soil-over-time.html
@@ -57,36 +57,36 @@
   <h1>How Topdressing Changes Soil Over Time</h1>
 
   <h2>Topdressing adds structure before it changes growth</h2>
-  <p>Topdressing works by placing loose material on top of compacted or depleted soil. Gravity, water, and root growth slowly pull that material into the surface layer, increasing pore space where air and water move.</p>
-  <p>You notice this first as soil that stops crusting and absorbs water more evenly, even though the grass itself looks mostly the same.</p>
+  <p>Topdressing works by placing loose material over compacted or depleted soil. Gravity, moisture, and root activity gradually pull that material into the surface layer, increasing pore space where air and water can move.</p>
+  <p>The earliest change is soil that resists crusting and begins absorbing water more evenly, even while grass growth remains largely unchanged.</p>
 
   <h2>Water movement improves before roots deepen</h2>
-  <p>As topdressing mixes in, it creates new entry points that interrupt sealed surfaces. Water stops racing downhill or pooling because it finally has a path downward.</p>
-  <p>You notice fewer washouts and thin streaks on slopes where runoff used to dominate, the same process behind <a href="/soil-fertilizer/why-sloped-lawns-lose-soil.html">why sloped lawns lose soil</a>.</p>
+  <p>As topdressing integrates with the surface, sealed layers are interrupted and new pathways form. Water slows, infiltrates, and redistributes instead of racing downhill or collecting in place.</p>
+  <p>Runoff lines and washouts on slopes fade as infiltration improves, following the same mechanics outlined in <a href="/soil-fertilizer/why-sloped-lawns-lose-soil.html">why sloped lawns lose soil</a>.</p>
 
   <h2>Roots follow space as it becomes available</h2>
-  <p>Roots only grow where soil allows them to. As the surface layer loosens, roots expand into the new material and begin anchoring deeper.</p>
-  <p>You notice grass pulling up less easily and holding color longer during heat once roots occupy that space.</p>
+  <p>Roots expand only where soil allows movement and oxygen. As the upper layer loosens, roots extend into the new space and begin anchoring deeper.</p>
+  <p>This shows up as turf that resists pulling and holds color longer during heat once roots occupy the rebuilt layer.</p>
 
   <h2>Repeated topdressing compounds improvement</h2>
-  <p>Each application builds on the last by thickening the workable layer. Over time, that layer resists compaction better and recovers faster after stress.</p>
-  <p>You notice older lawns responding slower than newer ones because soil history matters, the same pattern described in <a href="/soil-fertilizer/how-lawn-age-affects-soil-health.html">how lawn age affects soil health</a>.</p>
+  <p>Each application builds on earlier work by thickening the functional zone. Over time, this layer becomes more resistant to compaction and recovers faster after stress.</p>
+  <p>Response rates vary by lawn age and history, reflecting the long-term patterns described in <a href="/soil-fertilizer/how-lawn-age-affects-soil-health.html">how lawn age affects soil health</a>.</p>
 
   <h2>Topdressing changes how clay behaves</h2>
-  <p>Clay soil fails when particles pack tightly and block air and water. Mixing in lighter material through repeated topdressing breaks that packing and creates channels.</p>
-  <p>You notice clay areas staying workable longer after rain and cracking less during dry periods, reversing the stress described in <a href="/soil-fertilizer/how-clay-soil-affects-grass.html">how clay soil affects grass</a>.</p>
+  <p>Clay soils struggle when particles pack tightly and restrict air and water. Repeated topdressing introduces lighter material that interrupts packing and creates channels.</p>
+  <p>Clay areas remain workable longer after rain and crack less during dry periods, easing the stress explained in <a href="/soil-fertilizer/how-clay-soil-affects-grass.html">how clay soil affects grass</a>.</p>
 
   <h2>Surface leveling becomes a side effect</h2>
-  <p>As material settles and roots stabilize it, low spots fill in gradually. This reduces mowing scalps and uneven drying.</p>
-  <p>You notice smoother mowing and fewer brown spots caused by shallow soil.</p>
+  <p>As material settles and roots stabilize it, shallow depressions fill gradually. This smooths mowing height and reduces uneven drying.</p>
+  <p>The result is more consistent cutting and fewer brown patches caused by shallow or uneven soil.</p>
 
   <h2>Soil stability increases season by season</h2>
-  <p>Once structure improves, soil resists erosion, compaction, and moisture extremes better than before. Stress still occurs, but recovery speeds up.</p>
-  <p>You notice fewer areas that collapse under traffic or weather compared to previous years.</p>
+  <p>Once structure improves, soil resists erosion, compaction, and moisture extremes more effectively. Stress still occurs, but recovery accelerates.</p>
+  <p>Areas that previously collapsed under traffic or weather pressure become less frequent over successive seasons.</p>
 
   <h2>Topdressing works when soil change is allowed to accumulate</h2>
-  <p>Topdressing is not a one-time fix. It changes soil by slowly rebuilding how the surface layer behaves.</p>
-  <p>When the soil changes, the lawn changes with it.</p>
+  <p>Topdressing is not a single-event solution. Its impact comes from gradual, layered changes in how the surface soil behaves.</p>
+  <p>As soil function rebuilds, the lawn responds in step.</p>
 </main>
 
 <footer class="site-footer">
