--- a/soil-fertilizer/how-traffic-affects-soil-health.html
+++ b/soil-fertilizer/how-traffic-affects-soil-health.html
@@ -57,36 +57,36 @@
   <h1>How Traffic Affects Soil Health</h1>
 
   <h2>Traffic presses the life out of soil</h2>
-  <p>Soil works because it has tiny open spaces that hold air and let water move. Traffic squeezes those spaces shut. The ground becomes denser, oxygen drops, and roots lose room to spread.</p>
-  <p>You notice this first in the places that get walked on the most, even if the lawn gets the same water and fertilizer everywhere.</p>
+  <p>Soil functions because microscopic spaces hold air and allow water to move. Repeated foot traffic or equipment weight compresses those spaces, increasing density and reducing oxygen while limiting room for roots to spread.</p>
+  <p>The earliest effects tend to appear in high-use zones, even when watering and fertilizer are uniform across the lawn.</p>
 
   <h2>Compaction starts at the surface and traps roots</h2>
-  <p>Repeated pressure packs the top layer into a hard cap. Water has a harder time soaking in, and roots stay shallow because the soil below is too tight to push through.</p>
-  <p>You notice this as grass that pulls up easily, burns out faster in heat, and dies in footprints, paths, and play areas.</p>
+  <p>Ongoing pressure forms a dense surface layer that behaves like a cap. Infiltration slows, and roots remain shallow because resistance below prevents downward growth.</p>
+  <p>This leads to turf that lifts easily, burns out faster in heat, and fails first along paths, play areas, and repeated walking routes.</p>
 
   <h2>Traffic changes how water behaves in the same spot</h2>
-  <p>When soil tightens up, water stops soaking in evenly and starts following the easiest path. Some areas stay dry because water runs off, while other areas stay wet because water can’t drain through.</p>
-  <p>You notice this as puddles after irrigation, dry rings around the edges of traffic zones, or a lawn that seems to need more water but still looks stressed.</p>
+  <p>As soil tightens, water no longer spreads evenly. Some areas shed moisture before roots can use it, while adjacent sections stay wet because drainage pathways collapse.</p>
+  <p>The result is puddling after irrigation, dry margins around compacted zones, or a lawn that appears thirsty while still under stress.</p>
 
   <h2>Soil health problems show up as pattern failures</h2>
-  <p>The lawn doesn’t decline randomly. It declines in the exact shapes that match pressure. That happens because soil is the system underneath everything, not just a place roots sit, the same way described in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a>.</p>
-  <p>You notice this as worn corridors, thin bands along fences or gates, dead circles around trampoline legs, and bare patches where people turn or stop.</p>
+  <p>Lawn decline follows pressure patterns rather than appearing randomly. Because soil is the functional system beneath everything, damage reflects where force is applied, as explained in <a href="/soil-fertilizer/what-lawn-soil-actually-is.html">what lawn soil actually is</a>.</p>
+  <p>These patterns show up as worn corridors, thinning along fences or gates, dead rings around stationary objects, and bare patches where movement concentrates.</p>
 
   <h2>Traffic hides the real cause when you only look at grass</h2>
-  <p>When compaction is the mechanism, symptoms look like watering problems, disease, or “bad grass.” Fixes fail because they treat the surface while the soil stays sealed.</p>
-  <p>You notice this when the same spot keeps failing after reseeding, fertilizing, or increasing irrigation, which is why <a href="/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html">diagnosing soil issues correctly</a> changes what you do next.</p>
+  <p>When compaction drives the failure, symptoms resemble watering issues, disease, or poor turf quality. Surface treatments miss the cause because the soil remains sealed.</p>
+  <p>Repeated reseeding, feeding, or irrigation changes often fail in the same locations, which is why <a href="/soil-fertilizer/how-to-diagnose-soil-issues-correctly.html">diagnosing soil issues correctly</a> alters the next steps.</p>
 
   <h2>Organic matter is the shock absorber that traffic destroys</h2>
-  <p>Organic matter helps soil resist compaction by keeping it springy and crumbly. Heavy traffic breaks that structure down and speeds up settling and sealing.</p>
-  <p>You notice this as soil that turns hard faster each season unless there is enough organic material in the mix, the same threshold described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
+  <p>Organic material helps soil resist compression by maintaining elasticity and aggregation. Heavy or repeated traffic breaks that structure down, accelerating settling and surface sealing.</p>
+  <p>Over time, soil hardens faster each season unless organic levels remain near the range discussed in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
 
   <h2>Compacted soil makes the lawn dependent on constant effort</h2>
-  <p>When soil can’t breathe and roots stay shallow, grass can’t store water or recover after stress. The lawn loses resilience because the base is damaged.</p>
-  <p>You notice this as a lawn that looks fine only when conditions are perfect, then falls apart quickly as soon as heat, drought, or heavy use hits.</p>
+  <p>Restricted oxygen and shallow rooting reduce the lawn’s ability to store water or recover after stress. Resilience drops because the foundation can no longer buffer extremes.</p>
+  <p>The lawn may hold together briefly under ideal conditions, then decline rapidly during heat, drought, or heavy use.</p>
 
   <h2>Traffic damage spreads because it changes behavior</h2>
-  <p>Once an area thins, people and equipment naturally step around it, which shifts pressure to the edges. That compacts the surrounding soil next, expanding the weak zone.</p>
-  <p>You notice this as bare spots that slowly widen into larger problem areas even though you “didn’t do anything new.”</p>
+  <p>Once an area thins, foot traffic naturally shifts around it, concentrating pressure along the edges. That new pressure compacts adjacent soil and expands the weak zone.</p>
+  <p>Over time, isolated bare spots widen into larger problem areas even without any obvious change in use.</p>
 </main>
 
 <footer class="site-footer">
