--- a/soil-fertilizer/mistakes-that-damage-lawn-soil.html
+++ b/soil-fertilizer/mistakes-that-damage-lawn-soil.html
@@ -57,36 +57,36 @@
   <h1>Mistakes That Damage Lawn Soil</h1>
 
   <h2>Working soil when it’s too wet</h2>
-  <p>Wet soil compresses easily because water fills the air spaces that normally resist pressure. Foot traffic, mowing, or equipment collapse the structure instead of springing back.</p>
-  <p>You notice this later as hard ground, shallow roots, and areas that stay slick or muddy after rain.</p>
+  <p>When soil is saturated, water fills the air spaces that normally absorb pressure. Any traffic or equipment compresses particles together instead of allowing them to rebound.</p>
+  <p>The damage shows up later as hardened ground, restricted root depth, and areas that remain slick or muddy long after rain.</p>
 
-  <h2>Overwatering breaks soil structure</h2>
-  <p>Frequent shallow watering keeps soil saturated near the surface. Oxygen leaves, particles seal together, and roots stop growing downward.</p>
-  <p>You notice grass wilting quickly between waterings even though the surface stays damp.</p>
+  <h2>Overwatering disrupts soil stability</h2>
+  <p>Repeated shallow watering keeps the upper layer saturated while deeper zones stay dry. Oxygen exchange drops, surface particles seal, and roots stop moving downward.</p>
+  <p>The result is grass that wilts quickly between cycles even though the soil surface never fully dries.</p>
 
   <h2>Assuming new soil is good soil</h2>
-  <p>Fill dirt and disturbed ground lack structure and biological activity. They settle tightly and drain poorly.</p>
-  <p>You notice fast decline in newer areas that behave like the conditions described in <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">why new construction soil is bad</a>.</p>
+  <p>Recently disturbed or imported soil often lacks aggregation and biological activity. As it settles, it tightens and drains unpredictably.</p>
+  <p>Rapid decline in these areas often mirrors the limitations outlined in <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">why new construction soil is bad</a>.</p>
 
   <h2>Feeding soil problems instead of fixing them</h2>
-  <p>Fertilizer doesn’t rebuild pore space or restore oxygen flow. In damaged soil, nutrients concentrate unevenly or wash away.</p>
-  <p>You notice color changes without strength, the same surface response explained in <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">how fertilizer affects grass color</a>.</p>
+  <p>Nutrients don’t restore pore space or improve oxygen flow. In compromised soil, fertilizer may concentrate unevenly or move away from roots altogether.</p>
+  <p>The visible response is often temporary color without durability, similar to the surface effect described in <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">how fertilizer affects grass color</a>.</p>
 
   <h2>Removing too much organic input</h2>
-  <p>Bagging clippings, heavy dethatching, and aggressive cleanup remove material that feeds soil recovery. Without replacement, soil loses resilience.</p>
-  <p>You notice soil drying faster and grass losing density year after year.</p>
+  <p>Clipping removal, aggressive dethatching, and excessive cleanup strip away material that supports soil recovery. Without replacement, structure weakens over time.</p>
+  <p>This leads to faster drying, declining density, and reduced resilience season after season.</p>
 
   <h2>Repeating traffic in the same paths</h2>
-  <p>Pressure applied in the same places compounds damage. Soil doesn’t recover before the next pass.</p>
-  <p>You notice thinning lanes and compacted strips that never bounce back.</p>
+  <p>Pressure applied to identical routes compounds compaction faster than soil can recover. Each pass adds to the previous damage.</p>
+  <p>Over time, this creates thinning lanes and dense strips that never fully rebound.</p>
 
   <h2>Chasing symptoms instead of causes</h2>
-  <p>Color, weeds, and bare spots distract from the physical soil failures underneath. Treating symptoms leaves the damage in place.</p>
-  <p>You notice problems returning to the same locations regardless of treatment.</p>
+  <p>Surface issues like color loss, weeds, or bare patches draw attention away from underlying physical failures. Treating symptoms leaves the real problem untouched.</p>
+  <p>The same spots continue failing regardless of how often they’re treated.</p>
 
   <h2>Soil damage accumulates quietly</h2>
-  <p>Most mistakes don’t ruin soil instantly. They weaken it a little at a time.</p>
-  <p>By the time failure is obvious, the damage has been building for years.</p>
+  <p>Most harmful actions don’t cause immediate collapse. They weaken soil gradually.</p>
+  <p>By the time lawn failure is obvious, years of structural damage have already built up.</p>
 </main>
 
 <footer class="site-footer">
