--- a/soil-fertilizer/signs-soil-changes-are-failing.html
+++ b/soil-fertilizer/signs-soil-changes-are-failing.html
@@ -57,40 +57,40 @@
   <h1>Signs Soil Changes Are Failing</h1>
 
   <h2>Water stops soaking in consistently</h2>
-  <p>When soil structure collapses again, pore space closes and water movement slows or reverses. Improvements that once helped infiltration no longer hold.</p>
-  <p>You notice runoff, surface pooling, or dry crust forming even though watering hasn’t changed.</p>
+  <p>When soil structure collapses again, pore space closes and water movement slows or reverses. Improvements that once supported infiltration no longer persist.</p>
+  <p>Runoff increases, surface pooling becomes common, and dry crusts form even under unchanged watering schedules.</p>
 
   <h2>The ground hardens after each stress</h2>
-  <p>Failing soil loses elasticity. Rain, heat, or foot traffic compress it faster than it can rebound.</p>
-  <p>You notice the lawn feeling firmer every time conditions get tough instead of recovering.</p>
+  <p>Soil that is losing structure rebounds less after pressure. Rain, heat, or traffic compress it faster than recovery can occur.</p>
+  <p>Each stress cycle leaves the surface denser than before rather than returning to its prior condition.</p>
 
   <h2>Roots stall at the same shallow depth</h2>
-  <p>When soil improvements fail, roots hit the same physical barrier again. Oxygen and space disappear below that line.</p>
-  <p>You notice probes stopping at the same depth months later with no progress.</p>
+  <p>Failed soil changes leave the same physical barrier intact. Oxygen and usable space disappear below a fixed line.</p>
+  <p>Probing continues to meet resistance at the same depth months later, showing no expansion of the root zone.</p>
 
   <h2>Heat stress returns sooner each season</h2>
-  <p>Weak soil can’t buffer temperature or moisture swings. As structure degrades, stress arrives earlier and lasts longer.</p>
-  <p>You notice problems lining up with patterns explained in <a href="/soil-fertilizer/why-soil-behaves-differently-in-summer.html">why soil behaves differently in summer</a>.</p>
+  <p>As structure weakens, soil loses its ability to buffer temperature and moisture swings. Stress arrives earlier and persists longer.</p>
+  <p>This timing aligns with the seasonal patterns explained in <a href="/soil-fertilizer/why-soil-behaves-differently-in-summer.html">why soil behaves differently in summer</a>.</p>
 
   <h2>Inputs stop lasting</h2>
-  <p>When soil fails, water drains or evaporates faster and nutrients move unpredictably. Benefits shorten instead of stacking.</p>
-  <p>You notice needing more frequent watering or feeding for the same result.</p>
+  <p>Failing soil no longer regulates water or nutrients effectively. Benefits from watering or feeding shorten instead of building.</p>
+  <p>Higher frequency is required just to maintain previous results.</p>
 
   <h2>Thin areas begin spreading again</h2>
-  <p>Soil regression opens space for failure to expand outward. Weak zones grow instead of stabilizing.</p>
-  <p>You notice declining patches widening instead of holding their edges.</p>
+  <p>As soil regresses, weak zones lose their edges. Instability expands outward instead of consolidating.</p>
+  <p>Previously defined patches widen rather than holding their boundaries.</p>
 
   <h2>Grass loses strength before color</h2>
-  <p>Leaves can stay green while roots weaken. Structural failure shows up as softness, pull-up, and poor anchoring first.</p>
-  <p>You notice grass tearing or lifting easily during mowing or foot traffic.</p>
+  <p>Leaf color can persist while root anchoring fails. Structural weakness shows up as poor grip and reduced resistance first.</p>
+  <p>Turf tears, lifts, or shifts easily under mowing or foot traffic.</p>
 
   <h2>Seasonal recovery slows instead of improves</h2>
-  <p>Healthy soil rebounds faster after stress. Failing soil takes longer each cycle.</p>
-  <p>You notice longer gaps between damage and recovery.</p>
+  <p>Healthy soil rebounds faster with each cycle. When soil changes fail, recovery time lengthens instead.</p>
+  <p>The gap between damage and functional recovery grows longer season by season.</p>
 
   <h2>Failure points back to soil, not grass</h2>
-  <p>When changes fail, the same patterns reappear regardless of grass type or care level.</p>
-  <p>Those outcomes match what happens when <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">weak soil weakens grass</a>, not when maintenance is wrong.</p>
+  <p>When soil changes break down, the same patterns return regardless of grass type or maintenance approach.</p>
+  <p>Those outcomes match the mechanisms described in <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">why weak soil weakens grass</a>, not simple care errors.</p>
 </main>
 
 <footer class="site-footer">
