--- a/soil-fertilizer/signs-soil-changes-are-working.html
+++ b/soil-fertilizer/signs-soil-changes-are-working.html
@@ -56,41 +56,41 @@
 <main class="container">
   <h1>Signs Soil Changes Are Working</h1>
 
-  <h2>Water starts soaking in instead of running off</h2>
-  <p>When soil structure improves, pore space opens and water moves downward instead of sideways. This happens before grass growth noticeably changes.</p>
-  <p>You notice fewer puddles, less runoff, and irrigation disappearing into the ground faster.</p>
+  <h2>Water begins moving into the ground instead of across it</h2>
+  <p>As soil structure starts reopening, pore space allows water to travel downward rather than shedding sideways. This shift usually happens before any obvious change in turf appearance.</p>
+  <p>Runoff decreases, puddles clear faster, and irrigation no longer lingers on the surface.</p>
 
-  <h2>The ground feels resilient instead of hard</h2>
-  <p>Improving soil regains elasticity as air and organic material return. Pressure no longer collapses it instantly.</p>
-  <p>You notice the lawn feeling springy underfoot instead of compacted or crusted.</p>
+  <h2>The surface regains give instead of staying rigid</h2>
+  <p>Recovering soil develops elasticity as air movement and organic material return. Pressure compresses it less permanently.</p>
+  <p>The ground feels springy underfoot rather than sealed, crusted, or brick-hard.</p>
 
-  <h2>Roots grow deeper before grass thickens</h2>
-  <p>Soil changes succeed when roots regain space and oxygen. Deeper roots form before surface density improves.</p>
-  <p>You notice roots extending further down when probing, even if the lawn still looks average on top.</p>
+  <h2>Root depth increases ahead of visible density</h2>
+  <p>Effective soil correction shows up first below ground. Roots extend deeper once oxygen and space return, well before canopy thickness improves.</p>
+  <p>Probing reveals greater depth even when the lawn still looks unremarkable from above.</p>
 
-  <h2>Stress recovery speeds up</h2>
-  <p>Functional soil allows roots to replace damage quickly. Heat, mowing, and traffic cause less lasting harm.</p>
-  <p>You notice faster bounce-back after stress instead of lingering thin spots.</p>
+  <h2>Recovery from stress accelerates</h2>
+  <p>When soil function improves, roots replace damage more efficiently. Heat, mowing, and traffic leave less lasting impact.</p>
+  <p>Bare or thin areas rebound faster instead of lingering.</p>
 
-  <h2>Problem areas stop expanding</h2>
-  <p>When soil behavior improves, existing weak spots stabilize instead of spreading outward.</p>
-  <p>You notice damaged areas holding their size instead of growing each season, breaking the cycle described in <a href="/soil-fertilizer/why-soil-problems-come-back-each-year.html">why soil problems come back each year</a>.</p>
+  <h2>Weak zones stop creeping outward</h2>
+  <p>Improved soil behavior stabilizes existing problem areas. Decline slows rather than spreading.</p>
+  <p>Damaged patches hold their edges instead of expanding each year, interrupting the cycle described in <a href="/soil-fertilizer/why-soil-problems-come-back-each-year.html">why soil problems come back each year</a>.</p>
 
-  <h2>Inputs begin lasting longer</h2>
-  <p>Water and nutrients stay in the root zone once soil can regulate them. Efficiency increases without higher rates.</p>
-  <p>You notice fewer swings between green-up and decline.</p>
+  <h2>Water and nutrients remain effective longer</h2>
+  <p>Once soil can regulate movement and storage, inputs persist in the root zone instead of flushing or spiking.</p>
+  <p>The lawn shows fewer swings between short-lived green-up and rapid decline.</p>
 
-  <h2>Weeds lose momentum</h2>
-  <p>As grass roots occupy more space, weeds lose the gaps they rely on to establish.</p>
-  <p>You notice fewer new weeds without increasing control measures.</p>
+  <h2>Weed pressure begins to fade</h2>
+  <p>As grass roots occupy more volume, open niches close and weed establishment becomes harder.</p>
+  <p>Fewer new weeds appear without increasing control efforts.</p>
 
-  <h2>Soil changes show before cosmetic improvement</h2>
-  <p>Physical improvements happen underground first. Color and density follow later.</p>
-  <p>You notice patience paying off once the signs match those that appear when <a href="/soil-fertilizer/when-soil-is-the-real-problem.html">soil is the real problem</a>.</p>
+  <h2>Functional gains precede cosmetic ones</h2>
+  <p>Physical improvement always occurs underground first. Color and thickness follow after structure stabilizes.</p>
+  <p>Progress becomes clear once results match what happens when <a href="/soil-fertilizer/when-soil-is-the-real-problem.html">soil is the real problem</a> rather than surface care.</p>
 
-  <h2>Progress looks boring at first</h2>
-  <p>Working soil changes don’t produce dramatic overnight results.</p>
-  <p>They produce steady, measurable improvement that doesn’t disappear the next season.</p>
+  <h2>Early progress looks uneventful</h2>
+  <p>Successful soil work rarely delivers dramatic overnight changes.</p>
+  <p>Instead, it produces steady improvement that holds through the next season.</p>
 </main>
 
 <footer class="site-footer">
