--- a/soil-fertilizer/when-soil-is-the-real-problem.html
+++ b/soil-fertilizer/when-soil-is-the-real-problem.html
@@ -58,39 +58,39 @@
 
   <h2>Grass problems repeat even when care is correct</h2>
   <p>When soil can’t regulate water, air, and nutrients, surface care stops mattering. The same issues return regardless of watering, mowing, or feeding.</p>
-  <p>You notice effort increasing while results stay flat or decline.</p>
+  <p>Effort goes up while performance stays flat or slips backward.</p>
 
   <h2>Water behaves unpredictably</h2>
   <p>Soil structure controls whether water infiltrates, pools, or runs off. Broken structure causes uneven moisture even with consistent irrigation.</p>
-  <p>You notice dry stress and puddling happening side by side, which matches how <a href="/soil-fertilizer/how-soil-interacts-with-watering.html">soil interacts with watering</a>.</p>
+  <p>Dry stress and puddling show up side by side, reflecting the same behavior explained in <a href="/soil-fertilizer/how-soil-interacts-with-watering.html">how soil interacts with watering</a>.</p>
 
   <h2>Nutrients stop producing reliable results</h2>
   <p>Soil stores and releases nutrients through pore space, organic material, and exchange sites. When those fail, nutrients concentrate or wash away.</p>
-  <p>You notice fertilizer working briefly or unevenly, reflecting how <a href="/soil-fertilizer/how-soil-stores-nutrients.html">soil stores nutrients</a>.</p>
+  <p>Fertilizer response becomes brief or inconsistent, matching the limits described in <a href="/soil-fertilizer/how-soil-stores-nutrients.html">how soil stores nutrients</a>.</p>
 
   <h2>Roots can’t support surface growth</h2>
   <p>Leaves respond faster than roots. When soil limits oxygen or depth, root systems weaken while top growth continues.</p>
-  <p>You notice grass tearing, lifting, or collapsing under minor stress.</p>
+  <p>Under light stress, turf begins tearing, lifting, or collapsing instead of holding firm.</p>
 
   <h2>Problems appear disconnected from causes</h2>
   <p>Soil failure develops slowly underground. By the time grass shows damage, the original cause is easy to miss.</p>
-  <p>You notice confusion that follows the same pattern described in <a href="/soil-fertilizer/why-soil-problems-are-often-missed.html">why soil problems are often missed</a>.</p>
+  <p>This delay creates the same diagnostic confusion outlined in <a href="/soil-fertilizer/why-soil-problems-are-often-missed.html">why soil problems are often missed</a>.</p>
 
   <h2>Fixes stop stacking</h2>
   <p>When soil is healthy, improvements build on each other. When soil is broken, each fix works alone and then fades.</p>
-  <p>You notice progress resetting instead of accumulating.</p>
+  <p>Any short-term gain resets instead of carrying forward.</p>
 
   <h2>Stress exposes soil limits first</h2>
   <p>Heat, cold, and heavy rain test soil capacity before grass fails. Weak soil shows damage early in stress cycles.</p>
-  <p>You notice problems appearing during weather swings rather than after care changes.</p>
+  <p>Failure lines up with weather shifts rather than changes in maintenance.</p>
 
   <h2>Grass type and products stop mattering</h2>
   <p>No grass variety or product can overcome missing oxygen, depth, or stability.</p>
-  <p>You notice identical failure patterns across different treatments.</p>
+  <p>The same breakdown patterns persist across different treatments.</p>
 
   <h2>When soil is the real problem, everything points downward</h2>
   <p>Surface symptoms are downstream effects.</p>
-  <p>Lasting improvement begins only when soil function is restored.</p>
+  <p>Recovery only begins once soil function itself is restored.</p>
 </main>
 
 <footer class="site-footer">
