--- a/soil-fertilizer/when-soil-issues-mean-starting-over.html
+++ b/soil-fertilizer/when-soil-issues-mean-starting-over.html
@@ -58,31 +58,31 @@
 
   <h2>Starting over is needed when the root zone can’t recover</h2>
   <p>Fixing soil works when roots can still expand and rebuild structure over time. Starting over becomes necessary when roots can’t penetrate, breathe, or stay alive long enough to change the soil they’re in.</p>
-  <p>You notice this when the same areas fail every season no matter what you do.</p>
+  <p>In that situation, the same areas fail every season no matter what you do.</p>
 
   <h2>Failure becomes permanent when the problem is deeper than your fixes</h2>
   <p>Most lawn-level fixes work near the surface. If the hardpan, compaction, or dead layer sits deeper, it stays in control while the top layer improves briefly.</p>
-  <p>You notice the surface looking better for a while, then slipping back to the same failure pattern.</p>
+  <p>The surface can look better for a while, then slip back into the same failure pattern.</p>
 
   <h2>Amendments can’t rebuild structure through a locked layer</h2>
   <p>Amendments help by changing how particles bind and how water moves, but they don’t break through a dense barrier on their own.</p>
-  <p>You notice short-lived improvement that matches the limits described in <a href="/soil-fertilizer/how-amendments-change-soil-structure.html">how amendments change soil structure</a>.</p>
+  <p>Any progress tends to be short-lived, which fits the limits described in <a href="/soil-fertilizer/how-amendments-change-soil-structure.html">how amendments change soil structure</a>.</p>
 
   <h2>Organic matter has a minimum effective amount</h2>
   <p>Small additions don’t change soil behavior. Soil needs enough organic material in the root zone to hold moisture, keep air space open, and feed biology.</p>
-  <p>You notice no lasting shift until you reach the levels described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
+  <p>Until the levels described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a> are reached, no lasting shift shows up.</p>
 
   <h2>Some soils can’t hold improvements in place</h2>
   <p>Very sandy soil lets water and organic inputs move through too fast to build a stable root zone. Improvements don’t accumulate where grass needs them.</p>
-  <p>You notice constant drying and weak rooting that follows the same behavior described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>.</p>
+  <p>Constant drying and weak rooting show up, matching the behavior described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>.</p>
 
   <h2>Starting over is the point where effort stops stacking</h2>
   <p>If every improvement fades and resets, the soil system isn’t rebuilding. At that point, more surface work becomes maintenance of failure rather than recovery.</p>
-  <p>You notice “fixes” working only while you’re actively applying them.</p>
+  <p>Fixes only hold while they’re being actively applied, then fade once the push stops.</p>
 
   <h2>The visible signs are repeat failure and no progress</h2>
   <p>Soil issues mean starting over when root depth stays shallow, water behavior stays wrong, and weak spots keep expanding.</p>
-  <p>You notice the lawn never building strength, only cycling between temporary green-up and decline.</p>
+  <p>Over time the lawn never builds strength, cycling between temporary green-up and decline instead.</p>
 
   <h2>Starting over is a soil decision, not a grass decision</h2>
   <p>Replacing grass without changing the root zone repeats the same outcome.</p>
