--- a/soil-fertilizer/when-soil-problems-are-permanent.html
+++ b/soil-fertilizer/when-soil-problems-are-permanent.html
@@ -58,39 +58,39 @@
 
   <h2>Soil becomes permanent when roots can’t return</h2>
   <p>Grass repairs soil through root growth. When roots can’t penetrate, breathe, or survive long enough to rebuild structure, recovery stops.</p>
-  <p>You notice this as areas that never thicken, no matter how carefully they’re watered or fed.</p>
+  <p>Areas remain thin season after season despite careful watering and feeding.</p>
 
   <h2>Loss of soil depth ends recovery</h2>
   <p>When erosion, grading, or removal reduces the root zone too much, there’s nowhere for roots to expand.</p>
-  <p>You notice exposed roots, hard subsoil, or grass that pulls up easily even after years of effort.</p>
+  <p>Exposed roots, hard subsoil, or grass that lifts easily persist even after years of effort.</p>
 
   <h2>Collapsed structure can become locked in place</h2>
   <p>Severely compacted or sealed soil can reach a point where air and water movement no longer reopen pores.</p>
-  <p>You notice probes stopping abruptly just inches down and no improvement after repeated treatments.</p>
+  <p>Probes hit an abrupt stop just inches down, with repeated treatments producing no change.</p>
 
   <h2>Sandy profiles can’t retain rebuilding material</h2>
   <p>In extremely sandy soils, water and organic inputs move through too quickly to rebuild structure or biology.</p>
-  <p>You notice behavior that never changes, matching the limits described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>.</p>
+  <p>Behavior stays unchanged over time, aligning with the limits described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>.</p>
 
   <h2>Biology collapse removes soil’s repair system</h2>
   <p>Microbes and roots stabilize soil particles. When biological activity drops too low, structure can’t reform.</p>
-  <p>You notice soil that never develops the signs described in <a href="/soil-fertilizer/signs-of-healthy-lawn-soil.html">healthy lawn soil</a>, even with organic inputs.</p>
+  <p>The soil never develops the indicators outlined in <a href="/soil-fertilizer/signs-of-healthy-lawn-soil.html">healthy lawn soil</a>, even after organic inputs.</p>
 
   <h2>Persistent stress attracts secondary problems</h2>
   <p>Weak soil creates constant plant stress, which opens the door to insects and disease.</p>
-  <p>You notice recurring infestations tied to the conditions explained in <a href="/weeds-pests/why-lawn-pests-appear-suddenly.html">why lawn pests appear suddenly</a>.</p>
+  <p>Recurring infestations follow the conditions explained in <a href="/weeds-pests/why-lawn-pests-appear-suddenly.html">why lawn pests appear suddenly</a>.</p>
 
   <h2>Permanent problems are often missed early</h2>
   <p>Soil decline looks manageable in early stages. By the time symptoms are obvious, recovery options narrow.</p>
-  <p>You notice missed warning signs that match the patterns in <a href="/soil-fertilizer/why-soil-problems-are-often-missed.html">why soil problems are often missed</a>.</p>
+  <p>Earlier warning signs match the patterns described in <a href="/soil-fertilizer/why-soil-problems-are-often-missed.html">why soil problems are often missed</a>.</p>
 
   <h2>Permanent doesn’t mean sudden</h2>
   <p>Soil rarely fails all at once. It crosses a threshold where repair no longer keeps up with collapse.</p>
-  <p>From that point forward, care only slows decline instead of reversing it.</p>
+  <p>After that threshold, care only slows decline instead of reversing it.</p>
 
   <h2>Knowing the limit prevents wasted effort</h2>
   <p>Recognizing permanent soil problems saves time, money, and frustration.</p>
-  <p>When soil can’t recover, replacement or redesign becomes the only real solution.</p>
+  <p>Once recovery is no longer possible, replacement or redesign becomes the only real solution.</p>
 </main>
 
 <footer class="site-footer">
