--- a/soil-fertilizer/when-soil-replacement-makes-sense.html
+++ b/soil-fertilizer/when-soil-replacement-makes-sense.html
@@ -58,35 +58,35 @@
 
   <h2>Replacement becomes necessary when movement is gone</h2>
   <p>Soil supports grass only while air, water, and roots can move through it. When compaction, grading, or long-term stress collapse those paths through the entire root zone, soil stops functioning as a growing medium.</p>
-  <p>You notice this as grass that never thickens, stays shallow-rooted, and fails no matter how carefully it’s watered or fed.</p>
+  <p>Grass remains thin, shallow-rooted, and unstable despite careful watering and feeding.</p>
 
   <h2>Repeated surface fixes failing is the first warning</h2>
   <p>When reseeding, fertilizing, and irrigation adjustments stop producing lasting improvement, the failure is no longer on the surface. The soil underneath cannot support recovery.</p>
-  <p>You see this pattern clearly in lawns that decline the same way described in <a href="/weeds-pests/why-lawns-fail-despite-care.html">why lawns fail despite care</a>.</p>
+  <p>This pattern shows up clearly in lawns that decline the same way described in <a href="/weeds-pests/why-lawns-fail-despite-care.html">why lawns fail despite care</a>.</p>
 
   <h2>Amendments stop working when soil is sealed too deep</h2>
   <p>Amendments improve soil by changing structure near the surface. If compaction or damage extends through the full root zone, those materials never reach the area roots actually need.</p>
-  <p>You notice this when improvements fade quickly or never appear at all, which is exactly the point explained in <a href="/soil-fertilizer/when-amendments-dont-help.html">when amendments don’t help</a>.</p>
+  <p>Improvement either fades quickly or never appears, which is the limitation explained in <a href="/soil-fertilizer/when-amendments-dont-help.html">when amendments don’t help</a>.</p>
 
   <h2>Long-term degradation makes soil non-recoverable</h2>
   <p>Soil that has been compacted, stripped, or waterlogged for years loses the biological and physical capacity to rebuild on its own. Each season locks the structure tighter.</p>
-  <p>You see this as thinning that spreads outward each year, the same progression described in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
+  <p>Thinning spreads outward year after year, following the same progression described in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
 
   <h2>Water behavior reveals when replacement is needed</h2>
   <p>Soil that needs replacement handles water poorly because pathways no longer exist. Water either sits on the surface or disappears without wetting the root zone.</p>
-  <p>You notice this as constant puddles, spongy ground, or dry stress even with frequent irrigation.</p>
+  <p>Constant puddling, spongy ground, or dry stress persist even with frequent irrigation.</p>
 
   <h2>Roots staying shallow signals structural failure</h2>
   <p>Roots grow only where soil allows them. When the entire profile is tight, roots remain shallow and fragile.</p>
-  <p>You notice grass pulling up easily, burning out quickly in heat, and dying in solid patches instead of thinning gradually.</p>
+  <p>Grass pulls up easily, burns out quickly in heat, and dies in solid patches instead of thinning gradually.</p>
 
   <h2>Replacement resets the root zone</h2>
   <p>Replacing soil removes the sealed layer and restores open structure through the depth roots need. Air, water, and roots can move again.</p>
-  <p>You notice faster establishment, deeper rooting, and fewer repeat failures when replacement is done correctly.</p>
+  <p>Faster establishment, deeper rooting, and fewer repeat failures follow when replacement is done correctly.</p>
 
   <h2>Replacement is a last step, not a shortcut</h2>
   <p>Soil replacement makes sense only when recovery is no longer physically possible. It solves problems that products and maintenance cannot.</p>
-  <p>When soil can’t be fixed, replacing it is the only way to give the lawn a working foundation again.</p>
+  <p>Once soil can’t be fixed, replacing it is the only way to give the lawn a working foundation again.</p>
 </main>
 
 <footer class="site-footer">
