--- a/soil-fertilizer/why-fixing-soil-improves-everything.html
+++ b/soil-fertilizer/why-fixing-soil-improves-everything.html
@@ -58,39 +58,39 @@
 
   <h2>Soil sets the limits for every other input</h2>
   <p>Water, fertilizer, seed, and mowing only work if soil allows roots to function. When soil restricts air, water, or root movement, every surface action loses effectiveness.</p>
-  <p>You notice this as a lawn that never responds the way instructions say it should.</p>
+  <p>The result is a lawn that never behaves the way standard care guidelines predict.</p>
 
   <h2>Healthy soil stabilizes root temperature</h2>
   <p>Soil with structure buffers heat and cold by holding air and moisture evenly. Broken soil swings temperature faster and harder.</p>
-  <p>You notice less heat stress and faster recovery once soil behaves like it should under the conditions described in <a href="/soil-fertilizer/how-soil-temperature-affects-roots.html">how soil temperature affects roots</a>.</p>
+  <p>Heat stress eases and recovery shortens once soil moderates temperature as outlined in <a href="/soil-fertilizer/how-soil-temperature-affects-roots.html">how soil temperature affects roots</a>.</p>
 
   <h2>Watering starts working when soil absorbs correctly</h2>
   <p>Good soil pulls water down and spreads it through the root zone. Poor soil sheds it or traps it.</p>
-  <p>You notice fewer dry spots, less puddling, and more predictable moisture once soil structure improves.</p>
+  <p>Instead of random dry patches or standing water, moisture distribution becomes consistent as structure improves.</p>
 
   <h2>Fertilizer becomes efficient instead of risky</h2>
   <p>Healthy soil stores nutrients and releases them gradually. Weak soil lets them wash away or burn roots.</p>
-  <p>You notice smaller fertilizer applications lasting longer instead of fading quickly.</p>
+  <p>Smaller applications begin producing longer-lasting results rather than brief green-up followed by decline.</p>
 
   <h2>Roots rebuild faster in functioning soil</h2>
   <p>Grass constantly replaces roots lost to heat, mowing, and traffic. Soil with air and space allows that cycle to continue.</p>
-  <p>You notice quicker bounce-back after stress once soil recovery timelines align with <a href="/soil-fertilizer/how-long-it-takes-to-fix-soil-issues.html">how long it takes to fix soil issues</a>.</p>
+  <p>Recovery after stress accelerates once soil response matches the timelines described in <a href="/soil-fertilizer/how-long-it-takes-to-fix-soil-issues.html">how long it takes to fix soil issues</a>.</p>
 
   <h2>Weeds lose their advantage naturally</h2>
   <p>When grass roots occupy the full soil profile, there’s no open space for fast-growing weeds to exploit.</p>
-  <p>You notice fewer new weeds appearing without increasing chemical control.</p>
+  <p>Fewer new weeds establish because competitive gaps in the soil stop forming.</p>
 
   <h2>Disease pressure drops without direct treatment</h2>
   <p>Healthy soil drains excess moisture and supports strong roots. Disease organisms lose the conditions they need.</p>
-  <p>You notice fewer recurring patches once soil stops staying wet or compacted.</p>
+  <p>Recurring patches decline as soil stops staying wet, sealed, or oxygen-poor.</p>
 
   <h2>Soil improvements stack instead of disappearing</h2>
   <p>Fixes applied to functioning soil build on each other. Fixes applied to broken soil fade.</p>
-  <p>You notice steady improvement instead of temporary gains once soil follows the natural development described in <a href="/soil-fertilizer/how-soil-forms-in-yards.html">how soil forms in yards</a>.</p>
+  <p>Progress holds season to season once soil follows the development process described in <a href="/soil-fertilizer/how-soil-forms-in-yards.html">how soil forms in yards</a>.</p>
 
   <h2>Everything improves because soil is upstream</h2>
   <p>Soil is the first system every other lawn process depends on.</p>
-  <p>When that system works, everything else finally does too.</p>
+  <p>Once that system works, the rest begin working automatically.</p>
 </main>
 
 <footer class="site-footer">
