--- a/soil-fertilizer/why-frozen-soil-damages-lawns.html
+++ b/soil-fertilizer/why-frozen-soil-damages-lawns.html
@@ -58,39 +58,39 @@
 
   <h2>Freezing turns water into a wedge inside soil</h2>
   <p>When soil contains moisture and temperatures drop, that water freezes and expands. The expansion pushes soil particles apart and lifts the surface.</p>
-  <p>You notice this later as uneven ground, lifted turf, and grass that feels loose when you walk on it.</p>
+  <p>After thaw, the ground often shows uneven settling, raised turf sections, and loose footing under normal traffic.</p>
 
   <h2>Thawing packs soil tighter than before</h2>
   <p>After ice melts, gravity pulls the loosened soil back down. Fine particles settle into the open spaces left behind, sealing air pockets.</p>
-  <p>You notice this as soil that dries into a hard crust and footprints that linger longer once spring arrives.</p>
+  <p>As spring progresses, the surface frequently dries into a firm crust and compressed footprints remain visible far longer than expected.</p>
 
   <h2>Roots break before grass shows damage</h2>
   <p>As soil shifts up and down, roots stretch, snap, or lose contact with surrounding soil. Grass blades survive briefly using stored energy.</p>
-  <p>You notice damage weeks later as thinning, patchy dieback, and turf that pulls up easily even though winter seemed mild.</p>
+  <p>Weeks later, thinning turf, patchy dieback, and weak anchoring appear even though winter conditions did not seem extreme.</p>
 
   <h2>Frozen soil blocks oxygen during critical periods</h2>
   <p>Ice-filled pores stop air movement entirely. Roots trapped in frozen or saturated soil can’t breathe until thawing restores flow.</p>
-  <p>You notice this as yellowing or delayed green-up that doesn’t respond to early watering or feeding.</p>
+  <p>Delayed green-up and pale coloration persist despite early-season watering or fertilizer attempts.</p>
 
   <h2>Organic matter limits freeze damage by buffering movement</h2>
   <p>Soil with enough organic material stays flexible and resists particle collapse during freeze–thaw cycles. Poor soil locks together instead.</p>
-  <p>You notice less heaving and faster spring recovery where the soil behaves the way described in <a href="/soil-fertilizer/what-organic-matter-actually-does.html">what organic matter actually does</a>.</p>
+  <p>Areas with sufficient organic content show reduced heaving and recover more quickly, consistent with the behavior described in <a href="/soil-fertilizer/what-organic-matter-actually-does.html">what organic matter actually does</a>.</p>
 
   <h2>Compaction magnifies freeze–thaw damage</h2>
   <p>Compacted soil holds more water and fewer air spaces. That creates more ice and stronger expansion forces when temperatures drop.</p>
-  <p>You notice winter damage lining up exactly with walk paths and mower tracks that already showed <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">signs of compacted lawn soil</a>.</p>
+  <p>Winter injury consistently aligns with traffic zones, paths, and equipment routes that already displayed <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">signs of compacted lawn soil</a>.</p>
 
   <h2>Repeated freeze cycles cause permanent failure</h2>
   <p>Each freeze–thaw cycle tightens soil further if nothing restores structure. Over multiple winters, the root zone loses its ability to recover.</p>
-  <p>You notice the same areas failing every spring until the decision described in <a href="/soil-fertilizer/how-to-decide-between-fixing-or-replacing-soil.html">how to decide between fixing or replacing soil</a> becomes unavoidable.</p>
+  <p>Season after season, the same sections fail until the choice outlined in <a href="/soil-fertilizer/how-to-decide-between-fixing-or-replacing-soil.html">how to decide between fixing or replacing soil</a> becomes unavoidable.</p>
 
   <h2>Winter damage is often caused by off-season mistakes</h2>
   <p>Driving, walking, or working on frozen or saturated soil increases pressure during the most vulnerable state. The damage is locked in when thawing occurs.</p>
-  <p>You notice worse spring failure following winters that included the same actions listed in <a href="/soil-fertilizer/mistakes-that-damage-lawn-soil.html">mistakes that damage lawn soil</a>.</p>
+  <p>Spring decline tends to be worse following winters that included the same actions listed in <a href="/soil-fertilizer/mistakes-that-damage-lawn-soil.html">mistakes that damage lawn soil</a>.</p>
 
   <h2>Frozen soil doesn’t kill lawns instantly</h2>
   <p>Freeze damage weakens roots and structure first. The lawn fails later when growth resumes and the root system can’t support demand.</p>
-  <p>The visible collapse in spring is the delayed result of what happened underground in winter.</p>
+  <p>The visible collapse that follows is a delayed response to structural injury that occurred underground during winter.</p>
 </main>
 
 <footer class="site-footer">
