--- a/soil-fertilizer/why-lawns-fail-despite-fertilizer.html
+++ b/soil-fertilizer/why-lawns-fail-despite-fertilizer.html
@@ -58,35 +58,35 @@
 
   <h2>Fertilizer feeds leaves, not soil structure</h2>
   <p>Fertilizer supplies nutrients directly to grass blades through roots. It does not create air space, improve drainage, or deepen the root zone.</p>
-  <p>You notice quick green-up followed by thinning, weak growth, or collapse once the surge fades.</p>
+  <p>The typical response is a brief flush of color followed by thinning, weak growth, or collapse once that nutrient surge passes.</p>
 
   <h2>Roots fail first when soil is the problem</h2>
   <p>When soil is compacted, shallow, or oxygen-poor, roots stop expanding. Fertilizer accelerates leaf growth without fixing the root limitation.</p>
-  <p>You notice grass growing fast but pulling up easily or wilting under mild stress.</p>
+  <p>Fast top growth paired with easy pull-up or rapid wilting under mild stress signals this imbalance.</p>
 
   <h2>Soil texture controls fertilizer behavior</h2>
   <p>Clay holds nutrients tightly, sand lets them wash through, and loam balances both. Fertilizer behaves differently depending on soil texture.</p>
-  <p>You notice uneven results that line up with the differences explained in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">difference between clay, sand, and loam</a>.</p>
+  <p>Uneven results tend to align with the texture differences explained in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">difference between clay, sand, and loam</a>.</p>
 
   <h2>Fertilizer magnifies existing soil damage</h2>
   <p>In weak soil, added nutrients increase salt concentration and water demand. Roots already under stress lose function faster.</p>
-  <p>You notice decline speeding up instead of reversing, which is why <a href="/soil-fertilizer/why-fertilizer-doesnt-fix-bad-soil.html">fertilizer doesn’t fix bad soil</a>.</p>
+  <p>Instead of recovery, decline accelerates, which mirrors the mechanism outlined in <a href="/soil-fertilizer/why-fertilizer-doesnt-fix-bad-soil.html">fertilizer doesn’t fix bad soil</a>.</p>
 
   <h2>Repeated feeding hides soil failure</h2>
   <p>Color improvement masks declining root health. Each application buys time without repairing the cause.</p>
-  <p>You notice problems returning faster between applications.</p>
+  <p>Shortening intervals between applications become necessary as underlying failure continues.</p>
 
   <h2>Common care mistakes worsen fertilizer response</h2>
   <p>Overwatering, traffic, and surface cleanup degrade soil structure. Fertilizer applied on top of damaged soil accelerates imbalance.</p>
-  <p>You notice patterns that match the damage described in <a href="/soil-fertilizer/mistakes-that-damage-lawn-soil.html">mistakes that damage lawn soil</a>.</p>
+  <p>These outcomes match the same structural damage patterns described in <a href="/soil-fertilizer/mistakes-that-damage-lawn-soil.html">mistakes that damage lawn soil</a>.</p>
 
   <h2>Grass type can’t override soil limits</h2>
   <p>No grass can thrive without oxygen, depth, and stable moisture. Fertilizer can’t compensate for missing fundamentals.</p>
-  <p>You notice failure repeating across different grass varieties.</p>
+  <p>The same failure pattern repeats even after switching varieties.</p>
 
   <h2>Lasting success requires soil recovery first</h2>
   <p>When soil structure and root depth improve, fertilizer becomes effective again instead of destructive.</p>
-  <p>Lawns fail despite fertilizer because fertilizer works only after soil does.</p>
+  <p>Fertilizer stops failing only after soil function has been restored.</p>
 </main>
 
 <footer class="site-footer">
