--- a/soil-fertilizer/why-new-lawns-struggle-with-soil.html
+++ b/soil-fertilizer/why-new-lawns-struggle-with-soil.html
@@ -58,35 +58,35 @@
 
   <h2>New soil hasn’t finished settling</h2>
   <p>Recently graded or filled soil continues to compress under its own weight, water, and foot traffic. Air space collapses unevenly as particles shift.</p>
-  <p>You notice dips forming, hard spots appearing, and grass thinning in patches that didn’t exist at installation, which follows the same process described in <a href="/soil-fertilizer/how-soil-settling-affects-grass.html">how soil settling affects grass</a>.</p>
+  <p>Dips form, hard spots show up, and patch thinning appears in areas that looked fine at installation, following the same settling process described in <a href="/soil-fertilizer/how-soil-settling-affects-grass.html">how soil settling affects grass</a>.</p>
 
   <h2>Roots start in unstable conditions</h2>
   <p>Grass roots try to grow while soil is still moving. As the ground tightens, roots that formed early get pinched or cut off.</p>
-  <p>You notice shallow rooting, easy pull-up, and poor anchoring even though the lawn is new.</p>
+  <p>Shallow rooting shows up early, and the turf lifts or tears more easily than it should for a new lawn.</p>
 
   <h2>Structure hasn’t been rebuilt yet</h2>
   <p>Disturbed soil lacks the natural channels and aggregates that support oxygen and water movement. Those features only return through repeated root growth.</p>
-  <p>You notice water soaking inconsistently, with some areas staying wet and others drying too fast.</p>
+  <p>Some zones end up staying wet while others dry out fast, even though irrigation coverage and timing stay consistent.</p>
 
   <h2>Biology starts near zero</h2>
   <p>Soil life is reduced during grading, stockpiling, and installation. Without microbes, soil particles don’t bind together effectively.</p>
-  <p>You notice soil that crusts, seals, or compacts quickly after rain.</p>
+  <p>After rain, the surface can crust or seal, and compaction shows up sooner than expected.</p>
 
   <h2>Recovery happens slower than damage</h2>
   <p>Roots need time to rebuild structure, but pressure and weather act immediately. Early stress often outpaces recovery.</p>
-  <p>You notice decline appearing before the lawn ever seems established, even with careful maintenance.</p>
+  <p>Decline can start before the lawn ever feels established, even when mowing, watering, and feeding are kept careful.</p>
 
   <h2>Amendments can’t bypass settling</h2>
   <p>Surface amendments improve texture temporarily, but they don’t stop deeper layers from tightening as soil continues to move.</p>
-  <p>You notice short-lived improvement that fades the way it does when <a href="/soil-fertilizer/when-amendments-dont-help.html">amendments don’t help</a>.</p>
+  <p>Initial improvement may appear, then fades back toward baseline in the same way described in <a href="/soil-fertilizer/when-amendments-dont-help.html">when amendments don’t help</a>.</p>
 
   <h2>Time is the limiting factor</h2>
   <p>Soil needs repeated root cycles to stabilize. No product can compress years of biological rebuilding into weeks.</p>
-  <p>You notice real improvement only after the timeline described in <a href="/soil-fertilizer/how-long-it-takes-soil-to-recover.html">how long it takes soil to recover</a>.</p>
+  <p>Real change tends to show up only after the longer recovery window described in <a href="/soil-fertilizer/how-long-it-takes-soil-to-recover.html">how long it takes soil to recover</a>.</p>
 
   <h2>New lawns fail quietly at first</h2>
   <p>Early decline blends in with normal establishment stress. By the time symptoms stand out, soil problems are already in place.</p>
-  <p>New lawns struggle not because care is wrong, but because soil hasn’t finished becoming soil yet.</p>
+  <p>New lawns struggle not because care is wrong, but because the ground hasn’t finished becoming a stable root zone yet.</p>
 </main>
 
 <footer class="site-footer">
