--- a/soil-fertilizer/why-older-lawns-have-better-soil.html
+++ b/soil-fertilizer/why-older-lawns-have-better-soil.html
@@ -58,35 +58,35 @@
 
   <h2>Stable roots slowly rebuild soil structure</h2>
   <p>When grass stays in place for years, roots grow, die, and regrow in the same soil. That cycle opens channels, adds organic material, and holds particles together.</p>
-  <p>You notice older lawns allowing water to soak in faster and resisting compaction better than newer turf.</p>
+  <p>Over time, water infiltrates more evenly and the surface resists compaction compared to recently established turf.</p>
 
   <h2>Time allows soil texture to function naturally</h2>
   <p>Soil texture doesn’t change, but its behavior does. Repeated root activity helps clay, sand, or loam settle into a more usable structure.</p>
-  <p>You notice fewer extremes tied to the same mechanisms explained in <a href="/soil-fertilizer/how-soil-texture-affects-lawns.html">how soil texture affects lawns</a>.</p>
+  <p>Extreme wetting and drying become less common as the same processes described in <a href="/soil-fertilizer/how-soil-texture-affects-lawns.html">how soil texture affects lawns</a> moderate themselves.</p>
 
   <h2>Biology builds slowly and compounds</h2>
   <p>Microorganisms increase as roots feed them year after year. This living network stabilizes soil and improves nutrient movement.</p>
-  <p>You notice older soil staying crumbly and responsive instead of crusting or sealing.</p>
+  <p>Instead of sealing or crusting, the soil surface remains friable and responsive across seasons.</p>
 
   <h2>Organic matter accumulates over time</h2>
   <p>Root turnover, clippings, and natural decay add carbon to the soil profile. This improves moisture retention and elasticity.</p>
-  <p>You notice older lawns handling dry periods better without extra watering.</p>
+  <p>Dry periods become easier to ride through because stored moisture lasts longer between irrigation or rain.</p>
 
   <h2>Fertilizer plays a smaller role than expected</h2>
   <p>In mature soil, nutrients move efficiently because roots and biology already work. Fertilizer adds support but doesn’t create performance.</p>
-  <p>You notice consistent growth that aligns with <a href="/soil-fertilizer/what-fertilizer-does-and-does-not-do.html">what fertilizer does and does not do</a>, rather than dramatic swings.</p>
+  <p>Growth stays steady and predictable, matching <a href="/soil-fertilizer/what-fertilizer-does-and-does-not-do.html">what fertilizer does and does not do</a> rather than swinging sharply.</p>
 
   <h2>Weeds struggle as soil fills in</h2>
   <p>Dense roots and stable structure leave fewer gaps for weeds to exploit.</p>
-  <p>You notice fewer invasions compared to lawns affected by the conditions described in <a href="/soil-fertilizer/why-poor-soil-encourages-weeds.html">why poor soil encourages weeds</a>.</p>
+  <p>Compared to younger lawns, invasion pressure drops below the levels described in <a href="/soil-fertilizer/why-poor-soil-encourages-weeds.html">why poor soil encourages weeds</a>.</p>
 
   <h2>Chemical adjustments matter less with maturity</h2>
   <p>Older soil buffers changes better. pH and nutrient shifts happen more gradually and predictably.</p>
-  <p>You notice milder responses to treatments like those described in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
+  <p>Responses to treatments become muted, similar to the behavior outlined in <a href="/soil-fertilizer/how-sulfur-affects-lawn-soil.html">how sulfur affects lawn soil</a>.</p>
 
   <h2>Older lawns reflect years of balance</h2>
   <p>Good soil isn’t created quickly. It’s the result of stability, time, and uninterrupted root activity.</p>
-  <p>Older lawns perform better because their soil has been allowed to finish rebuilding itself.</p>
+  <p>Performance improves because the soil has had enough time to complete the rebuilding process.</p>
 </main>
 
 <footer class="site-footer">
