--- a/soil-fertilizer/why-one-soil-fix-rarely-works.html
+++ b/soil-fertilizer/why-one-soil-fix-rarely-works.html
@@ -58,35 +58,35 @@
 
   <h2>Soil problems stack on top of each other</h2>
   <p>Soil usually fails in layers. Compaction limits air, poor texture limits drainage, and shallow roots limit recovery. Fixing only one of those leaves the others untouched.</p>
-  <p>You notice this when the lawn improves briefly, then slips back into the same weak pattern a few weeks or months later.</p>
+  <p>The result is short-term improvement followed by a return to the same weak pattern once underlying limits reassert themselves.</p>
 
   <h2>Fixing the surface doesn’t fix what’s below</h2>
   <p>Many soil fixes improve only the top inch or two. If deeper layers remain tight or sealed, roots hit a wall and stop expanding.</p>
-  <p>You notice grass greening up but still failing during heat or traffic because the deeper soil never changed.</p>
+  <p>Green color may appear briefly, but heat, traffic, or drought still cause failure because deeper soil behavior never changed.</p>
 
   <h2>Different soils fail in different ways</h2>
   <p>Sand drains too fast, clay drains too slow, and loam balances both. A fix that helps one texture can make another worse if the underlying structure isn’t considered.</p>
-  <p>You notice uneven results across the lawn because areas with different textures respond differently, the same contrast explained in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">the difference between clay, sand, and loam</a>.</p>
+  <p>Across a single yard, this shows up as uneven response that mirrors the contrasts explained in <a href="/soil-fertilizer/difference-between-clay-sand-and-loam.html">the difference between clay, sand, and loam</a>.</p>
 
   <h2>Water behavior exposes incomplete fixes</h2>
   <p>When only part of the soil profile improves, water still follows the old broken paths. It pools, runs off, or drains past roots.</p>
-  <p>You notice puddles, dry patches, or soggy zones returning even though soil work was done.</p>
+  <p>After rain or irrigation, the same puddles and dry zones reappear, revealing that the underlying pathways never changed.</p>
 
   <h2>Nutrients don’t compensate for structural limits</h2>
   <p>Fertilizer feeds grass only if roots can reach and hold nutrients. When soil structure limits root depth, feeding increases leaf growth without increasing stability.</p>
-  <p>You notice needing to fertilize more often just to maintain appearance, matching the cycle described in <a href="/soil-fertilizer/how-often-lawns-actually-need-fertilizer.html">how often lawns actually need fertilizer</a>.</p>
+  <p>This leads to more frequent applications just to maintain appearance, reinforcing the cycle described in <a href="/soil-fertilizer/how-often-lawns-actually-need-fertilizer.html">how often lawns actually need fertilizer</a>.</p>
 
   <h2>Some soil damage can’t be patched</h2>
   <p>When compaction, grading damage, or stripped topsoil affect the full root zone, partial fixes never reach the problem layer.</p>
-  <p>You notice zero lasting improvement no matter how many treatments are tried, which is when soil issues point toward <a href="/soil-fertilizer/when-soil-issues-mean-starting-over.html">starting over entirely</a>.</p>
+  <p>In these cases, repeated treatments produce no durable change, which is when soil issues point toward <a href="/soil-fertilizer/when-soil-issues-mean-starting-over.html">starting over entirely</a>.</p>
 
   <h2>Soil recovery depends on all systems working together</h2>
   <p>Air movement, water flow, root space, and organic material all support each other. Fixing one without the others creates a bottleneck.</p>
-  <p>You notice progress only when multiple changes finally align.</p>
+  <p>Measurable progress appears only once these systems begin functioning in alignment.</p>
 
   <h2>Lasting improvement requires layered solutions</h2>
   <p>Soil problems rarely have a single cause, so they rarely have a single fix. Each layer must allow the next one to work.</p>
-  <p>When soil stops fighting itself, the lawn stops struggling.</p>
+  <p>When internal conflicts between layers resolve, the lawn stops struggling to compensate.</p>
 </main>
 
 <footer class="site-footer">
