--- a/soil-fertilizer/why-poor-soil-encourages-weeds.html
+++ b/soil-fertilizer/why-poor-soil-encourages-weeds.html
@@ -58,35 +58,35 @@
 
   <h2>Grass fails first when soil function breaks</h2>
   <p>Poor soil limits air movement, water balance, and root depth. Grass depends on all three at once. When any of them collapse, grass loses density and leaves exposed space.</p>
-  <p>You notice thinning, bare patches, and slow recovery long before weeds fully move in.</p>
+  <p>The early signal is thinning turf, bare patches, and slow recovery that appear before weeds become dominant.</p>
 
   <h2>Weeds are built for shallow, stressed soil</h2>
   <p>Many weeds survive with short roots and low oxygen. They tolerate compacted, uneven, or dry soil that grass cannot fully use.</p>
-  <p>You notice weeds thriving along edges, hard spots, and areas grass keeps abandoning.</p>
+  <p>Along edges, hardpan zones, and repeatedly stressed spots, weeds persist where grass consistently retreats.</p>
 
   <h2>Open soil invites faster colonizers</h2>
   <p>When grass canopy thins, sunlight reaches the soil surface. Weed seeds germinate quickly in that exposed zone.</p>
-  <p>You notice weeds appearing exactly where grass cover broke down, not randomly across the lawn.</p>
+  <p>Colonization follows breakdown lines, with new growth appearing exactly where grass cover failed.</p>
 
   <h2>Poor soil turns fertilizer into weed fuel</h2>
   <p>Grass roots weakened by poor soil can’t absorb nutrients evenly. Weeds with simpler root systems absorb what grass leaves behind.</p>
-  <p>You notice weeds surging after feeding because fertilizer behaves the way explained in <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>.</p>
+  <p>After feeding, weed growth accelerates because nutrients behave according to the mechanisms described in <a href="/soil-fertilizer/what-fertilizer-really-is.html">what fertilizer really is</a>.</p>
 
   <h2>Overworking damaged soil accelerates weed takeover</h2>
   <p>Frequent raking, dethatching, or aerating disturbed soil without recovery time breaks structure further and exposes more bare ground.</p>
-  <p>You notice weed pressure increasing when tools are used too often, matching the patterns in <a href="/tools-safety/how-often-lawn-tools-should-be-used.html">how often lawn tools should be used</a>.</p>
+  <p>Increased weed pressure often follows repeated tool use, consistent with the patterns outlined in <a href="/tools-safety/how-often-lawn-tools-should-be-used.html">how often lawn tools should be used</a>.</p>
 
   <h2>Healthy soil lets grass crowd weeds out</h2>
   <p>When soil holds air, water, and nutrients evenly, grass thickens and shades the surface. Weed seeds lose space to establish.</p>
-  <p>You notice fewer new weeds in areas where soil behaves like <a href="/soil-fertilizer/how-loamy-soil-supports-lawns.html">loamy soil that supports lawns</a>.</p>
+  <p>Areas with balanced soil conditions show fewer new invaders, reflecting how <a href="/soil-fertilizer/how-loamy-soil-supports-lawns.html">loamy soil supports lawns</a>.</p>
 
   <h2>Some soil damage can’t be competed away</h2>
   <p>If compaction, missing topsoil, or drainage failure blocks root expansion entirely, grass can’t reclaim space no matter how well it’s fed.</p>
-  <p>You notice weeds returning every season until the point described in <a href="/soil-fertilizer/when-soil-issues-mean-starting-over.html">when soil issues mean starting over</a>.</p>
+  <p>Seasonal weed return continues until the threshold described in <a href="/soil-fertilizer/when-soil-issues-mean-starting-over.html">when soil issues mean starting over</a> is reached.</p>
 
   <h2>Weeds follow opportunity, not neglect</h2>
   <p>Weeds don’t appear because care stopped. They appear because soil stopped supporting grass.</p>
-  <p>Fix the soil, and weeds lose the advantage that let them move in.</p>
+  <p>Once soil function is restored, the advantage that allowed weeds to establish disappears.</p>
 </main>
 
 <footer class="site-footer">
