--- a/soil-fertilizer/why-quick-fixes-fail-on-soil.html
+++ b/soil-fertilizer/why-quick-fixes-fail-on-soil.html
@@ -58,35 +58,35 @@
 
   <h2>Quick fixes treat symptoms, not behavior</h2>
   <p>Soil problems are physical. Compaction, poor drainage, and shallow structure control how roots live. Products and shortcuts usually change appearance, not how soil actually functions.</p>
-  <p>You notice brief green-up or surface improvement that fades without changing how the ground feels or drains.</p>
+  <p>That shows up as a quick green-up or cleaner surface that fades while the ground still feels tight and water still moves the same way.</p>
 
   <h2>Surface changes don’t reach the root zone</h2>
   <p>Most quick fixes act only on the top inch of soil. Roots fail deeper where air and space are already gone.</p>
-  <p>You notice grass looking better for a short time, then thinning again in the same spots.</p>
+  <p>After a short improvement window, the same spots thin again because the deeper restriction never changed.</p>
 
   <h2>Soil chemistry can’t override structure</h2>
   <p>Adjusting pH or adding nutrients doesn’t reopen collapsed pore space. Chemistry works only after physical movement is restored.</p>
-  <p>You notice little improvement even after correcting issues tied to <a href="/soil-fertilizer/why-soil-ph-matters-for-grass.html">why soil pH matters for grass</a>.</p>
+  <p>Even with pH or nutrient numbers “correct,” growth stays limited when the physical issue described in <a href="/soil-fertilizer/why-soil-ph-matters-for-grass.html">why soil pH matters for grass</a> isn’t the real bottleneck.</p>
 
   <h2>Fast results hide slow failure</h2>
   <p>Color changes quickly because leaves respond fast. Roots rebuild slowly and require stable soil conditions.</p>
-  <p>You notice warning signs like those listed in <a href="/soil-fertilizer/signs-soil-changes-are-failing.html">signs soil changes are failing</a> before decline becomes obvious.</p>
+  <p>Before the obvious decline returns, early warnings often appear first, matching what’s listed in <a href="/soil-fertilizer/signs-soil-changes-are-failing.html">signs soil changes are failing</a>.</p>
 
   <h2>Inputs amplify bad soil behavior</h2>
   <p>Water and fertilizer move through soil exactly as structure allows. In broken soil, more input means more runoff, pooling, or stress.</p>
-  <p>You notice worsening results when increasing effort instead of improvement.</p>
+  <p>Instead of improving outcomes, higher effort can trigger more puddling, more dry edges, or more wilt because the soil routes everything poorly.</p>
 
   <h2>Grass type can’t compensate for poor soil</h2>
   <p>Different grasses tolerate stress differently, but none can grow without oxygen, depth, and stability.</p>
-  <p>You notice the same failure patterns regardless of variety, which is why <a href="/soil-fertilizer/why-soil-matters-more-than-grass-type.html">soil matters more than grass type</a>.</p>
+  <p>Across varieties, the same pattern repeats once soil limits are reached, which is why <a href="/soil-fertilizer/why-soil-matters-more-than-grass-type.html">soil matters more than grass type</a>.</p>
 
   <h2>True soil change takes time</h2>
   <p>Structure improves through gradual recovery, root activity, and organic input. There is no shortcut for rebuilding space and movement.</p>
-  <p>You notice lasting improvement only when conditions stay consistent long enough for roots to rebuild.</p>
+  <p>Only after weeks to months of consistent conditions do changes start holding, with deeper rooting and more stable water behavior showing up first.</p>
 
   <h2>Quick fixes fail because soil is slow</h2>
   <p>Soil responds on a longer timeline than products promise.</p>
-  <p>When fixes match soil’s pace instead of fighting it, results finally hold.</p>
+  <p>Once the approach matches that pace, improvements stop disappearing and begin to persist through stress.</p>
 </main>
 
 <footer class="site-footer">
