--- a/soil-fertilizer/why-sloped-lawns-lose-soil.html
+++ b/soil-fertilizer/why-sloped-lawns-lose-soil.html
@@ -58,39 +58,39 @@
 
   <h2>Gravity changes how water moves across soil</h2>
   <p>On a slope, water accelerates downhill instead of soaking straight down. The faster it moves, the more surface particles it can carry.</p>
-  <p>You notice this as thin turf, exposed roots, or muddy streaks after rain or irrigation.</p>
+  <p>Thin turf, exposed roots, and muddy streaks tend to appear after rain or irrigation where runoff has been doing the transport.</p>
 
   <h2>The top of the slope loses soil first</h2>
   <p>As water pulls particles downhill, the upper portion of the slope becomes shallower and tighter. Roots lose depth and anchoring.</p>
-  <p>You notice grass burning out at the top of slopes even when the bottom looks greener.</p>
+  <p>At the upper edge, burnout shows up sooner, while the bottom can stay greener under the same watering.</p>
 
   <h2>Soil collects and compacts at the bottom</h2>
   <p>Material that washes downhill settles at the base of the slope. That accumulation increases compaction and holds water longer.</p>
-  <p>You notice soggy grass, algae, or thinning at the bottom while the middle struggles with both issues.</p>
+  <p>Downhill zones often stay wetter, with algae or thinning showing up there while the middle gets hit from both directions.</p>
 
   <h2>Traffic accelerates soil loss on slopes</h2>
   <p>People and equipment tend to walk across slopes rather than up them. That repeated pressure loosens surface soil and speeds runoff.</p>
-  <p>You notice wear lines and bare paths that match the same pressure patterns described in <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
+  <p>Wear lines and bare paths form along the same pressure routes described in <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
 
   <h2>Soil fixes fade faster on uneven ground</h2>
   <p>Topdressing and amendments settle and wash downhill over time. Without something holding them in place, the slope returns to its original imbalance.</p>
-  <p>You notice improvements disappearing after a season or two, the same pattern explained in <a href="/soil-fertilizer/why-soil-improvements-fade-over-time.html">why soil improvements fade over time</a>.</p>
+  <p>After a season or two, the earlier gains can fade out, which matches the cycle in <a href="/soil-fertilizer/why-soil-improvements-fade-over-time.html">why soil improvements fade over time</a>.</p>
 
   <h2>Shallow soil increases fertilizer stress</h2>
   <p>As erosion thins the root zone, fertilizer becomes more concentrated near the surface. Roots absorb salts faster than they can regulate.</p>
-  <p>You notice scorched patches or sudden dieback tied to <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
+  <p>Scorched patches or sudden dieback are more likely under those conditions, aligning with <a href="/soil-fertilizer/why-fertilizer-burns-lawns.html">why fertilizer burns lawns</a>.</p>
 
   <h2>Roots can’t hold soil once depth is lost</h2>
   <p>Healthy roots help stabilize soil, but erosion reduces root mass first. With less root structure, the next runoff event removes even more soil.</p>
-  <p>You notice erosion accelerating each year instead of staying constant.</p>
+  <p>Year to year, the loss can speed up as each thin spot makes the next washout easier.</p>
 
   <h2>Slope problems repeat because the shape never changes</h2>
   <p>As long as gravity keeps redirecting water and pressure downhill, soil loss follows the same paths.</p>
-  <p>The lawn keeps failing in the same bands until the slope itself is stabilized.</p>
+  <p>The same bands keep failing because runoff keeps using the same routes until the slope is stabilized.</p>
 
   <h2>Sloped lawns lose soil by design, not neglect</h2>
   <p>Slope alone is enough to create soil loss. Care alone can’t stop it.</p>
-  <p>Without addressing how water and pressure move downhill, erosion remains part of the system.</p>
+  <p>Unless water and pressure are controlled downhill, erosion remains part of how the site functions.</p>
 </main>
 
 <footer class="site-footer">
