--- a/soil-fertilizer/why-soil-behaves-differently-in-summer.html
+++ b/soil-fertilizer/why-soil-behaves-differently-in-summer.html
@@ -58,35 +58,35 @@
 
   <h2>Heat changes how soil holds water</h2>
   <p>As temperatures rise, water evaporates faster from the soil surface. That loss pulls moisture upward from below, drying the upper layers first.</p>
-  <p>You notice this as soil that looks dry and hard on top even though you watered recently.</p>
+  <p>The surface often hardens and lightens in color even shortly after irrigation, while deeper moisture remains out of reach.</p>
 
   <h2>Drying soil tightens around roots</h2>
   <p>When soil dries, particles pull closer together. That reduces the small air spaces roots rely on for breathing and expansion.</p>
-  <p>You notice grass slowing down, thinning, or wilting even when watering hasn’t changed, which is a direct shift in how <a href="/soil-fertilizer/how-soil-affects-grass-growth.html">soil affects grass growth</a>.</p>
+  <p>Growth slows or thins despite unchanged watering because the soil is physically behaving differently, as described in how <a href="/soil-fertilizer/how-soil-affects-grass-growth.html">soil affects grass growth</a>.</p>
 
   <h2>Compaction becomes more obvious in summer</h2>
   <p>Compacted soil already has limited air and water movement. Summer heat pushes it past its limit by increasing demand while reducing supply.</p>
-  <p>You notice stress showing up first in walkways, play areas, and mower paths, matching the visible patterns in <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">signs of compacted lawn soil</a>.</p>
+  <p>Stress concentrates along walkways, play zones, and mower paths where compression already existed, matching the patterns in <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">signs of compacted lawn soil</a>.</p>
 
   <h2>Water moves differently through hot soil</h2>
   <p>Warm soil sheds water faster at the surface while resisting infiltration below. Water either runs off or sinks through cracks instead of spreading evenly.</p>
-  <p>You notice puddles in some spots and dry patches in others, which reflects what <a href="/soil-fertilizer/what-soil-drainage-really-means.html">soil drainage really means</a> under heat stress.</p>
+  <p>Some areas stay wet while others dry out completely, illustrating what <a href="/soil-fertilizer/what-soil-drainage-really-means.html">soil drainage really means</a> under heat stress.</p>
 
   <h2>Roots retreat upward when conditions worsen</h2>
   <p>When deeper soil layers lose oxygen or moisture, roots stop growing downward and stay near the surface where conditions fluctuate more.</p>
-  <p>You notice grass that burns faster, pulls up easily, and can’t recover after mowing or traffic.</p>
+  <p>Burning, easy pull-up, and poor recovery follow because shallow roots can’t buffer heat or traffic.</p>
 
   <h2>Soil biology slows in hot, dry conditions</h2>
   <p>Beneficial soil activity depends on steady moisture. Extended heat dries the zone where that activity occurs, slowing recovery and structure repair.</p>
-  <p>You notice the lawn taking longer to bounce back after stress compared to cooler seasons.</p>
+  <p>Recovery stretches out longer after stress events compared to spring or fall, even with similar care.</p>
 
   <h2>Summer exposes limits that were hidden before</h2>
   <p>Spring moisture and mild temperatures mask weak soil behavior. Summer removes that buffer.</p>
-  <p>You notice problems that seemed to appear suddenly but were already forming underground.</p>
+  <p>Issues appear to arrive suddenly even though they developed gradually below the surface.</p>
 
   <h2>Soil doesn’t fail in summer, it reveals itself</h2>
   <p>Summer doesn’t create soil problems. It pushes existing ones to the surface by increasing demand on air, water, and roots.</p>
-  <p>Lawns struggle in summer because soil reaches its limits.</p>
+  <p>Lawns struggle in summer because soil reaches the edge of what it can physically support.</p>
 </main>
 
 <footer class="site-footer">
