--- a/soil-fertilizer/why-soil-behaves-differently-in-winter.html
+++ b/soil-fertilizer/why-soil-behaves-differently-in-winter.html
@@ -58,35 +58,35 @@
 
   <h2>Cold slows everything underground</h2>
   <p>As temperatures drop, water movement, air exchange, and biological activity all slow down. Soil particles hold moisture longer, and oxygen moves more slowly through the ground.</p>
-  <p>You notice this as soil that stays damp for days, footprints that don’t spring back, and grass that seems stalled even during mild spells.</p>
+  <p>Extended dampness, lingering footprints, and stalled grass growth appear even during brief warm periods.</p>
 
   <h2>Water stays trapped longer in cold soil</h2>
   <p>Cold soil drains more slowly because water becomes thicker and soil pores contract. Oxygen gets pushed out as water lingers in place.</p>
-  <p>You notice this as soft ground, muddy patches, and grass that yellows even without heavy rainfall.</p>
+  <p>Soft ground, muddy patches, and yellowing turf develop without the need for heavy rainfall.</p>
 
   <h2>Freeze and thaw physically shift soil</h2>
   <p>When water inside soil freezes, it expands and lifts particles upward. Thawing lets soil settle unevenly, often tighter than before.</p>
-  <p>You notice this as heaving, uneven ground, and grass that loosens or lifts out of the soil by early spring.</p>
+  <p>Heaving surfaces, uneven ground, and loosened turf show up by late winter or early spring.</p>
 
   <h2>Roots pause while damage accumulates</h2>
   <p>Roots grow very little in cold conditions, even when the grass above looks dormant but intact. Any compaction or oxygen loss that occurs during winter stays unresolved.</p>
-  <p>You notice weak growth and shallow rooting once temperatures rise, even though winter damage seemed minimal.</p>
+  <p>Once temperatures rise, shallow rooting and weak growth reveal stress that built up months earlier.</p>
 
   <h2>Organic matter becomes more important in winter</h2>
   <p>Organic material keeps soil flexible and prevents particles from locking together as temperatures fluctuate. Without enough organic matter, soil tightens faster during freeze cycles.</p>
-  <p>You notice harder soil and slower spring recovery in areas that fall below the balance described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a>.</p>
+  <p>Areas lacking the balance described in <a href="/soil-fertilizer/how-much-organic-matter-lawns-need.html">how much organic matter lawns need</a> emerge from winter harder and slower to recover.</p>
 
   <h2>Soil chemistry shifts as activity slows</h2>
   <p>Cold temperatures slow nutrient movement and change how minerals interact with roots. pH imbalances matter more because roots absorb nutrients less efficiently.</p>
-  <p>You notice grass discoloration or stalled growth tied to the same mechanism behind <a href="/soil-fertilizer/why-soil-ph-matters-for-grass.html">why soil pH matters for grass</a>.</p>
+  <p>Discoloration or stalled growth reflects the same underlying process explained in <a href="/soil-fertilizer/why-soil-ph-matters-for-grass.html">why soil pH matters for grass</a>.</p>
 
   <h2>Climate determines how severe winter effects become</h2>
   <p>Regions with frequent freeze–thaw cycles experience more soil movement and compaction than areas with steady cold or mild winters.</p>
-  <p>You notice bigger spring problems in climates that match the patterns described in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a>.</p>
+  <p>Spring damage intensifies in climates that follow the patterns outlined in <a href="/soil-fertilizer/how-climate-affects-lawn-soil.html">how climate affects lawn soil</a>.</p>
 
   <h2>Winter doesn’t kill lawns, it sets the stage</h2>
   <p>Most winter soil damage shows up later because roots can’t repair it until warmth returns.</p>
-  <p>When soil enters winter weak, spring starts with a disadvantage that no surface fix can erase.</p>
+  <p>A weak soil profile entering winter leads to a delayed but unavoidable disadvantage once growth resumes.</p>
 </main>
 
 <footer class="site-footer">
