--- a/soil-fertilizer/why-soil-improvements-fade-over-time.html
+++ b/soil-fertilizer/why-soil-improvements-fade-over-time.html
@@ -58,31 +58,31 @@
 
   <h2>Soil naturally collapses without reinforcement</h2>
   <p>Soil particles settle under gravity, water, and pressure. Improvements that create air space begin closing the moment roots and biology stop holding them open.</p>
-  <p>You notice the ground slowly getting firmer again even though no single event caused the change.</p>
+  <p>Over time the surface firms back up, with no obvious single event responsible for the shift.</p>
 
   <h2>Surface fixes don’t change the full root zone</h2>
   <p>Many improvements affect only the top layer of soil. Deeper compacted or inactive layers remain unchanged and eventually dominate again.</p>
-  <p>You notice shallow gains disappearing while deeper problems resurface.</p>
+  <p>Shallow progress shows up first, then fades as deeper limits reassert themselves.</p>
 
   <h2>Fast-draining soils lose gains quickly</h2>
   <p>Sandy or coarse soils let water and organic inputs move through too fast to rebuild structure. Improvements wash past the root zone.</p>
-  <p>You notice soil behaving the same way described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>, even after treatment.</p>
+  <p>Even after treatment, the ground keeps acting like the scenario described in <a href="/soil-fertilizer/how-sandy-soil-affects-grass.html">how sandy soil affects grass</a>.</p>
 
   <h2>Soil biology must stay active to maintain change</h2>
   <p>Microbes and roots help glue soil particles into stable structure. When biology declines, soil loosens briefly, then collapses tighter.</p>
-  <p>You notice improvements stalling in areas that match the conditions described in <a href="/soil-fertilizer/why-dead-soil-cant-support-lawns.html">why dead soil can’t support lawns</a>.</p>
+  <p>Where conditions match <a href="/soil-fertilizer/why-dead-soil-cant-support-lawns.html">why dead soil can’t support lawns</a>, improvements tend to stall instead of holding.</p>
 
   <h2>Fertilizer masks fading improvements</h2>
   <p>Fertilizer boosts leaf color without strengthening roots or structure. Grass can look healthy while soil quietly regresses.</p>
-  <p>You notice sudden failure after feeding stops, following the pattern in <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>.</p>
+  <p>When feeding stops, failure often appears abruptly, echoing the pattern in <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>.</p>
 
   <h2>Pressure returns faster than structure rebuilds</h2>
   <p>Traffic, mowing, rain impact, and seasonal stress apply pressure constantly. Soil needs time and protection to rebuild between events.</p>
-  <p>You notice improvements lasting only until normal use resumes.</p>
+  <p>Normal use resumes, and the gains shrink back toward baseline before they can solidify.</p>
 
   <h2>Roots determine whether improvements stick</h2>
   <p>Dense, deep roots reinforce soil and slow collapse. Weak or shallow roots leave improvements unsupported.</p>
-  <p>You notice gains lasting longest where grass thickens instead of just greening up.</p>
+  <p>Longest-lasting gains show up where thickening happens, not just a temporary color boost.</p>
 
   <h2>Fading improvements signal incomplete repair</h2>
   <p>Soil doesn’t forget its weakest layer. If part of the profile stays broken, it eventually pulls the system back.</p>
