--- a/soil-fertilizer/why-soil-problems-are-often-missed.html
+++ b/soil-fertilizer/why-soil-problems-are-often-missed.html
@@ -58,39 +58,39 @@
 
   <h2>Soil fails underground before grass reacts</h2>
   <p>Soil structure, oxygen flow, and root space degrade below the surface first. Grass continues growing briefly using stored energy.</p>
-  <p>You notice problems only later, when thinning, discoloration, or slow recovery finally appear.</p>
+  <p>Weeks later, thinning, discoloration, or slow recovery finally show up as the visible outcome.</p>
 
   <h2>Surface symptoms hide deeper causes</h2>
   <p>Yellowing, weeds, or bare patches show up at the surface, but they are consequences, not the failure itself.</p>
-  <p>You notice people chasing nutrients or pests while the same spots keep declining.</p>
+  <p>Instead of the cause being addressed, nutrients or pests get chased while the same spots keep declining.</p>
 
   <h2>Short-term fixes create false confidence</h2>
   <p>Watering more, feeding heavier, or overseeding can temporarily improve appearance without fixing soil function.</p>
-  <p>You notice brief improvement that fades, which is why changes described in <a href="/soil-fertilizer/why-amendments-take-time-to-work.html">why amendments take time to work</a> are often misjudged.</p>
+  <p>For a short stretch the lawn looks better, then the gains drop away, which is why changes described in <a href="/soil-fertilizer/why-amendments-take-time-to-work.html">why amendments take time to work</a> are often misjudged.</p>
 
   <h2>Weeds distract from soil failure</h2>
   <p>Weeds move into open space quickly, drawing attention away from the soil conditions that created the opening.</p>
-  <p>You notice weed pressure increasing for the same reasons explained in <a href="/soil-fertilizer/why-poor-soil-encourages-weeds.html">why poor soil encourages weeds</a>, not because weeds caused the damage.</p>
+  <p>When weed pressure rises, it tracks the same setup explained in <a href="/soil-fertilizer/why-poor-soil-encourages-weeds.html">why poor soil encourages weeds</a>, not weeds creating the damage.</p>
 
   <h2>Seasonal changes mask soil behavior</h2>
   <p>Soil expands, contracts, freezes, and saturates differently throughout the year. Problems can disappear temporarily.</p>
-  <p>You notice lawns looking fine in one season and failing in another due to the shifts described in <a href="/soil-fertilizer/why-soil-behaves-differently-in-winter.html">why soil behaves differently in winter</a>.</p>
+  <p>In one season the lawn can look fine, then fail in another as the shifts described in <a href="/soil-fertilizer/why-soil-behaves-differently-in-winter.html">why soil behaves differently in winter</a> push the weak zones over the edge.</p>
 
   <h2>Uniform care hides uneven soil</h2>
   <p>Water and fertilizer spread evenly, but soil never is. Weak zones fail while stronger areas hold on.</p>
-  <p>You notice repeating problem spots that never match care patterns.</p>
+  <p>What stands out is a set of repeat problem spots that never line up with where care was applied.</p>
 
   <h2>Root damage isn’t visible without digging</h2>
   <p>Collapsed pore space, shallow roots, and compaction stay hidden unless soil is examined directly.</p>
-  <p>You notice grass pulling up easily only after damage is already advanced.</p>
+  <p>Only after the turf starts lifting with little resistance does the extent of the root damage become obvious.</p>
 
   <h2>Soil problems are slow, not dramatic</h2>
   <p>Most soil failure happens gradually, not suddenly. Decline blends into normal seasonal stress.</p>
-  <p>You notice missed warning signs until recovery becomes difficult.</p>
+  <p>By the time the pattern is clear, the earlier warning signs have already been missed and recovery becomes difficult.</p>
 
   <h2>Soil is overlooked because it’s upstream</h2>
   <p>Everything else in lawn care is easier to see, test, and change.</p>
-  <p>Soil problems are missed because the damage starts where people rarely look.</p>
+  <p>Because the damage begins where people rarely look, soil ends up ignored while downstream symptoms get all the attention.</p>
 </main>
 
 <footer class="site-footer">
