--- a/soil-fertilizer/why-soil-problems-come-back-each-year.html
+++ b/soil-fertilizer/why-soil-problems-come-back-each-year.html
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>Why Soil Problems Come Back Each Year</h1>
 
-  <h2>Seasonal stress exposes the same weak spots</h2>
-  <p>Heat, cold, rain, and drought put pressure on soil every year. If soil structure is already weak, those stresses collapse air spaces and restrict roots in the same locations.</p>
-  <p>You notice this as the same patches thinning, yellowing, or dying at the same time each season.</p>
+  <h2>Seasonal pressure targets the same weak areas</h2>
+  <p>Every year brings heat, cold, saturation, and drying cycles. Where soil structure is already compromised, those forces collapse air space and restrict roots in predictable locations.</p>
+  <p>The result shows up as the same patches declining on the same schedule, regardless of changes in care.</p>
 
-  <h2>Soil doesn’t reset between growing seasons</h2>
-  <p>When soil is compacted or biologically depleted, it doesn’t magically recover over winter. The structure stays tight, and roots start the new season at the same disadvantage.</p>
-  <p>You notice this when spring growth looks uneven right from the start instead of filling in evenly.</p>
+  <h2>Soil doesn’t heal during the off-season</h2>
+  <p>Compacted or biologically inactive soil does not recover on its own between growing seasons. When spring arrives, roots encounter the same resistance they did the year before.</p>
+  <p>This is why uneven growth appears immediately instead of correcting itself as the season begins.</p>
 
-  <h2>Water keeps following the same broken paths</h2>
-  <p>Once soil channels collapse or seal, water repeats the same behavior year after year. It runs off, pools, or drains too fast in the same places because nothing reopened those pathways.</p>
-  <p>You notice this as puddles, dry spots, or soggy areas returning even though irrigation hasn’t changed.</p>
+  <h2>Water repeats the same mistakes underground</h2>
+  <p>Once drainage paths seal or collapse, water behavior becomes locked in. Runoff, pooling, or rapid loss happens again because the internal pathways never reopened.</p>
+  <p>The same wet spots and dry zones reappear even when irrigation schedules stay identical.</p>
 
-  <h2>Roots stay shallow when soil never loosens</h2>
-  <p>Roots only grow where soil allows them to. When deeper layers stay dense, roots remain near the surface where conditions are less stable.</p>
-  <p>You notice this as grass that can’t handle heat or foot traffic and fails quickly every summer.</p>
+  <h2>Roots stay trapped near the surface</h2>
+  <p>Roots only expand where soil allows movement. When deeper layers remain dense, rooting stays shallow and exposed to temperature swings and traffic.</p>
+  <p>This leads to grass that looks fine briefly, then collapses under summer heat or normal use.</p>
 
-  <h2>Good structure prevents repeat failure</h2>
-  <p>Soil that balances sand, silt, clay, and organic matter resists collapse and rebuilds after stress. That balance is what allows water and air to keep moving.</p>
-  <p>You notice fewer repeat problems in areas where soil behaves like <a href="/soil-fertilizer/how-loamy-soil-supports-lawns.html">loamy soil that supports lawns</a>.</p>
+  <h2>Balanced soil resists repeat collapse</h2>
+  <p>Soil with functional texture and organic support absorbs stress and rebuilds between seasons. Air and water continue moving even after pressure events.</p>
+  <p>Repeat failure is far less common where soil behaves like <a href="/soil-fertilizer/how-loamy-soil-supports-lawns.html">loamy soil that supports lawns</a>.</p>
 
-  <h2>Some soil damage never fully reverses</h2>
-  <p>Severe compaction, stripped topsoil, or heavy disturbance can leave soil unable to rebuild on its own. In those cases, the same failures return because the soil cannot recover.</p>
-  <p>You notice this as areas that never improve no matter how long you maintain them, which is the difference described in <a href="/soil-fertilizer/when-soil-problems-are-permanent.html">when soil problems are permanent</a>.</p>
+  <h2>Some damage never fully recovers</h2>
+  <p>Severe compaction, missing topsoil, or heavy disturbance can push soil past its ability to self-repair. In those cases, the same breakdown returns because recovery is no longer possible.</p>
+  <p>These areas match the conditions outlined in <a href="/soil-fertilizer/when-soil-problems-are-permanent.html">when soil problems are permanent</a>.</p>
 
-  <h2>Quick fixes treat symptoms, not structure</h2>
-  <p>Fertilizer, reseeding, and extra watering improve appearance temporarily but don’t reopen air space or restore root access.</p>
-  <p>You notice this pattern when improvements fade quickly and the same issues return, which explains <a href="/soil-fertilizer/why-quick-fixes-fail-on-soil.html">why quick fixes fail on soil</a>.</p>
+  <h2>Cosmetic fixes delay the same outcome</h2>
+  <p>Extra fertilizer, reseeding, or heavier watering improve appearance without changing soil behavior. The foundation stays the same.</p>
+  <p>The short-lived improvement followed by familiar failure explains <a href="/soil-fertilizer/why-quick-fixes-fail-on-soil.html">why quick fixes fail on soil</a>.</p>
 
-  <h2>Repeating problems mean the foundation is unchanged</h2>
-  <p>If the same soil failures appear on the same schedule every year, the cause is still present underground.</p>
-  <p>Soil problems come back because the soil never stopped being broken.</p>
+  <h2>Recurring failure means nothing changed underneath</h2>
+  <p>When problems reappear in the same locations year after year, the cause is still present below the surface.</p>
+  <p>Soil problems come back because the structure that created them never recovered.</p>
 </main>
 
 <footer class="site-footer">
