--- a/soil-fertilizer/why-topdressing-helps-lawns.html
+++ b/soil-fertilizer/why-topdressing-helps-lawns.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Topdressing Helps Lawns</title>
-  <meta name="description" content="Topdressing helps lawns by rebuilding soil structure at the surface. When air, water, and roots move better, grass regains strength and stability.">
+  <meta name="description" content="Topdressing helps lawns by restoring usable soil near the surface. When movement returns, roots strengthen and grass stabilizes.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-topdressing-helps-lawns.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Topdressing Helps Lawns">
-  <meta name="twitter:description" content="Topdressing helps lawns by rebuilding soil structure at the surface. When air, water, and roots move better, grass regains strength and stability.">
+  <meta name="twitter:description" content="Topdressing helps lawns by restoring usable soil near the surface. When movement returns, roots strengthen and grass stabilizes.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Topdressing Helps Lawns">
-  <meta property="og:description" content="Topdressing helps lawns by rebuilding soil structure at the surface. When air, water, and roots move better, grass regains strength and stability.">
+  <meta property="og:description" content="Topdressing helps lawns by restoring usable soil near the surface. When movement returns, roots strengthen and grass stabilizes.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-topdressing-helps-lawns.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>Why Topdressing Helps Lawns</h1>
 
-  <h2>Topdressing rebuilds the working layer of soil</h2>
-  <p>Grass relies on the top few inches of soil for oxygen, water, and root growth. Over time, that layer gets compacted, thinned, or sealed. Topdressing adds loose material back into that zone, reopening space for air and moisture to move.</p>
-  <p>You notice this as soil that feels softer underfoot and grass that stops struggling even though nothing else changed.</p>
+  <h2>The surface root zone regains usable space</h2>
+  <p>The upper soil layer controls most root activity. As that zone compacts or seals, roots lose oxygen and water access. Adding loose material restores pore space where roots actually live.</p>
+  <p>The ground feels less rigid, and turf stops declining even before visible growth improves.</p>
 
-  <h2>Added material reduces surface compaction</h2>
-  <p>Compaction happens when pressure squeezes air out of soil. Topdressing absorbs some of that pressure and spreads it out, slowing how fast the surface seals again.</p>
-  <p>You notice this where traffic used to kill grass quickly but now takes much longer to show wear, reversing the same failure described in <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">why weak soil weakens grass</a>.</p>
+  <h2>Pressure spreads instead of sealing the surface</h2>
+  <p>Foot traffic and mowing compress soil by collapsing air pockets. A fresh layer absorbs impact and slows how quickly the surface tightens again.</p>
+  <p>Wear patterns fade in areas that previously failed the way described in <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">why weak soil weakens grass</a>.</p>
 
-  <h2>Water starts soaking in instead of running off</h2>
-  <p>Loose topdressing creates entry points for water. Instead of pooling or running sideways, irrigation begins moving down into the root zone.</p>
-  <p>You notice fewer puddles, less runoff, and more even moisture across the lawn.</p>
+  <h2>Water enters instead of escaping sideways</h2>
+  <p>Loose material creates pathways that let irrigation penetrate rather than shear across the surface.</p>
+  <p>Runoff decreases, puddles shrink, and moisture spreads more evenly after watering.</p>
 
-  <h2>Roots expand into new space before grass thickens</h2>
-  <p>Roots respond first when soil improves. They grow deeper and wider into the added material, increasing the lawn’s ability to handle stress.</p>
-  <p>You notice this as grass that survives heat and mowing better before you see a big increase in thickness.</p>
+  <h2>Roots respond before blades do</h2>
+  <p>Improved soil triggers root expansion first. That added volume increases tolerance to heat, mowing, and short dry periods.</p>
+  <p>Stress resistance improves weeks before the lawn visibly thickens.</p>
 
-  <h2>Healthier soil reduces disease pressure</h2>
-  <p>When soil drains properly and roots stay oxygenated, grass spends less time under stress. That reduces how long leaf surfaces stay wet and weak.</p>
-  <p>You notice fewer recurring disease patches because the soil is no longer creating the conditions described in <a href="/soil-fertilizer/how-soil-health-affects-disease.html">how soil health affects disease</a>.</p>
+  <h2>Drainage improvements reduce disease setup</h2>
+  <p>Better airflow and moisture balance shorten the time grass stays wet and stressed.</p>
+  <p>Recurring disease pressure drops because soil no longer creates the conditions explained in <a href="/soil-fertilizer/how-soil-health-affects-disease.html">how soil health affects disease</a>.</p>
 
-  <h2>Topdressing exposes whether fixes are working</h2>
-  <p>If soil responds, topdressing leads to better water movement and stronger growth within a season. If soil does not respond, problems return quickly.</p>
-  <p>You notice failure when topdressed areas crust over or thin again, matching the warning signs in <a href="/soil-fertilizer/signs-soil-changes-are-failing.html">signs soil changes are failing</a>.</p>
+  <h2>Results reveal whether soil can respond</h2>
+  <p>When structure is recoverable, topdressed areas improve steadily. When deeper layers are broken, gains disappear quickly.</p>
+  <p>Crusting or renewed thinning matches the failure patterns in <a href="/soil-fertilizer/signs-soil-changes-are-failing.html">signs soil changes are failing</a>.</p>
 
-  <h2>Topdressing supports fertilizer instead of replacing it</h2>
-  <p>Fertilizer only works when roots can reach nutrients. Topdressing improves access by fixing the soil pathway rather than adding more inputs.</p>
-  <p>You notice fertilizer starting to “work again” in areas that previously matched <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>.</p>
+  <h2>Fertilizer effectiveness depends on access</h2>
+  <p>Nutrients only help when roots can reach them. Topdressing restores the pathway instead of increasing dosage.</p>
+  <p>Feeding begins producing stable growth again where lawns previously followed <a href="/soil-fertilizer/why-lawns-fail-despite-fertilizer.html">why lawns fail despite fertilizer</a>.</p>
 
-  <h2>Topdressing works because it fixes structure first</h2>
-  <p>Topdressing helps lawns when the problem is shallow and structural. It restores how soil behaves rather than chasing symptoms.</p>
-  <p>When the soil starts working again, the lawn follows.</p>
+  <h2>Topdressing works when the problem is structural</h2>
+  <p>Shallow compaction and surface sealing respond well to added material.</p>
+  <p>When soil behavior improves, grass performance follows naturally.</p>
 </main>
 
 <footer class="site-footer">
