--- a/soil-fertilizer/why-uneven-soil-causes-lawn-problems.html
+++ b/soil-fertilizer/why-uneven-soil-causes-lawn-problems.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Uneven Soil Causes Lawn Problems</title>
-  <meta name="description" content="Uneven soil changes drainage, root depth, and stress patterns. As the ground varies, grass weakens in visible, repeatable ways across the lawn.">
+  <meta name="description" content="Uneven soil alters water flow, rooting depth, and stress distribution. When the ground varies, lawn performance breaks into predictable weak zones.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-uneven-soil-causes-lawn-problems.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Uneven Soil Causes Lawn Problems">
-  <meta name="twitter:description" content="Uneven soil changes drainage, root depth, and stress patterns. As the ground varies, grass weakens in visible, repeatable ways across the lawn.">
+  <meta name="twitter:description" content="Uneven soil alters water flow, rooting depth, and stress distribution. When the ground varies, lawn performance breaks into predictable weak zones.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Uneven Soil Causes Lawn Problems">
-  <meta property="og:description" content="Uneven soil changes drainage, root depth, and stress patterns. As the ground varies, grass weakens in visible, repeatable ways across the lawn.">
+  <meta property="og:description" content="Uneven soil alters water flow, rooting depth, and stress distribution. When the ground varies, lawn performance breaks into predictable weak zones.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-uneven-soil-causes-lawn-problems.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,41 +56,41 @@
 <main class="container">
   <h1>Why Uneven Soil Causes Lawn Problems</h1>
 
-  <h2>Uneven ground creates uneven root depth</h2>
-  <p>Grass roots grow until they hit resistance or run out of space. When soil depth changes across a lawn, some areas give roots room while others cut them short.</p>
-  <p>You notice this as patches that dry out faster, burn quicker in heat, or never thicken like the rest.</p>
+  <h2>Variable depth limits roots unevenly</h2>
+  <p>Roots expand until they encounter dense layers or shallow soil. When depth changes across the lawn, some areas support growth while others restrict it early.</p>
+  <p>Those limits show up as sections that dry faster, scorch under heat, or never fill in despite consistent care.</p>
 
-  <h2>Low spots collect water while high spots shed it</h2>
-  <p>Water follows gravity. Depressions hold moisture longer, while raised areas drain faster and dry sooner.</p>
-  <p>You notice soggy grass, algae, or moss in low areas and stressed, thin grass just a few feet away on higher ground.</p>
+  <h2>Water concentrates instead of spreading</h2>
+  <p>Depressions slow water and hold it in place. Raised sections shed moisture quickly and lose it before roots can use it.</p>
+  <p>The result is saturated turf in low zones and drought stress only a short distance away.</p>
 
-  <h2>Uneven soil changes oxygen availability</h2>
-  <p>Soil that stays wet loses oxygen, while soil that dries too fast collapses air spaces. Both conditions limit root function in different ways.</p>
-  <p>You notice yellowing in wet areas and wilting in dry ones even though irrigation is uniform.</p>
+  <h2>Oxygen availability shifts with elevation</h2>
+  <p>Persistently wet soil pushes oxygen out, while overly dry soil collapses pore space. Uneven ground creates both problems at once.</p>
+  <p>Yellowing appears in damp pockets while nearby turf wilts, even though irrigation coverage never changes.</p>
 
-  <h2>Mowing exposes uneven soil immediately</h2>
-  <p>Blades cut lower on raised areas and higher over depressions. That scalping removes leaf tissue the plant needs to recover.</p>
-  <p>You notice brown streaks after mowing that follow the shape of the ground rather than random patterns.</p>
+  <h2>Mowing magnifies ground irregularities</h2>
+  <p>Blades ride closer to the soil on high spots and float over low areas. That difference removes too much leaf tissue from elevated sections.</p>
+  <p>Scalped streaks follow ridges and contours rather than random lines.</p>
 
-  <h2>Traffic concentrates damage on uneven ground</h2>
-  <p>People and equipment naturally step on the highest, firmest points. That pressure compacts soil faster in those zones.</p>
-  <p>You notice thinning paths and worn ridges that match the same pressure patterns described in <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
+  <h2>Foot traffic targets the firmest points</h2>
+  <p>People and equipment instinctively step where footing feels solid. Those high points receive repeated pressure and compact faster.</p>
+  <p>Wear lines develop along ridges and paths that match the stress patterns in <a href="/soil-fertilizer/how-traffic-affects-soil-health.html">how traffic affects soil health</a>.</p>
 
-  <h2>Uneven soil often comes from disturbed ground</h2>
-  <p>Fill dirt, grading, and buried debris settle at different rates. The soil profile ends up inconsistent from one spot to the next.</p>
-  <p>You notice persistent low areas and weak growth common to lawns affected by <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">new construction soil</a>.</p>
+  <h2>Settlement creates long-term irregularity</h2>
+  <p>Backfill, grading, and buried debris compress unevenly over time. The surface may look finished while the profile underneath continues shifting.</p>
+  <p>Chronic low spots and weak turf are common where lawns share traits with <a href="/soil-fertilizer/why-new-construction-soil-is-bad.html">new construction soil</a>.</p>
 
-  <h2>Fertilizer and water amplify the differences</h2>
-  <p>Inputs spread evenly, but the soil does not respond evenly. Nutrients move faster in some areas and linger in others.</p>
-  <p>You notice uneven color, streaking, and patches that look overfed next to areas that look starved.</p>
+  <h2>Inputs exaggerate the imbalance</h2>
+  <p>Water and fertilizer are applied uniformly, but movement through soil is not. Some zones flush quickly while others accumulate excess.</p>
+  <p>Color bands, streaking, and patchy response appear despite even application.</p>
 
-  <h2>Uneven soil creates repeating failure zones</h2>
-  <p>Once patterns form, stress returns to the same locations because the physical shape of the soil hasn’t changed.</p>
-  <p>You notice the same spots failing every season regardless of care.</p>
+  <h2>Problem areas repeat because shape repeats</h2>
+  <p>As long as the surface remains uneven, stress returns to the same locations. Seasonal conditions simply trigger the same failures again.</p>
+  <p>The pattern stays locked in year after year.</p>
 
-  <h2>Fixing the surface fixes the pattern</h2>
-  <p>Uneven soil causes lawn problems because it creates uneven conditions. Until the ground is corrected, symptoms repeat.</p>
-  <p>When the soil is level, the lawn finally behaves like a single system instead of competing zones.</p>
+  <h2>Leveling removes the trigger</h2>
+  <p>Uneven soil causes lawn problems by creating uneven conditions. Correcting the surface removes the driver behind those differences.</p>
+  <p>Once the ground behaves consistently, the lawn finally does too.</p>
 </main>
 
 <footer class="site-footer">
