--- a/soil-fertilizer/why-weak-soil-weakens-grass.html
+++ b/soil-fertilizer/why-weak-soil-weakens-grass.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Weak Soil Weakens Grass</title>
-  <meta name="description" content="Weak soil limits roots before grass shows stress. When soil can’t move air, water, or nutrients correctly, grass declines in predictable ways.">
+  <meta name="description" content="Weak soil fails underground first. When air, water, and nutrients can’t move correctly through soil, grass loses strength long before color fades.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-weak-soil-weakens-grass.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Weak Soil Weakens Grass">
-  <meta name="twitter:description" content="Weak soil limits roots before grass shows stress. When soil can’t move air, water, or nutrients correctly, grass declines in predictable ways.">
+  <meta name="twitter:description" content="Weak soil fails underground first. When air, water, and nutrients can’t move correctly through soil, grass loses strength long before color fades.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Weak Soil Weakens Grass">
-  <meta property="og:description" content="Weak soil limits roots before grass shows stress. When soil can’t move air, water, or nutrients correctly, grass declines in predictable ways.">
+  <meta property="og:description" content="Weak soil fails underground first. When air, water, and nutrients can’t move correctly through soil, grass loses strength long before color fades.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-weak-soil-weakens-grass.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>Why Weak Soil Weakens Grass</h1>
 
-  <h2>Roots fail before grass looks unhealthy</h2>
-  <p>Grass depends on roots for water, oxygen, and nutrients. Weak soil collapses air space, restricts root movement, and interrupts those supplies.</p>
-  <p>You notice this as grass that looks fine briefly, then suddenly thins, wilts, or stalls without warning.</p>
+  <h2>Root failure starts before visible decline</h2>
+  <p>Grass survives through its roots. When soil collapses pore space or hardens, roots lose oxygen, mobility, and contact with moisture.</p>
+  <p>The lawn may look stable briefly, then thin or wilt suddenly once reserves are exhausted.</p>
 
-  <h2>Weak soil can’t hold water consistently</h2>
-  <p>When soil structure breaks down, water either drains too fast or lingers too long. Roots swing between drought and suffocation.</p>
-  <p>You notice dry stress next to soggy areas even when watering stays the same.</p>
+  <h2>Inconsistent water delivery stresses roots</h2>
+  <p>Broken structure forces water to either drain past roots or sit long enough to displace oxygen.</p>
+  <p>That instability shows up as dry stress next to saturated turf under identical watering.</p>
 
-  <h2>Nutrients move through weak soil instead of staying put</h2>
-  <p>Soil only feeds grass if it can store nutrients long enough for roots to absorb them. Weak soil lets nutrients wash past roots or lock them away.</p>
-  <p>You notice feeding results fading quickly because the process described in <a href="/soil-fertilizer/how-soil-stores-nutrients.html">how soil stores nutrients</a> isn’t working.</p>
+  <h2>Nutrients pass through instead of feeding roots</h2>
+  <p>Soil only nourishes grass when it can retain nutrients within reach of roots. Weak soil either leaches them away or binds them unusably.</p>
+  <p>Feeding fades quickly because the process described in <a href="/soil-fertilizer/how-soil-stores-nutrients.html">how soil stores nutrients</a> never engages.</p>
 
-  <h2>Grass loses strength before color fades</h2>
-  <p>Roots lose oxygen and space first. Leaf color often stays acceptable until stored energy runs out.</p>
-  <p>You notice grass that snaps under foot traffic, pulls up easily, or can’t recover after mowing.</p>
+  <h2>Structural loss reduces physical strength</h2>
+  <p>Without stable soil support, roots anchor poorly. Grass loses tensile strength before color drops.</p>
+  <p>That shows up as turf that snaps under traffic, pulls loose, or fails to recover after mowing.</p>
 
-  <h2>Recovery slows when soil can’t rebuild itself</h2>
-  <p>Healthy soil reshapes and recovers after stress. Weak soil stays compressed and sealed.</p>
-  <p>You notice slow rebound after heat, drought, or wear, matching the timelines described in <a href="/soil-fertilizer/how-long-it-takes-soil-to-recover.html">how long it takes soil to recover</a>.</p>
+  <h2>Compacted soil slows all recovery</h2>
+  <p>Healthy soil rebounds after stress through root growth and biological activity. Weak soil stays sealed.</p>
+  <p>Recovery stretches out beyond normal expectations, matching the delays in <a href="/soil-fertilizer/how-long-it-takes-soil-to-recover.html">how long it takes soil to recover</a>.</p>
 
-  <h2>Soil degradation compounds year after year</h2>
-  <p>Each season adds pressure from traffic, weather, and watering. Weak soil loses structure faster than it can repair.</p>
-  <p>You notice the same areas declining earlier each year, following the pattern in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
+  <h2>Damage compounds across seasons</h2>
+  <p>Traffic, irrigation, and weather apply pressure every year. Weak soil degrades faster than it can rebuild.</p>
+  <p>Problem areas appear earlier and spread wider, following the pattern in <a href="/soil-fertilizer/why-lawn-soil-degrades-over-time.html">why lawn soil degrades over time</a>.</p>
 
-  <h2>Some weak soil can’t support recovery at all</h2>
-  <p>When damage reaches through the full root zone, improvements at the surface no longer reach the problem layer.</p>
-  <p>You notice no lasting improvement despite proper care, signaling the point described in <a href="/soil-fertilizer/when-soil-replacement-makes-sense.html">when soil replacement makes sense</a>.</p>
+  <h2>Some soil can no longer support roots</h2>
+  <p>When collapse extends through the full root zone, surface improvements never reach the failure layer.</p>
+  <p>At that point, repeated effort without progress signals the threshold described in <a href="/soil-fertilizer/when-soil-replacement-makes-sense.html">when soil replacement makes sense</a>.</p>
 
-  <h2>Grass performance is capped by soil strength</h2>
-  <p>Grass can only perform as well as the soil underneath allows. Weak soil sets a low ceiling on density, durability, and recovery.</p>
-  <p>Strength returns only when the soil regains the ability to support roots fully.</p>
+  <h2>Grass strength is limited by soil capacity</h2>
+  <p>Density, durability, and recovery are capped by how well soil supports roots.</p>
+  <p>Grass only regains strength when the soil underneath regains function.</p>
 </main>
 
 <footer class="site-footer">
