--- a/soil-fertilizer/how-soil-settling-affects-grass.html
+++ b/soil-fertilizer/how-soil-settling-affects-grass.html
@@ -56,41 +56,41 @@
 <main class="container">
   <h1>How Soil Settling Affects Grass</h1>
 
-  <h2>Settling reduces the space roots depend on</h2>
-  <p>Soil settles when loose particles collapse under their own weight or repeated moisture cycles. As that happens, the total depth and air space available to roots shrinks.</p>
-  <p>You notice this as grass that used to grow fine but now struggles in the same spots year after year.</p>
+  <h2>Settling reduces the space roots rely on</h2>
+  <p>Soil gradually settles as loose particles collapse under gravity and repeated wet–dry cycles. As this happens, both total depth and internal air space available to roots can shrink.</p>
+  <p>The change often shows up where grass once performed well but now struggles in the same locations season after season.</p>
 
-  <h2>Low spots form where soil compresses unevenly</h2>
-  <p>Settling rarely happens evenly across a lawn. Areas with fill dirt, disturbed ground, or different soil types compress faster than others.</p>
-  <p>You notice shallow depressions that stay wetter, scalp during mowing, or collect debris.</p>
+  <h2>Uneven compression creates low areas</h2>
+  <p>Settling rarely occurs uniformly. Fill dirt, previously disturbed ground, and mixed soil layers tend to compact at different rates.</p>
+  <p>Shallow depressions may appear that stay wetter, scalp more easily during mowing, or trap debris.</p>
 
-  <h2>Water behavior changes as the ground drops</h2>
-  <p>When soil settles, surface slope and drainage paths change. Water follows the new low points and avoids higher, compacted areas.</p>
-  <p>You notice puddling in settled zones and dry stress nearby even with consistent watering.</p>
+  <h2>Drainage patterns shift as soil drops</h2>
+  <p>As the surface settles, slope and drainage paths subtly change. Water begins moving toward new low points while avoiding higher, denser areas.</p>
+  <p>This often results in puddling in settled zones alongside nearby dry stress even when watering practices stay consistent.</p>
 
-  <h2>Roots struggle when oxygen movement slows</h2>
-  <p>As soil tightens, air movement drops. Roots lose oxygen before they lose water, slowing growth and recovery.</p>
-  <p>You notice thinning and slow rebound after mowing that doesn’t improve with feeding.</p>
+  <h2>Tighter soil limits oxygen movement</h2>
+  <p>Compaction associated with settling reduces air exchange within the soil. Roots can lose access to oxygen before moisture becomes limiting, slowing growth and recovery.</p>
+  <p>Thinning turf and slow rebound after mowing commonly follow, even when feeding remains unchanged.</p>
 
-  <h2>Settled soil exaggerates fertilizer problems</h2>
-  <p>Shallow, oxygen-poor roots absorb nutrients unevenly. Fertilizer can concentrate near the surface instead of supporting balanced growth.</p>
-  <p>You notice bright green streaks next to weak patches, or signs that match <a href="/soil-fertilizer/signs-a-lawn-is-overfertilized.html">a lawn being overfertilized</a> even when rates didn’t change.</p>
+  <h2>Shallow roots amplify nutrient issues</h2>
+  <p>In settled soil, roots confined to shallow, low-oxygen zones absorb nutrients unevenly. Under those conditions, fertilizer may concentrate near the surface rather than supporting balanced growth.</p>
+  <p>This can look like bright green streaks next to weak patches, sometimes resembling the symptoms discussed in <a href="/soil-fertilizer/signs-a-lawn-is-overfertilized.html">a lawn being overfertilized</a> despite unchanged rates.</p>
 
-  <h2>Weeds tolerate settled soil better than grass</h2>
-  <p>Many weeds survive compacted, shallow soil because they need less root depth and recover faster from stress.</p>
-  <p>You notice weeds thriving in low, tight areas during summer heat, the same advantage explained in <a href="/weeds-pests/why-weeds-survive-heat.html">why weeds survive heat</a>.</p>
+  <h2>Weeds tolerate settled ground more easily</h2>
+  <p>Many weed species cope better with compacted, shallow soil because they require less rooting depth and recover faster from stress.</p>
+  <p>That advantage becomes visible in low, tight areas during summer heat, similar to the pattern described in <a href="/weeds-pests/why-weeds-survive-heat.html">why weeds survive heat</a>.</p>
 
-  <h2>Color changes don’t always mean nutrition issues</h2>
-  <p>Settling limits root access to water and oxygen, which affects color even when nutrients are present.</p>
-  <p>You notice uneven green-up or fading that mimics nutrient problems tied to <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">how fertilizer affects grass color</a>.</p>
+  <h2>Color shifts don’t always signal nutrient loss</h2>
+  <p>Limited access to oxygen and water can affect color even when nutrients are present in the soil.</p>
+  <p>Uneven green-up or fading may mirror nutrient issues connected to <a href="/soil-fertilizer/how-fertilizer-affects-grass-color.html">how fertilizer affects grass color</a> without being caused by shortages.</p>
 
-  <h2>Soil texture determines how much settling occurs</h2>
-  <p>Fine soils collapse more tightly than coarse soils. Mixed textures settle at different rates, creating uneven structure.</p>
-  <p>You notice patchy performance that lines up with the behaviors described in <a href="/soil-fertilizer/how-soil-texture-affects-lawns.html">how soil texture affects lawns</a>.</p>
+  <h2>Soil makeup influences how much settling occurs</h2>
+  <p>Fine-textured soils tend to collapse more tightly than coarse ones, while mixed textures settle at different speeds.</p>
+  <p>The result is often patchy performance that aligns with the behaviors outlined in <a href="/soil-fertilizer/how-soil-texture-affects-lawns.html">how soil texture affects lawns</a>.</p>
 
-  <h2>Settling weakens lawns gradually, not instantly</h2>
-  <p>Soil settling is slow, and damage accumulates over time. Each season reduces root space a little more.</p>
-  <p>The visible result is a lawn that declines steadily even though maintenance hasn’t changed.</p>
+  <h2>Settling weakens lawns over time</h2>
+  <p>Soil settling is usually gradual rather than sudden. Each season can slightly reduce available root space.</p>
+  <p>Over time, the lawn declines steadily even though routine maintenance appears unchanged.</p>
 </main>
 
 <footer class="site-footer">
