--- a/soil-fertilizer/when-fertilizer-makes-things-worse.html
+++ b/soil-fertilizer/when-fertilizer-makes-things-worse.html
@@ -58,35 +58,35 @@
 
   <h2>Fertilizer increases demand before soil can supply</h2>
   <p>Fertilizer pushes top growth immediately. Leaves demand more water and oxygen the moment nutrients arrive.</p>
-  <p>You notice grass wilting faster, thinning, or collapsing even though it looks greener at first.</p>
+  <p>The result is grass that wilts faster, thins, or collapses even while color briefly improves.</p>
 
   <h2>Weak soil can’t buffer nutrient concentration</h2>
   <p>Healthy soil spreads nutrients through pore space and organic material. Weak soil concentrates salts near roots.</p>
-  <p>You notice burn, edge dieback, or sudden stress instead of steady growth.</p>
+  <p>In those areas, burn, edge dieback, or sudden stress replaces steady growth.</p>
 
   <h2>Roots suffer before leaves show damage</h2>
   <p>Excess nutrients in tight soil pull moisture away from roots and restrict oxygen exchange.</p>
-  <p>You notice grass pulling up easily or losing anchoring strength shortly after feeding.</p>
+  <p>Before leaf damage is obvious, anchoring strength drops and turf can be pulled up more easily.</p>
 
   <h2>Soil structure controls fertilizer behavior</h2>
   <p>Nutrients move through soil exactly as structure allows. Compacted or sealed soil traps fertilizer in damaging zones.</p>
-  <p>You notice uneven response explained by <a href="/soil-fertilizer/how-soil-interacts-with-fertilizer.html">how soil interacts with fertilizer</a>, not application error.</p>
+  <p>This uneven response matches the patterns described in <a href="/soil-fertilizer/how-soil-interacts-with-fertilizer.html">how soil interacts with fertilizer</a>, rather than application error.</p>
 
   <h2>Fertilizer accelerates weak soil failure</h2>
   <p>In already stressed soil, feeding speeds up decline by increasing biological and water demand without increasing capacity.</p>
-  <p>You notice patterns identical to what happens when <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">weak soil weakens grass</a>.</p>
+  <p>What follows mirrors the progression seen when <a href="/soil-fertilizer/why-weak-soil-weakens-grass.html">weak soil weakens grass</a>.</p>
 
   <h2>Organic matter changes the outcome</h2>
   <p>Organic material cushions nutrient release, holds moisture, and protects roots from spikes.</p>
-  <p>You notice fertilizer becoming less risky as soil improves the way described in <a href="/soil-fertilizer/how-organic-matter-improves-soil.html">how organic matter improves soil</a>.</p>
+  <p>As soil shifts toward the conditions outlined in <a href="/soil-fertilizer/how-organic-matter-improves-soil.html">how organic matter improves soil</a>, feeding becomes less volatile.</p>
 
   <h2>More fertilizer doesn’t fix the imbalance</h2>
   <p>Increasing rates magnifies stress when soil can’t regulate movement and exchange.</p>
-  <p>You notice worsening results instead of recovery.</p>
+  <p>Instead of recovery, results trend toward worsening performance.</p>
 
   <h2>Fertilizer works only after soil does</h2>
   <p>Feeding helps only when structure, oxygen, and water movement are already functional.</p>
-  <p>You notice fertilizer helping again once conditions match when <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">soil amendments make sense</a>.</p>
+  <p>Once conditions resemble those described in <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">when soil amendments make sense</a>, fertilizer begins supporting growth again.</p>
 
   <h2>When fertilizer makes things worse, soil is the limit</h2>
   <p>Fertilizer doesn’t cause the problem. It exposes it.</p>
