--- a/tools-safety/common-lawn-tool-mistakes.html
+++ b/tools-safety/common-lawn-tool-mistakes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Common Lawn Tool Mistakes</title>
-  <meta name="description" content="Common lawn tool mistakes damage grass by breaking clean contact, using the wrong settings, and neglecting maintenance between seasons.">
+  <meta name="description" content="Common lawn tool mistakes compound over time, turning routine maintenance into a source of ongoing damage that spreads across the entire lawn.">
   <meta name="author" content="GrizzlyGreens.net">
   <link rel="canonical" href="https://grizzlygreens.net/tools-safety/common-lawn-tool-mistakes.html">
 
@@ -15,7 +15,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Common Lawn Tool Mistakes">
-  <meta name="twitter:description" content="Common lawn tool mistakes damage grass by breaking clean contact, using the wrong settings, and neglecting maintenance between seasons.">
+  <meta name="twitter:description" content="Common lawn tool mistakes compound over time, turning routine maintenance into a source of ongoing damage that spreads across the entire lawn.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -23,7 +23,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Common Lawn Tool Mistakes">
-  <meta property="og:description" content="Common lawn tool mistakes damage grass by breaking clean contact, using the wrong settings, and neglecting maintenance between seasons.">
+  <meta property="og:description" content="Common lawn tool mistakes compound over time, turning routine maintenance into a source of ongoing damage that spreads across the entire lawn.">
   <meta property="og:url" content="https://grizzlygreens.net/tools-safety/common-lawn-tool-mistakes.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -39,7 +39,7 @@
     "@context": "https://schema.org",
     "@type": "Article",
     "headline": "Common Lawn Tool Mistakes",
-    "description": "Common lawn tool mistakes damage grass by breaking clean contact, using the wrong settings, and neglecting maintenance between seasons.",
+    "description": "Common lawn tool mistakes compound over time, turning routine maintenance into a source of ongoing damage that spreads across the entire lawn.",
     "author": {
       "@type": "Organization",
       "name": "GrizzlyGreens.net"
@@ -67,7 +67,7 @@
 </head>
 
 <body>
-<a href="#main-content" class="skip-link">Skip to main content</a>
+
 
 <header class="site-header">
   <nav class="nav" aria-label="Main navigation">
@@ -85,59 +85,70 @@
     <h1>Common Lawn Tool Mistakes</h1>
 
     <section>
-      <h2>Most damage starts with contact, not effort</h2>
-      <p>Most lawn tool mistakes are not about how hard someone works, but how the tool touches the grass. When contact is uneven, too heavy, or poorly timed, the lawn records it as frayed tips, scalped patches, and thinning where work concentrates.</p>
-      <p>The yard looks more tired after maintenance instead of cleaner and more even.</p>
+      <h2>Mistakes compound faster than corrections</h2>
+      <p>Most lawn tool mistakes are not dramatic failures but small errors repeated consistently. Each repetition adds stress that the lawn absorbs and displays as progressive damage.</p>
+      <p>The lawn degrades steadily rather than suddenly.</p>
     </section>
 
     <section>
-      <h2>Ignoring dull mower blades</h2>
-      <p>One of the most common mistakes is mowing with a blade that has lost its edge. Instead of slicing, it crushes and tears the grass, leaving ragged ends that turn brown within days.</p>
-      <p>The lawn looks dull and stressed even after a fresh cut, a pattern explored in <a href="/tools-safety/signs-a-mower-blade-is-dull.html">Signs a Mower Blade Is Dull</a>, where the grass itself shows when the blade has stopped cutting cleanly.</p>
+      <h2>Running blades until performance visibly drops</h2>
+      <p>Waiting for obvious signs of blade dullness means the blade has been tearing grass for weeks. By the time brown tips and ragged cuts become unavoidable, the damage is already widespread.</p>
+      <p>Understanding <a href="/tools-safety/signs-a-mower-blade-is-dull.html">Signs a Mower Blade Is Dull</a> prevents this lag between blade failure and operator response.</p>
     </section>
 
     <section>
-      <h2>Using the wrong cutting height</h2>
-      <p>Another frequent mistake is setting the mower too low or changing height drastically between cuts. Cutting too short exposes the crown and removes too much leaf surface, slowing recovery and inviting weeds.</p>
-      <p>The lawn responds with thin, pale areas and visible soil along high spots or edges where the deck rides closest to the ground.</p>
+      <h2>Storing tools without preparation</h2>
+      <p>Tools left uncleaned and unchecked after the final mowing of the season start the next year already compromised. Blades rust, seals dry out, and parts seize while sitting idle.</p>
+      <p>The first spring mowing reveals what winter did to unprotected equipment, which is why <a href="/tools-safety/why-off-season-care-matters.html">Why Off-Season Care Matters</a> extends beyond simple storage.</p>
     </section>
 
     <section>
-      <h2>Forcing tools that are too heavy</h2>
-      <p>Tools that are heavier than the operator can control turn simple passes into grinding contact. Extra weight digs wheels into soft soil, scalps uneven ground, and makes it harder to keep a steady pace.</p>
-      <p>This is the same mismatch described in <a href="/tools-safety/why-tool-weight-matters.html">Why Tool Weight Matters</a>, where tools that are hard to handle produce a rougher finish no matter how careful the user is.</p>
+      <h2>Using tools that are too heavy or too light</h2>
+      <p>A mower that is too heavy for the operator to control smoothly creates uneven passes and missed spots. A trimmer that is too light vibrates excessively and requires constant pressure to maintain contact.</p>
+      <p>Tool weight affects both the quality of work and the fatigue that builds over a full mowing session, a relationship explored in <a href="/tools-safety/why-tool-weight-matters.html">Why Tool Weight Matters</a>.</p>
     </section>
 
     <section>
-      <h2>Overworking the same areas</h2>
-      <p>Going back over the same strip again and again to “fix” a small flaw is a quiet but common mistake. Each extra pass adds more pressure and friction to the same spot while the rest of the lawn receives normal contact.</p>
-      <p>Over time, these high-attention zones become the thinnest, with visible tracks and weaker grass where effort has piled up.</p>
+      <h2>Mowing wet grass repeatedly</h2>
+      <p>Wet grass clumps under the deck, clogs the discharge chute, and creates uneven cuts that leave visible tracks. The clippings mat down on the surface and block sunlight from reaching the grass beneath.</p>
+      <p>One wet mowing is sometimes unavoidable. Doing it repeatedly turns it into a pattern that stresses the lawn.</p>
     </section>
 
     <section>
-      <h2>Rushing with fast tools</h2>
-      <p>High-speed tools like trimmers and powered mowers multiply mistakes quickly. When the operator moves too fast to see how the grass is reacting, uneven contact repeats across a wide area before anyone notices.</p>
-      <p>The result is a consistent flaw—wavy lines, uneven edges, or streaks of scalped grass—that matches the path and speed of the tool.</p>
+      <h2>Ignoring height adjustment throughout the season</h2>
+      <p>Grass grows at different rates depending on temperature and rainfall. Keeping the same cutting height from April through October means cutting too short during slow growth periods and scalping during rapid growth.</p>
+      <p>Adjusting height by half an inch in either direction prevents most seasonal stress.</p>
     </section>
 
     <section>
-      <h2>Skipping off-season maintenance</h2>
-      <p>Many problems that show up in spring and summer start during the months when tools sit unused. Skipping cleaning, sharpening, and storage checks allows rust, dull edges, and loose parts to build up quietly.</p>
-      <p>The connection is laid out in <a href="/tools-safety/why-off-season-care-matters.html">Why Off-Season Care Matters</a>, where neglected tools come back with baked-in flaws that show up as rough contact on the first pass of the season.</p>
+      <h2>Mowing the same pattern every time</h2>
+      <p>Repeated passes in the same direction compact soil along wheel tracks and create ruts that hold water. Grass in these tracks grows slower and thinner than surrounding areas.</p>
+      <p>Alternating mowing direction each week distributes compaction and prevents permanent tracking.</p>
     </section>
 
     <section>
-      <h2>Using damaged or improvised equipment</h2>
-      <p>Running tools with bent decks, cracked guards, or improvised fixes is another common shortcut. These changes shift how force reaches the grass, even when the operator follows the same routine.</p>
-      <p>The lawn shows this as uneven patterns that repeat in the same place every time the damaged tool is used.</p>
+      <h2>Using dull edgers and trimmers on borders</h2>
+      <p>Dull edging tools tear grass and roots rather than cutting them cleanly. The edges fray and die back, creating a wider and wider border of damaged turf that expands with each use.</p>
+      <p>Sharp edges heal quickly. Torn edges do not.</p>
     </section>
 
     <section>
-      <h2>Assuming effort will hide tool problems</h2>
-      <p>Because yard work is physical, it is easy to confuse exertion with effectiveness. Many common tool mistakes come from trying harder with equipment that is already dull, misaligned, or poorly matched to the user.</p>
-      <p>When more effort produces worse results, the lawn is not failing—it is revealing that the real problem is the tool and how it is contacting the grass.</p>
+      <h2>Forcing tools through thick growth</h2>
+      <p>Pushing a mower harder when it bogs down in tall grass does not improve the cut. It overloads the engine, bends the blade, and tears grass instead of cutting it.</p>
+      <p>Raising the deck and making a second pass at the desired height produces better results with less strain on both tool and operator.</p>
     </section>
 
+    <section>
+      <h2>Neglecting small damage until it spreads</h2>
+      <p>A cracked trimmer head or loose bolt seems insignificant until the vibration it causes creates uneven cuts across the entire property. Small mechanical failures amplify into large functional problems.</p>
+      <p>Addressing damage when it first appears prevents it from becoming a recurring issue.</p>
+    </section>
+
+    <section>
+      <h2>Mistakes reveal themselves through repetition</h2>
+      <p>A single instance of poor technique or neglected maintenance rarely destroys a lawn. The same mistake made every week for an entire season does.</p>
+      <p>The lawn shows what happens when small errors are allowed to accumulate without correction.</p>
+    </section>
   </article>
 </main>
 
